Added new version of instruction files

--- a/Instructions/20533C_LAB_09.md
+++ b/Instructions/20533C_LAB_09.md
@@ -5,9 +5,7 @@
   
  The IT department at A. Datum Corporation currently uses AD DS, and a range of Active Directory-aware applications. While preparing for synchronizing its AD DS to Azure AD, A. Datum wants you to test some of the features of Azure AD. The company wants you to control access to third-party SaaS apps by using Azure AD users and groups. A. Datum also wants you to configure SSO to these apps and protect them by using Multi-Factor Authentication.
 
-In addition to these tasks, A. Datum wants you to evaluate some of the advanced features Azure AD Premium offers. Additionally, it wants you join a Windows 10-based computer to an Azure AD tenant to test the Azure AD functionality and prepare for implementing this configuration on all the Windows 10-based computers in the Research department.
-
- 
+In addition to these tasks, A. Datum wants you to evaluate some of the advanced features Azure AD Premium offers. It also wants you join a Windows 10-based computer to an Azure AD tenant to prepare for implementing this configuration on all the Windows 10-based computers in the Research department.
 
 
 ### Objectives
@@ -29,11 +27,11 @@ In addition to these tasks, A. Datum wants you to evaluate some of the advanced 
   
  Estimated Time: 60 minutes
 
-Virtual Machine:  **20533C-MIA-CL1**
+ Virtual Machine: **20533C-MIA-CL1**
 
- Username:  **Student**
+ Username: **Student**
 
- Password:  **Pa$$w0rd**
+ Password: **Pa55w.rd**
 
  Before you start this lab, ensure that you complete the tasks in the Preparing the environment demonstration, which is in the first lesson of this module. Also ensure that the setup script is complete.
 
@@ -42,7 +40,7 @@ Virtual Machine:  **20533C-MIA-CL1**
   
 ### Scenario
   
- You want to test the functionality of Azure AD by first creating a new Azure directory and enabling the Premium functionality. You then want to create some pilot users and groups in Azure AD. You plan to use both the portal and Microsoft Azure Active Directory Module for Windows PowerShell.
+ You want to test the functionality of Azure AD by first creating a new Azure AD tenant and enabling the Premium functionality. You then want to create some pilot users and groups in Azure AD. You plan to use the Azure portal interface and Microsoft Azure Active Directory Module for Windows PowerShell.
 
 The main tasks for this exercise are as follows:
 
@@ -60,111 +58,117 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Create directories
   
-1. Ensure that the MSL-TMG1 and 20533C-MIA-CL1 virtual machines are both running, and then sign in to 20533C-MIA-CL1 as  **Student** with the password **Pa$$w0rd**.
+1. Ensure that the MSL-TMG1 and 20533C-MIA-CL1 virtual machines are both running, and then sign in to 20533C-MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. In Internet Explorer, browse to  **http://manage.windowsazure.com,** and then sign in to the portal by using the Microsoft account that is associated with your Azure subscription.
+2. Start Internet Explorer, browse to the Azure portal at **http://portal.azure.com** and then, when prompted, and then sign in using the Microsoft account that is the Service Administrator of your subscription.
 
 3. Add a directory by using the following settings:
 
+  - Organization name: **Adatum**
 
-  -  DIRECTORY: **Create new directory**
+  - Initial domain name: _a unique, valid name_
 
-  -  NAME: **Adatum**
+  - Country or region: **United States**
 
-  -  DOMAIN NAME:  **_Use your initials + the_ _directory name + random numbers (e.g. abcadatum123456)_**
-
-  -  COUNTRY OR REGION: **United States**
-
+4. Close Internet Explorer.
 
 
 #### Task 2: Activate Azure AD Premium trial
   
-1. In the navigation pane, select the  **Adatum** directory.
+1. Start Internet Explorer, browse to the Azure classic portal. In the navigation pane, select the **Adatum** directory.
 
-2. In the  **Licenses** tab, enable **Azure AD Premium trial** feature.
+2. From the **LICENSES** tab, enable Azure AD Premium trial.
 
 
 
-#### Task 3: Manage users by using the Azure portal
+#### Task 3: Manage users by using the Azure classic portal
   
-1. Create a user in the Adatum directory by using the following settings:
+1. Create a user in the Adatum directory with the following settings:
 
 
-  -  USER NAME: **rdesforges**
+  - TYPE OF USER: **New user in your organization**
 
-  -  FIRST NAME: **Remi**
+  - USER NAME: **rdesforges**
 
-  -  LAST NAME: **Desforges**
+  - FIRST NAME: **Remi**
 
-  -  DISPLAY NAME: **Remi Desforges**
+  - LAST NAME: **Desforges**
 
-  -  ROLE: **User**
+  - DISPLAY NAME: **Remi Desforges**
 
-  -  Enable Multi-Factor Authentication: **Do not select**
+  - ROLE: **User**
 
-
-1. Note the new password.
-
-2. Create another user in the Adatum directory by using the following settings:
-
-
-  -  USER NAME: **kgruber**
-
-  -  FIRST NAME: **Karen**
-
-  -  LAST NAME: **Gruber**
-
-  -  DISPLAY NAME: **Karen Gruber**
-
-  -  ROLE: **Global Admin**
-
-  - In the  **ALTERNATE EMAIL ADDRESS** box, type the email address of the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription
-
-  -  Enable Multi-Factor Authentication: **Do not select**
+  - Enable Multi-Factor Authentication: _Do not select_
 
 
 1. Note the new password.
 
-2. Sign out of the portal.
+2. Create another user in the Adatum directory with the following settings:
 
-3. Sign in as  **Karen Gruber**, and then change the temporary password to  **Pa$$w0rd123**.
 
+  - TYPE OF USER: **New user in your organization**
+
+  - USER NAME: **kgruber**
+
+  - FIRST NAME: **Karen**
+
+  - LAST NAME: **Gruber**
+
+  - DISPLAY NAME: **Karen Gruber**
+
+  - ROLE: **Global Admin**
+
+  - ALTERNATE EMAIL ADDRESS: _Type the email address of the Microsoft account you used to sign in to the Azure classic portal_.
+
+  - Enable Multi-Factor Authentication: _Do not select_
+
+1. Note the new password.
+
+2. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Remi Desforges, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
+
+3. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Karen Gruber, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
 
 
 #### Task 4: Manage groups by using the Azure portal
   
-1. Browse to  **https://manage.windowsazure.com**, and sign in by using the Microsoft account that is associated with your Azure subscription.
+1. From the Azure classic portal, assign an Azure Active Directory Premium P2 license to your user account.
 
-2. Select the  **Adatum** directory, and then click **Configure**.
+2. In the Azure classic portal, navigate to the **CONFIGURE** page of the **adatum** Azure AD tenant.
 
-3. Enable  **Delegated Group Management Enabled**.
+3. From the **CONFIGURE** tab, switch the **Delegated Group Management Enabled** setting to **YES**.
 
 4. Create the following group in the Adatum directory:
 
 
-  -  NAME: **Sales**
+  - NAME: **Sales**
 
-  -  DESCRIPTION: **Sales team**
+  - GROUP TYPE: **Security**
 
-
-1. Add  **Remi Desforges** to the **Sales** group.
-
-2. Create the following group in the Adatum directory:
+  - DESCRIPTION: **Sales employees**
 
 
-  -  NAME: **Marketing**
-
-  -  DESCRIPTION: **Marketing employees**
-
-
-1. Add  **Remi Desforges** to the **Marketing** group.
+1. Add **Remi Desforges** to the **Sales** group.
 
 2. Create the following group in the Adatum directory:
 
 
-  -  NAME: **Sales and Marketing**
+  - NAME: **Marketing**
 
-  -  DESCRIPTION: **Sales and Marketing employees**
+  - GROUP TYPE: **Security**
+
+  - DESCRIPTION: **Marketing employees**
+
+
+1. Add **Remi Desforges** to the **Marketing** group.
+
+2. Create the following group in the Adatum directory:
+
+
+  - NAME: **Sales and Marketing**
+
+  - GROUP TYPE: **Security**
+
+  - DESCRIPTION: **Sales and Marketing employees**
 
 
 1. Add the **Sales** and **Marketing** groups to the **Sales and Marketing** group.
@@ -173,9 +177,9 @@ The main tasks for this exercise are as follows:
 
 #### Task 5: Manage users and groups by using Azure PowerShell
   
-1. Start  **Windows PowerShell ISE** as an administrator.
+1. Start **Windows PowerShell** ISE as an administrator.
 
-2. Open  **D:\Labfiles\Lab09\Starter\ExampleCommands.ps1**.
+2. Open **D:\Labfiles\Lab09\Starter\Set-AzureAD20553C09Lab.ps1**.
 
 3. In the PowerShell ISE, in the command prompt pane, enter the following command, and then press Enter:
 
@@ -183,17 +187,17 @@ The main tasks for this exercise are as follows:
   Connect-MsolService
   ```
 
-4. Sign in as  **Karen Gruber**.
+4. When prompted, sign in as **Karen Gruber**.
 
 5. In the PowerShell ISE, in the script pane, locate the following code:
 
   ```
-  New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory name here#>.onmicrosoft.com  -DisplayName "Mario Ledford" -FirstName "Mario" -LastName "Ledford" -Password 'Pa$$w0rd123' -ForceChangePassword $false -UsageLocation "US"
+  New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com  -DisplayName "Mario Ledford" -FirstName "Mario" -LastName "Ledford" -Password 'Pa55w.rd123' -ForceChangePassword $false -UsageLocation "US"
   ```
 
-6. Replace  **<#Copy your Azure Directory name here#>** with your Azure AD directory name. In the Windows PowerShell ISE, in the script pane, select the code that you just edited. On the toolbar, click the **Run Selection** button and wait for the script to complete.
+6. Replace **&lt;#Copy your Azure Directory domain name here#&gt;** with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant. In the Windows PowerShell ISE, in the script pane, select the code that you just edited. On the toolbar, click the **Run Selection** button and wait for the script to complete.
 
-7. In the PowerShell ISE, in the command prompt pane, enter the following command, and then press Enter to list all the users:
+7. In the PowerShell ISE, in the command prompt pane, run the following command to list all the users:
 
   ```
   Get-MsolUser
@@ -217,7 +221,7 @@ The main tasks for this exercise are as follows:
   $group = Get-MsolGroup | Where-Object {$_.DisplayName -eq "Azure team"}
   ```
 
-11. On the toolbar, click the  **Run Selection** button and wait for the script to complete.
+11. On the toolbar, click the **Run Selection** button and wait for the script to complete.
 
 12. In the PowerShell ISE, in the Script pane, locate the following code and select it:
 
@@ -225,7 +229,7 @@ The main tasks for this exercise are as follows:
   $user = Get-MsolUser | Where-Object {$_.DisplayName -eq "Mario Ledford"}
   ```
 
-13. On the toolbar, click the  **Run Selection** button, and wait for the script to complete.
+13. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
 14. In the PowerShell ISE, in the Script pane, locate the following code and select it:
 
@@ -233,7 +237,7 @@ The main tasks for this exercise are as follows:
   Add-MsolGroupMember -GroupObjectId $group.ObjectId -GroupMemberType "User" -GroupMemberObjectId $user.ObjectId
   ```
 
-15. On the toolbar, click the  **Run Selection** button, and wait for the script to complete.
+15. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
 16. In the PowerShell ISE, in the script pane, locate the following code and select it:
 
@@ -241,15 +245,16 @@ The main tasks for this exercise are as follows:
   Get-MsolGroupMember -GroupObjectId $group.ObjectId
   ```
 
-17. On the toolbar, click the  **Run Selection** button, and wait for the script to complete.
+17. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
-18. Switch to Internet Explorer.
+18. Switch to Internet Explorer displaying the Azure classic portal.
 
-19. Click  **USERS**, and verify that  **Mario Ledford** appears in the list of users.
+19. From the **adatum** page, verify that **Mario Ledford** appears in the list of users.
 
-20. Click  **GROUPS**, and verify that  **Azure team** appears in the list of groups.
+20. From the **adatum** page, verify that **Azure team** appears in the list of groups.
 
->  **Result**: After completing this exercise, you should have created some pilot users and groups in Azure AD by using the Azure portal and Microsoft Azure Active Directory Module for Windows PowerShell. You will also enable the Azure AD Premium functionality.
+
+> **Result**: After completing this exercise, you should have created some pilot users and groups in Azure AD by using the Azure portal and Microsoft Azure Active Directory Module for Windows PowerShell. You will also enable the Azure AD Premium functionality.
 
 
 ## Exercise 2: Configuring SSO
@@ -265,60 +270,49 @@ The main tasks for this exercise are as follows:
 2. Test SSO
 
 
+
 #### Task 1: Add directory applications and configure SSO
   
-1. In the  **Adatum** directory, create the following application from the gallery:
+1. In the **Adatum** directory, add the **Microsoft Account (Windows Live)** application from the gallery:
 
-  -  **Microsoft Account (Windows Live)**
+2. Verify that **Configure single sign-on** is enabled by default.
 
-2. Verify that  **Configure single sign-on** is enabled by default.
-
-3. Assign the application to the following user:
-
-  -  **Mario Ledford**
+3. Assign the application to **Mario Ledford**.
 
 4. Select the option that allows you to enter the Microsoft account credentials on behalf of the user.
 
-5. In the  **Email Address** box, type the email address of the Microsoft account associated with your Azure subscription. In the **Password** box, type the corresponding password, and then click the check mark.
+5. In the **Email Address** box, type the name of your Microsoft account you are using for this lab. In the **Password** box, type the corresponding password, and then click the check mark.
 
-6. In the  **Adatum** directory, create the following application from the gallery:
+6. In the **Adatum** directory, add the **Skype** application from the gallery:
 
-  -  **Skype**
+7. Verify that **Configure single sign-on** is enabled by default.
 
-7. Verify that  **Configure single sign-on** is enabled by default.
+8. Assign the application to **Mario Ledford**
 
-8. Assign the application to the following user:
+9. In the **Assign User** dialog box, do not enter the Microsoft Account credentials on behalf of the user.
 
-  -  **Mario Ledford**
-
-9. In the  **Assign User** dialog box, do not enter the Microsoft Account credentials on behalf of the user.
 
 
 #### Task 2: Test SSO
   
-1. Go to  **https://account.activedirectory.windowsazure.com/applications**, and sign in by using the following credentials (where  **_XXXadatumXXX_** is your unique Adatum domain name):
+1. Open an Internet Explorer window and browse to **https://myapps.microsoft.com. When prompted, sign in by using specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password. 
 
-  - Username:  **mledford@XXXadatumXXX.onmicrosoft.com**
+2. On the applications page, click the ellipsis next to **Skype**. Note the option to update the credentials. 
 
-  - Password:  **Pa$$w0rd123**
+3. On the applications page, click the ellipsis next to **Microsoft Account**. Note that there is no option to update the credentials.
 
-2. On the applications page, note the options to update the credentials and report a problem about the Microsoft account. 
+4. Click **Skype** and, when prompted, install the Access Panel Extension with the default settings and enable the extension once the installation completes.
 
-3. Run the Microsoft Account application, and complete the Access Panel Extension Setup Wizard.
+5. Restart Internet Explorer and browse to **https://myapps.microsoft.com. When prompted, sign in as Mario Ledford.
 
-4. Go to  **https://account.activedirectory.windowsazure.com/applications**, and sign in by using the following credentials (where  **_XXXadatumXXX_** is your unique Adatum domain name):
+6. From the Application Access Panel, start **Skype**. Note that you are now prompted for credentials, because you did not enter any credentials on behalf of the user when configuring SSO. 
 
-  - Username:  **mledford@XXXadatumXXX.onmicrosoft.com**
+7. Click **Cancel** in the **Skype** dialog box.
 
-  - Password:  **Pa$$w0rd123**
+8. Sign out from the Application Access Panel and close Internet Explorer.
 
-5. Click  **Microsoft Account**, enter the credentials for your subscription account, and verify that your sign-in to the Access Panel has automatically signed you in to your Microsoft account.
 
->  **Note:** If you are prompted to sign in again, use the credentials for your subscription account.
-
-6. Click  **Skype**, and then verify that you are prompted for credentials. This happens because you did not enter any credentials on behalf of the user when you configured SSO.
-
->  **Result**: After completing this exercise, you should have installed and configured a test application and validated the SSO experience.
+> **Result**: After completing this exercise, you should have installed and configured a test application and validated the SSO experience.
 
 
 ## Exercise 3: Configuring Multi-Factor Authentication
@@ -337,30 +331,26 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Configure Multi-Factor Authentication
   
-1. Sign in to the Azure portal by using your Azure subscription.
+1. Start Internet Exploer and sign in to the Azure portal by using the Microsoft account that is the Service Administrator of your subscription.
 
-2. Configure the  **Adatum** directory to enable Multi-Factor Authentication for **Karen Gruber**.
+2. Enable Multi-Factor Authentication for the Adatum Azure AD user account of **Karen Gruber**.
 
+3. Close Internet Explorer.
 
 
 #### Task 2: Test Multi-Factor Authentication
   
-1. Go to  **https://account.activedirectory.windowsazure.com/applications**, and sign in by using the following credentials (where  **_XXXadatumXXX_** is your unique Adatum domain name):
+1. Open Internet explorer, browse to **https://myapps.microsoft.com**, and sign in as Karen Gruber. You will be presented with the message stating _Your admin has required that you set up this account for additional security verification_.
 
-  - Username:  **kgruber@XXXadatumXXX.onmicrosoft.com**
+2. Click **Set it up now**.
 
-  - Password:  **Pa$$w0rd123**
+3. On the **Additional security verification** page, in the first drop-down list, note the contact options.
 
-2. Note the following message:  **Your admin has required that you set up this account for additional security verification**.
+4. Optional step: If you have access to a mobile phone in the classroom and have a signal or data connection, you can complete the additional security verification steps on the **Additional security verification** page.
 
-3. Click  **Set it up now**.
+5. Close Internet Explorer
 
-4. On the  **additional** **security** **verification** page, note the contact method options.
-
-5. Optional step: If you have access to a mobile phone in the classroom, and have a signal or data connection, you can complete the additional security verification steps on the  **additional** **security** **verification** page.
-
-
->  **Result**: After completing this exercise, you should have configured Multi-Factor Authentication for administrators.
+> **Result**: After completing this exercise, you should have configured Multi-Factor Authentication for a Global Admin account.
 
 
 ## Exercise 4: Configuring SSO from a Windows 10-based computer that is joined to Azure AD
@@ -381,61 +371,57 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Join a Windows 10-based computer to Azure AD
   
-1. Sign in to the Azure portal by using your Azure subscription.
+1. Open Internet Explore and sign in to the Azure portal by using your Azure subscription.
 
-2. On MIA-CL1, click  **Settings**, click  **Accounts**, and then join MIA-CL1 into Azure AD by using the following credentials:
+2. Verify that the **Adatum** directory allows all users to join their devices to Azure AD.
 
-  - Username:  **kgruber@XXXadatumXXX.onmicrosoft.com**
+3. On MIA-CL1, click **Settings**, click **Accounts**, and then join MIA-CL1 into Azure AD by using the Adatum Azure AD credentials of Karen Gruber.
 
-  - Password:  **Pa$$w0rd123**
+4. Verify that **MIA-CL1** is shown on the **DEVICES** tab of the **Karen Gruber** user account.
 
-3. Verify that  **MIA-CL1** is shown in the **Device** tab of the **Karen Gruber** user account.
-
+5. Restart **MIA-CL1**.
 
 
 #### Task 2: Authenticate to Azure from a Windows 10 Azure-joined computer
   
-1. Sign in to MIA-CL1 with Karen Gruber's credentials:
+1. Sign in to MIA-CL1 by using the Karen Gruber's Adatum Azure AD account and **Pa55w.rd** as its password.
 
-  - Username:  **kgruber@XXXadatumXXX.onmicrosoft.com**
+2. Accept the incoming call and press # key on your phone to complete verification.
 
-  - Password:  **Pa$$w0rd123**
+3. Set up a PIN but do not wait until its fully provisioned.
 
-2. Provide a verification method.
-
-3. Create a PIN.
-
-4. Start Internet Explorer, and then go to  **https://portal.office.com**.
+4. Start Internet Explorer, and then go to **https://portal.azure.com**.
 
 5. Verify that you are automatically signed in as Karen Gruber by using SSO.
 
+6. Sign out from MIA-CL1
 
 
 #### Task 3: Reset the environment
   
-1. Close all open applications without saving any files.
+1. Sign in to MIA-CL1 by using the **Student** account and the **Pa55w.rd** password.
 
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run as administrator**. 
+2. On the taskbar, right-click **Windows PowerShell**, and then click **Run as administrator**. 
 
-3. In the  **User Account Control** dialog box, click **Yes**.
+3. In the **User Account Control** dialog box, click **Yes**.
 
-4. In the PowerShell ISE, in the command prompt pane, enter the following command, and then press Enter:
+4. In the PowerShell ISE, from the console pane, run the following command:
 
   ```
   Reset-Azure
   ```
 
-5. You will be prompted to sign in twice. Sign in by using the Microsoft account associated with your Azure subscription.
+5. When prompted (twice), sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your subscription.
 
-6. If you have multiple Azure subscriptions, select the one you want the script to target.
+6. If you have multiple Azure subscriptions, select the one you want the deprovisioning script to target.
 
-7. When prompted for confirmation, type  **y.**
+7. When prompted for confirmation, type **y.**
 
->  **Note:** This script removes Azure services in your subscription. Therefore, we recommend that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
+> **Note:** This script removes Azure services in your subscription. Therefore, we recommend that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
 > The script resets your Azure environment so that it is ready for the next lab. 
 > The script removes all storage accounts, virtual machines, virtual networks, cloud services, and resource groups containing these resources.
 
->  **Result**: After completing this exercise, you should have joined the Mia-CL1 computer to Azure AD and tested the SSO access to the resources in the cloud.
+> **Result**: After completing this exercise, you should have joined the MIA-CL1 computer to Azure AD and tested the SSO access to the resources in the cloud.
 
 
 
