--- a/Instructions/20533C_LAB_AK_01.md
+++ b/Instructions/20533C_LAB_AK_01.md
@@ -5,288 +5,241 @@
   
 #### Task 1: Use the Azure classic portal
   
-1. Ensure that you are signed in to the 20533C-MIA-CL1 virtual machine as  **Student** with the password **Pa$$w0rd**. You should have already run the preparation script in the "Preparing the environment" demonstration at the beginning of the module.
+1. Sign in to the MIA-CL1 lab virtual machine as **Student** with the password **Pa55w.rd**.
 
-2. On the taskbar, click the  **Internet Explorer** shortcut.
+2. Start Internet Explorer, browse to **https://manage.windowsazure.com**, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. In Internet Explorer, in the address bar, type  **https://manage.windowsazure.com**, and then press Enter.
+3. On the Azure classic portal page, in the navigation bar on the left hand side, scroll down, and then click **SETTINGS**.
 
-4. On the Microsoft Azure sign in page, enter the email address with which your Azure account is associated, and then click  **Continue**.
+4. On the settings page, click **ADMINISTRATORS**, and then at the bottom of the pane, click **ADD**.
 
-5. On the Sign in page, type the email address and password you set up for this course, and then click  **Sign in**.
+5. In the **EMAIL ADDRESS** box, type a valid Microsoft account, select the check box next to your subscription name, and then click the check mark icon.
 
-6. On the Azure classic portal page, in the navigation bar, click  **ACTIVE DIRECTORY**.
+6. On the Azure classic portal page, in the navigation bar, click **ACTIVE DIRECTORY**.
 
-7. On the  **Let's talk about Azure AD** page, deselect all checkboxes and then click the checkmark at the bottom of the page.
+7. In the active directory pane, click **Default Directory**. This is the default Azure Active Directory (Azure AD) instance for your subscription
 
-8. In the  **active** **directory** pane, click **Default Directory**. This is the default Azure Active Directory (Azure AD) instance for your subscription.
+8. If prompted, on the **Let’s talk about Azure AD** page, deselect all checkboxes and then click the checkmark at the bottom of the page.
 
-9. Click **Users**
+9. On the **default directory** page, click **USERS**. Note the two accounts that are listed: your account and the co-administrator account you created earlier.
 
-10. Click **Add User** at the bottom of the page.
-
-11. Verify **Type of User** is New user in your Organization.
-
-12. In the **User Name** field, enter **Coadmin**, and then advance the wizard by selecting the arrow at the bottom right.
-
-13. In the **User Profile** page, enter the following, then advance the wizard
-    First Name: **Chad**
-    Last Name:  **Sutton**
-    Display Name: **Chad Sutton**
-    Role: **Global Admin**
-    Alternate Eamil Address: **user@alt.none**
-    Multi Factor Authentication: **Unchecked**
-
-14. On the **Get temporary password** page, click **create**
-
-15. Write down both the users UPN and temporary password.
- 
-16. Click the checkmark on the bottom right to close the wizard.
-
-17. On the Azure classic portal page, in the navigation bar, scroll down, and then click  **SETTINGS**.
-
-18. On the  **settings** page, click **ADMINISTRATORS**, and then at the bottom of the pane, click  **ADD**.
-
-19. In the  **EMAIL ADDRESS** box, type the UPN of the user from step 14 above, select the check box to select the free trial subscription, and then click the check mark icon.
->  **Note:** Observe that the email address you typed is now listed as the co-administrator. An email containing an invitation to act as co-administrator has been sent to this email address.
-
-20. On the Azure classic portal page, in the navigation bar, click  **ACTIVE DIRECTORY**.
-
-21. In the  **active** **directory** pane, click **Default Directory**. This is the default Azure Active Directory (Azure AD) instance for your subscription.
-
-22. On the  **Default Directory** page, click **USERS**. Note the two accounts that are listed: your account and the co-administrator account you created earlier.
-
-23. On the  **Default Directory** page, click **DOMAINS**. Note the name of the default domain for your subscription displayed in the Default Directory pane.
-
-
+10. On the **default directory** page, click **DOMAINS**. Note the name of the default domain for your subscription displayed on the **default directory** page.
 
 #### Task 2: Use the Azure portal
+
+1. In Internet Explorer, in the Azure classic portal, at the top of the screen, click **Check out the new portal**, and then click **Launch**. If you do not have the Azure classic portal open, go to **https://portal.azure.com**.
+
+2. On the **Dashboard** page, at the top of the screen, click **Edit dashboard**.
+
+3. On the **Dashboard** page, on the **All resources** tile, click the **ellipses (…)**, and then click **4x6**.
+
+4. On the **Dashboard** page, on the **Service health** tile, click the **ellipses (…)**, and then click **4x4**.
+
+5. Drag the **Service health** tile up to the top of the dashboard until its top edge aligns with the top edge of the **All resources** tile.
+
+5. On the **Dashboard** page, at the top of the screen, click **Done customizing**.
+
+6. On the **Dashboard** page, on the **Hub** menu, click **More services**, and then click the star beside **Virtual machine scale sets**
+
+#### Task 3: Use the Azure account portal
   
-1. In Internet Explorer, on the Azure classic portal page, at the top of the screen, click  **Check out the new portal**, and then click  **Launch**. If you do not have the Azure classic portal open, go to  **https://portal.azure.com.**
+1. Start Internet Explorer, browse to **https://account.windowsazure.com**
 
-2. On the  **Dashboard** page, at the top of the screen, click **Edit dashboard**.
+2. On the Account page, click **SIGN IN** and, if prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. On the  **Dashboard** page, on the **All resources** tile, click the ellipses ( **...**), and then click  **4x6**.
+3. On the Account portal page, on the **subscriptions** tab, click the name of your subscription. 
 
-4. On the  **Dashboard** page, on the **Service health** tile, click the ellipses ( **...**), and then click  **2x4**.
+4. On the summary page, review the billing summary for your subscription on the page.
 
-5. On the  **Dashboard** page, at the top of the screen, click **Done customizing**.
+5. On the summary page, on the right side of the screen, click **Download usage details**.
 
-6. On the  **Dashboard** page, on the Hub menu, click **More services**, and then click the star beside  **Storage accounts**. 
+6. Click **Download Usage** and then click **Version 2 - Preview**.
 
+7. In Internet Explorer, when prompted whether to open or save the .csv file, click Open.
 
+8. When prompted **How do you want to open this file?**, click **Notepad** and then click **OK**.
 
-#### Task 3: Use the account page of the Azure portal
-  
-1. In Internet Explorer, in the address bar, type  **https://account.windowsazure.com**, and then press Enter.
+9. View the contents of the file in Notepad. Note that this is intended to simply review its content – typically to analyze it in more details, you would use Microsoft Excel or other program capable of parsing csv files. The file might not include any data at this point if you have not yet deployed any resources into your subscription.
 
-2. On the  **Account** page, click **SIGN IN**.
+10. Close Notepad.
 
-3. On the Sign in page, type the email address and password you set up for this course, and then click  **Sign in**.
-
-4. On the  **Account portal** page, click **subscriptions**.
-
-5. On the  **subscriptions** page, click the subscription you are using for this course. View the billing summary for your subscription on the page.
-
-6. On the  **subscriptions** page, on the right side of the screen, click **Download usage details.**
-
-7. On the  **Summary for Azure Pass** page, click **Download Usage**, and then click  **Version 1**.
-
-8. In Internet Explorer, when prompted whether to open or save the .csv file, click  **Open**.
-
-9. When prompted,  **How do you want to open this file?** Click **Notepad** and then click **OK**.
-
-10. View the contents of the file in Notepad. Note that this is intended to simply review its content - typically to analyze it in more details, you would use Microsoft Excel or other program capable of parsing csv files.
-
-11. Close Notepad.
-
-12. On the  **Account portal** page, click **Preview features**.
-
-13. On the  **Preview features** page, find a preview feature and click **try it now**.
-
-14. In the Add Preview Feature window, click the check mark to approve the preview feature. After the window closes, note the status of the feature ( **You are queued**).
-
-
->  **Result**: After completing this exercise, you will have used the Azure portals.
+>  **Result**: After completing this exercise, you should have used the Azure portals.
 
 
 ## Exercise 2: Using the Azure Resource Manager features in the Azure portal
   
 #### Task 1: Create and manage a resource group
-  
-1. In Internet Explorer, in the address bar, type  **https://portal.azure.com**, and then press Enter.
 
-2. In the Azure portal, click  **Resource groups**.
+1. In Internet Explorer, browse to **https://portal.azure.com**. If prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
 
-3. On the Resource groups blade, click  **Add**.
+2. In the Azure portal, in the hub menu on the left hand side, click **Resource groups**.
 
-4. On the Resource groups blade, type the following values, and then click  **Create**:
+3. On the Resource groups blade, click **Add**.
 
+4. On the Resource groups blade, type the following values, and then click **Create**:
 
-  - Resource group name:  **TestRG1**
+  - Resource group name: **20533C0101-LabRG**
 
-  - Subscription: leave as the default
+  - Subscription: the name of your Azure subscription
 
-  - Resource group location:  _your preferred location_
-
-
+  - Resource group location: the Azure region closest to your location
 
 #### Task 2: Create Azure resources
-  
-1. On the Azure portal page, click  **New**, click  **Storage**, and then click  **Storage account**.
 
-2. On the Create storage account blade, in the  **Name** box, type a unique name for the storage account you are creating. You can use the current date and your initials to create a unique value in the format **storage**_MMDDYYYYab._
->  **Note:** For example, a student named Ed Meadows might use **storage04252016em**.
-> All alphabetical characters must be lowercase.
-3. In the  **Resource Group** section, click the dropdown box, and then click **TestRG1**.
+1. In the Azure portal, click **New**, click **Networking**, and then click **Route table**.
 
-4. In the  **Location** list, select the location you have been using for the course, and then click **Create**. Note the progress of the storage account creation on the dashboard. Wait until the creation is complete before moving to the next task.
+2. On the **Route table** blade, specify the following settings and click **Create**:
 
+  - Name: **AdatumRT01**
+
+  - Subscription: the same Azure subscription in which you created the resource group
+
+  - Resource group name: click **Use existing** and select **20533C0101-LabRG** from the drop-down list
+
+  - Resource group location: this entry will be automatically populated once you select the resource group name
 
 
 #### Task 3: Configure tagging
-  
-1. In the Azure portal, on the Hub menu, click  **Resource groups**.
 
-2. On the Resource groups blade, click  **TestRG1**, and then in the TestRG1 blade, click  **Tags.**
+1. In the Azure portal, on the hub menu, click **Resource groups**.
 
-3. On the Tags blade, in the  **Key** box, type **project**, and then in the  **Value** box, type **Test.** Click **Save**.
+2. On the Resource groups blade, click **20533C0101-LabRG**, and then, on the resource group blade, click **Tags**.
 
-4. On the TestRG1 blade, click  **storage**_DDMMYYYYab_, and then in the upper-right area of the storage _DDMMYYYYab_ pane, click the **Tags** icon.
+3. On the Tags blade, in the **Key** box, type **project**, and then in the **Value** box, type **test**. Click **Save**.
 
-5. In the Tags pane, in the  **Key** box, type **project**. In the  **Value** box, type **Test**. Click  **Save**.
+4. On the resource group blade, click the Route table resource you created in the previous task.
 
-6. In the Tags pane, click the ellipses ( **...**) next to  **project:** **Test**, and then click  **Pin to dashboard**.
+5. On the AdatumRT01 blade, click **Tags**. 
 
-7. On the Azure portal page, in the upper left, click  **Microsoft Azure** to go to the **Dashboard** page.
+6. On the AdatumRT01 tags blade, in the **Key** text box, select **project** from the drop-down list, and then in the **Value** drop-down list, select **test**. Click **Save**.
 
-8. On the  **Dashboard** page, click the **project:Test** tile. View the resources associated with this tag.
+7. In the hub menu, click **More services** and, in the list of services, click **Tags**
 
+8. On the **tags** blade, click **project : test**. This will display the **project : test** blade showing both the resource group and the route table resource you created.
 
+9. click the ellipses **(…)** next to **project : test**, and then click **Pin to dashboard**.
+
+10. In the Azure portal, in the upper left corner, click **Microsoft Azure** to display **Dashboard**.
+
+11. On the Dashboard, click the **project : test** tile. View again the resources associated with this tag.
 
 #### Task 4: Configure RBAC
   
-1. On the Azure portal page, in the upper left, click  **Microsoft Azure** to go to the **Dashboard** page.
+1. In the Azure portal, in the hub menu, click the cube icon representing resource groups.
 
-2. On the  **Hub** menu, click **Resource groups**, and then click  **TestRG1**.
+2. On the **Resource group** blade, click **20533C0101-LabRG**.
 
-3. On the TestRG1 blade, click  **Access control (IAM)**.
+3. On the 20533C0101-LabRG resource group blade, click **Access control (IAM)**.
 
-4. On the Users blade, click  **Roles**, and then on the Roles pane, click  **Storage Account Contributor**.
+4. On the access control (IAM) blade of the resource group, click **Add**.
 
-5. In the Storage Account Contributor blade, click  **Add**, and then in the Add users blade, click the user you added earlier in the lab. Click  **Select**.
+5. On the **Select a role** blade, click **Owner**.
 
-6. Scroll to the Users blade, and then note that the user has been added to the user list as a Storage Account Contributor.
+6. On the **Add users** blade, click the name of the user you added earlier as a Co-Administrators of your subscription and click **Select**.
 
+7. Click **OK**.
 
->  **Result**: After completing this exercise, you will have used the Azure Resource Manager features in the Azure portal.
+8. Scroll back to the access control (IAM) blade of the resource group and note that the user has been added to the user list as the owner.
+
+9. Start Internet Explorer, browse to **https://manage.windowsazure.com**, and, if prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+
+10. On the Azure classic portal page, in the navigation bar, scroll down, and then click **SETTINGS**.
+
+11. On the settings page, click **ADMINISTRATORS**.
+
+12. Click the Microsoft account you added in the first exercise of this lab as a Co-Administrator and then, at the bottom of the pane, click **REMOVE**.
+
+13. When prompted to confirm, click **YES** 
+
+>  Note that in this particular case, the account you are using is already a co-administrator, which is not a subject to RBAC. Revoking the Co-Administrator privileges from the account will allow for RBAC to take effect. Revoking the Co-Administrator privileges does not remove the account from the Azure AD tenant associated with your subscription.
+
+>  **Result**: After completing this exercise, you should have used the Azure Resource Manager features in the Azure portal.
 
 
 ## Exercise 3: Using Azure PowerShell
   
 #### Task 1: Connect Azure PowerShell to your Azure subscription
   
-1. On MIA-CL1, on the taskbar, click  **Start**, type  **ISE**, and then click  **Windows PowerShell ISE**.
+1. On MIA-CL1, right-click the Windows PowerShell icon and then click **Run ISE as Administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
-2. In the Windows PowerShell Integrated Scripting Environment (ISE), at the command prompt, type the following command, and then press Enter:
-
+2. In the Windows PowerShell Integrated Scripting Environment (ISE), in the console pane, type the following cmdlet and then press Enter:
   ```
-  Login-AzureRMAccount
+Login-AzureRmAccount
   ```
 
-3. In the sign-in windows that appears, sign in to your Azure account.
+3. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
 
-4. In the Windows PowerShell ISE window, at the command prompt, type the following cmdlet, and then press Enter:
-
+4. In the Windows PowerShell ISE window, in the console pane, type the following cmdlet and then press Enter:
   ```
   Get-AzureRmSubscription
   ```
 
-5. In the Windows PowerShell ISE window, at the command prompt, type the following cmdlet, and then press Enter:
-
+5. In the Windows PowerShell ISE window, in the console pane, type the following cmdlet and then press Enter:
   ```
   Get-AzureRmResourceProvider
   ```
 
-6. View the Azure resource providers, resource types, and the Azure regions where these resources are available. 
+6. Examine the output, including Azure resource providers, resource types, and the Azure regions where these resources are available.
 
+#### Task 2: Manage Azure resources and resource groups by using Azure PowerShell
 
+1. In the Windows PowerShell ISE window, open the D:\Labfiles\Lab01\Starter\Start-AzureRm20553C01Lab.ps1 file.
 
-#### Task 2: Manage Azure services and resource groups
-  
-1. In the Windows PowerShell ISE window, open the **D:\Labfiles\Lab01\Starter\Lab01Starter.ps1** file.
+2. In the **# Variables** section, note the values of predefined variables. They need to match the names of resource and the resource group you created in the previous exercise.
 
-2. In the  **#Variables** section, modify the **$locName** variable to match the Azure location that your instructor asked you to use.
-
-3. In the  **#Variables** section, modify the **$webappName** variable to a unique name by using the current date and your initials in the **TestWebApp**_MMDDYYAB_ format.
-
-4. Under the line that starts:  **#Create a web app**, type the following code.
-
+3. Under the line that states **# Identify the location of the resource group containing the resource**, type the following:
   ```
-  New-AzureRmWebApp -Name $webappName -ResourceGroupName $rgname -Location $locName
+  $locName = (Get-AzureRmResourceGroup -Name $rg1Name).Location
   ```
 
-5. Select all of code in the file, including the line you just typed, right-click it, and then click  **Run selection**.
+4. Select all of code in the file, including the line you just typed, right-click it, and then click **Run selection**.
 
-6. In the Windows PowerShell ISE window, at the command prompt, type the following command and then press Enter:
-
+5. Under the line that states **# Create a new resource group in the same location**, type the following:
   ```
-  Get-AzureRmResource | Where {$_.ResourceGroupName -eq $rgName}
-  ```
-
-7. View the list of resources that belong to the TestRG1 resource group. 
-
-8. In the Windows PowerShell ISE window, at the command prompt, type the following command and then press Enter:
-
-  ```
-  New-AzureRMResourceGroup -Name $newrgname -location $locname
+  $rg2 = New-AzureRmResourceGroup -Name $rg2Name -Location $locName
   ```
 
-9. In the Windows PowerShell ISE window, in the script pane, under the line that starts with ** #Move the web app**, type the following code, and then press Enter:
+6. Select the line you just typed, right-click it, and then click **Run selection**.
 
+7. Under the line that states **# Retrieve an object representing the resource and store it in a variable**, type the following:
   ```
-  $resource = Get-AzureRmResource -ResourceName $webappname -ResourceGroupName $rgname
-Move-AzureRmResource -DestinationResourceGroupName $newrgname -ResourceId $resource.ResourceId
-  ```
-
-10. Select the code in step 9, right-click it, and then click  **Run Selection**.
-
-11. In the Confirm window, click  **Yes**.
-
-12. In the Windows PowerShell ISE window, at the command prompt, type the following code, and then press Enter:
-
-  ```
-  Get-AzureRmResource | Where {$_.ResourceGroupName -eq $newrgName}
+  $res = Get-AzureRmResource -ResourceName $resName -ResourceGroupName $rg1Name
   ```
 
-13. View the web app you created earlier, which is now in the TestWebRG resource group.
+8. Select the line you just typed, right-click it, and then click **Run selection**.
 
+9. Under the line that states **# Move the resource to the new resource group**, type the following:
+  ```
+  Move-AzureRmResource -DestinationResourceGroupName $rg2Name -ResourceId $res.ResourceId
+  ```
 
+10. Select the line you just typed, right-click it, and then click **Run selection**.
 
-#### Task 3: Reset the environment
-  
+11. Under the line that states **# View resources in the new resource group**, type the following:
+  ```
+  Get-AzureRmResource | Where-Object ResourceGroupName -eq $rg2Name
+  ```
+
+12. Select the line you just typed, right-click it, and then click **Run selection**.
+
+#### Task 3: 
+
 1. Close all open apps without saving any files.
 
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run as administrator**. In the  **User Account Control** dialog box, click **Yes**.
+2. On the taskbar, right-click Windows PowerShell, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
-3. Type the following command, and then press Enter:
-
+3. Type the following command, and then press **Enter**:
   ```
   Reset-Azure
   ```
 
-4. When prompted (twice), sign in by using the Microsoft account associated with your Azure subscription.
+4. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
 
 5. If you have multiple Azure subscriptions, select the one you want the script to target.
 
-6. When prompted for confirmation, type  **y**.
+6. When prompted for confirmation, type **y**.
 
->  **Note:** This script removes Azure services in your subscription. Therefore, we recommend that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
-> The script resets your Azure environment so that it is ready for the next lab. 
-> The script removes all storage accounts, virtual machines, virtual networks, cloud services, and resource groups containing these resources.
-
->  **Result**: After completing this exercise, you will have used Azure PowerShell to create and manage Azure resources.
-
+>  **Result**: After completing this exercise, you should have used Azure PowerShell to manage Azure resources and resource groups.
 
 
 ©2016 Microsoft Corporation. All rights reserved.
@@ -294,5 +247,3 @@ Move-AzureRmResource -DestinationResourceGroupName $newrgname -ResourceId $resou
 The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
-
-  
