--- a/Instructions/20533C_LAB_AK_11.md
+++ b/Instructions/20533C_LAB_AK_11.md
@@ -1,262 +1,167 @@
-﻿# Lab Answer Key:  Module 11: Implementing Azure-based management and automation
+﻿	# Lab Answer Key:  Module 11: Implementing Azure-based management and automation
 # Lab: Implementing Automation
   
 ## Exercise 1: Configuring Automation accounts
   
 #### Task 1: Create an Automation account
   
-1. Ensure that you are signed in to MIA-CL1 as  **Student** with the password **Pa$$w0rd**, and that the  **Setup-Azure** script has completed.
+1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the **Setup-Azure** script has completed. The script creates two Azure VMs in your subscription and leaves them in the running state. You will use an Azure Automation runbook to stop them.
 
-2. Start Internet Explorer and browse to  **https://portal.azure.com**. When prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+2. Start Internet Explorer and browse to **https://portal.azure.com**. When prompted, sign in by using the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription. 
 
-3. On the menu hub, click  **New**, and then click  **Monitoring + management**.
+3. Verify that your username listed in the upper right corner of the Azure portal page includes the reference to **(DEFAULT DIRECTORY)**. If not, then click the user name and, in the DIRECTORY section of the drop down menu, select the entry containing your Microsoft Account user name followed by (Default Directory).
 
-4. In the  **Monitoring + management** blade, click **Automation**.
+4. In the hub menu, click **Virtual machines**. On the **Virtual machines** blade, note **myVM0** and **myVM1** virtual machines with the running status.
 
-5. In the Add Automation Account blade, specify the following:
+5. In the hub menu, click **+ New**, and then click **Monitoring + Management**.
+
+6. On the **Monitoring + Management** blade, click **Automation**.
+
+7. On the Add Automation Account blade, specify the following:
 
 
-  - Name:  **LabAutomationAccount**
+  - Name: **LabAutomationAccount**
 
-  - Subscription: your current subscription
+  - Subscription: _your current subscription_
+
+  - Resource group: _ensure that the **Create new** option is selected and type **20533C1102-LabRG** in the text box_
+
+  - Location: _an Azure region that you chose when running **Setup-Azure** or, if not available, another region close to it_
+
+  - Create Azure Run As account: **Yes**
+
+
+1. Click **Create**.
+
+2. Wait for the Automation account to be provisioned. This should take less than a minute.
+
+
+#### Task 2: Create and review Automation assets
   
-  - Resource group: create a new resource group named  **AutomationLabRG**
+1. In the Azure portal, in the Hub menu, click **More services**, and then click **Automation Accounts**. 
 
-  - Region: an Azure region that you chose when running the provisioning script
+2. On the Automation Accounts blade, click **LabAutomationAccount**.
 
-  - Create Azure Run As account: No
+3. On the LabAutomationAccount blade click the **ASSETS** tile.
 
-  - Pin to dashboard: Check the box to enable
+4. On the **Assets** blade, notice that you have several Windows PowerShell modules included in your account by default.
 
+5. Click the **Variables** tile.
 
-6. Click  **Create**.
+6. On the **Variables** blade, click **Add a variable**.
 
-7. Wait for the Automation account to be provisioned. This should take less than a minute.
+7. On the **New Variable** blade, specify the following and click **Create**:
 
+  - Name: **VM0**
 
+  - Description: **myVM0**
 
-#### Task 2: Create an Azure AD user
-  
-1. Start Internet Explorer and browse to  **https://manage.windowsazure.com**. If prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+  - Type: **String**
 
-2. In the Azure classic portal, in the navigation bar on the left hand side of the page, click **default directory**.
+  - Value: **myVM0**
 
-3. On the  **default directory** page, click **USERS**.
+  - Encrypted: **No**
 
-4. Click  **ADD USER** in the command bar at the bottom of the page.
+1. Repeat the steps 6 and 7 to create additional two non-encrypted string variables. For each variable, specify the following name, description and value::
 
-5. On the  **Tell us about this user** page of the ADD USER Wizard, specify the following:
+  - Name: **VM1**
 
+  - Description: **myVM1**
 
-  - TYPE OF USER:  **New user in your organization**
+  - Value: **myVM1**
 
-  - USER NAME:  **LabAutomationUser**
 
-  - @: leave the default value
+  - Name: **ResourceGroup**
 
+  - Description: **VM resource group**
 
-6. On the  **user profile** page of the ADD USER Wizard, in the **DISPLAY NAME** box, type **LabAutomation User**.
+  - Value: **20533C1101-LabRG**
 
-7. In the  **ROLE** drop-down list, ensure that **User** is selected (do not enable Multi-Factor Authentication). Note that you are creating an organizational account, and you will make this account a co-administrator of your Azure subscription.
 
-8. Click  **Next**.
+1. Scroll back to the **Assets** blade and click the **Schedules** tile.
 
-9. On the  **Get temporary password** page of the ADD USER Wizard, note the full user name (including the part after the @ sign), and then copy it to Notepad.
+2. On the **Schedules** blade, click **Add a schedule**.
 
-10. Click  **create** and note the temporary password shown in the **NEW PASSWORD** text box. Click the Copy icon to the right of the text box. If prompted, click **Allow access** and click the Copy icon again. Paste the copied password to Notepad.
+3. On the **New Schedule** blade, specify the following and click **Create**:
 
-11. Click  **Complete**.
 
-12. Click the large blue arrow pointing to the left.
+  - Name: **EndOfDay**
 
-13. In the navigation bar on the left side, scroll down to the bottom, and then click  **SETTINGS**.
+  - Description: **End of day**
 
-14. Click  **ADMINISTRATORS**.
+  - Starts: _tomorrow's date at **6:00:00 PM** with the time zone of the Azure region containing the Automation account_
 
-15. At the bottom of the page, click  **ADD**.
+  - Recurrence: **Recurring**
 
-16. In the  **EMAIL ADDRESS** box, type the name of the new user that you created that you copied to Notepad in the format **LabAutomationUser@ _&lt;domain&gt;_**.
+  - Recur every: **1 Day**
 
-17. Under  **SUBSCRIPTION**, select your current Azure subscription, and then click  **OK**.
+  - Set expiration: **No**
 
-18. At the top right of the page, click your current account name, and then click  **Sign out**.
 
-19. On the  **You have been signed out** page, click **SIGN IN**.
+1. Close the Schedules blade.
 
-20. On the  **Microsoft Azure** sign-in page, click **Use another account**.
+2. Click **Connections**. 
 
-21. On the  **Sign in** page, enter the newly created user's credentials, and then click **Continue**.
-
-22. When prompted for the password, type the user's password that you copied to Notepad, and then click  **Sign in**.
-
-23. On the  **Update your password** page, in the **Current password** text box, type the temporary password.
-
-24. In the ** New password** and **Confirm password** text boxes, type **Pa$$w0rd**, and then click  **Update password and sign in**.
-
-25. If the  **Sign in** page appears, enter your new password, and then click **Sign in**.
-
-26. Close the  **WINDOWS AZURE TOUR** dialog box.
-
-27. At the top right of the page, click the currently signed-in user account name, and then click  **Sign out**.
-
-
-
-#### Task 3: Create Automation assets
-  
-1. Switch back to the Azure portal. In the Hub menu, click More Services, and then click  **Automation Accounts**. 
-
-2. In the Automation Accounts blade, click the Automation account you created in Exercise 1 Task 1. 
-
-3. Click  **Assets**.
-
-4. On the  **Assets** blade, notice that you have several Windows PowerShell modules included in your account by default.
-
-5. Click  **Credentials**.
-
-6. In the  **Credentials** blade, click **Add a credential**.
-
-7. In the  **New Credential** blade, specify the following:
-
-
-  - Name:  **PSCredential**
-
-  - Description:  **Lab Automation User (Co-Administrator)**
-
-  - User name: the name of the newly created AutomationUser account that you copied to Notepad
-
-  - Password:  **Pa$$w0rd**
-
-  - Confirm password:  **Pa$$w0rd**
-
-
-1. Click  **Create**.
-
-2. Close the  **Credentials** blade.
-
-3. Click the  **Variables** tile.
-
-4. In the  **Variables** blade, click **Add a variable**.
-
-5. In the  **New Variable** blade, specify the following:
-
-
-  - Name:  **SubscriptionName**
-
-  - Description:  **Subscription Name**
-
-  - Type:  **String**
-
-  - Value:  _name of your subscription_
-
-  - Encrypted:  **No**
-
-
-1. Click  **Create**.
-
-2. Repeat the steps 12 and 13 to create five string variables. For each variable, specify the following name and value (leave the description blank):
-
-
-  - Name:  **AdminName**
-Value:  **Student**
-
-  - Name:  **AdminPassword**
-Value:  **Pa$$w0rd**
-
-  - Name:  **Location**
-Value:  _Location:_ _the name of_ _the_ _Azure_ _region_ _that_ _you used when running the provisioning script at the beginning of this module_
-
-  - Name:  **Network**
-Value:  **ADATUM-HQ-VNET**
-
-  - Name:  **Subnet**
-Value:  **Subnet-1**
-
-
-1. Back on the  **Assets** blade, click the **Schedules** tile.
-
-2. In the  **Schedules** tile, click **Add a schedule**.
-
-3. In the  **New Schedule** blade, specify the following:
-
-
-  - Name:  **EndOfDay**
-
-  - Description:  **End of Day**
-
-  - Starts: tomorrow's date at  **18:00:00**
-
-  - Recurrence:  **Recurring**
-
-  - Recur every **1** **Day**
-
-  - Set expiration: Leave the default **No**
-
-  - Expires:  **Never**
-
-
-1. Click  **Create**.
-
-2. Close the Schedules blade.
+3. Note two precreated connections **AzureClassicRunAsConnection** and **AzureRunAsConnection**. They were created automatically during provisioning of the Automation account since you selected the option to create the Azure Run As account.
 
 3. Close the Assets blade.
 
 
->  **Result**: After completing this exercise, you should have configured a new Microsoft Azure Automation account, and created a new Microsoft Azure Active Directory (Azure AD) organizational account to use as an Automation Credential asset.
+> **Result**: After completing this exercise, you should have configured a new Microsoft Azure Automation account and created Automation assets.
 
 
-## Exercise 2: Creating runbooks
+## Exercise 2: Creating and executing runbooks
   
 #### Task 1: Import a runbook
   
-1. In the Azure portal, in the blade displaying your Automation account, click the  **Runbooks** tile.
+1. In the Azure portal, on the LabAutomationAccount blade, click **Runbooks**.
 
-2. In the  **Runbooks** blade, click **Add a runbook**.
+2. Click **Add a runbook**.
 
-3. In the  **Add Runbook** blade, click **Import an existing runbook**.
+3. On the **Add Runbook** blade, click **Import an existing runbook**.
 
-4. In the  **Import** blade, specify the following:
-
-
-  - Runbook file:  **D:\Labfiles\Lab11\Solution**, select  **New-StorageAndVMs.ps1**
-
-  - Runbook type:  **PowerShell Workflow**
-
-  - Name:  **New-StorageAndVMs**
-
-  - Description: leave blank
+4. On the **Import** blade, specify the following and click **Create**:
 
 
-1. Click  **Create**. 
+  - Runbook file: **D:\Labfiles\Lab11\Starter\Stop-AzureRm20533C11VMs.ps1**
 
-2. In the  **Runbooks** blade, click **New-StorageAndVMs**.
+  - Runbook type: **PowerShell Workflow**
 
-3. In the New-StorageAndVMs blade, click  **Edit**.
+  - Name: **Stop-AzureVMs-Workflow**
 
-4. In the Edit PowerShell Workflow Runbook blade, review the content of the PowerShell workflow.
+  - Description: **Stop Azure VMs in parallel**
+
+
+1. On the Runbooks blade, click **Stop-AzureVMs-Workflow**
+
+2. On the Stop-AzureVMs-Workflow blade, click **Edit**.
+
+3. On the Edit PowerShell Workflow Runbook blade, review the content of the PowerShell workflow.
 
 
 
 #### Task 2: Publish and execute a runbook
   
-1. In the Edit PowerShell Workflow Runbook blade, click  **Publish**.
+1. On the Edit PowerShell Workflow Runbook blade, click **Publish**.
 
-2. When prompted to confirm, click  **Yes**. You will be automatically redirected to the  **New-StorageAndVMs** blade.
+2. When prompted to confirm, click **Yes**. You will be automatically redirected to the **Stop-AzureVMs-Workflow** blade.
 
-3. Click  **Start**.
+3. Click **Start**.
 
-4. When prompted to confirm, click  **Yes**. You will be automatically redirected to a blade displaying the current job, with a name consisting of the combination of the runbook name and timestamp of its invocation.
+4. When prompted to confirm, click **Yes**. You will be automatically redirected to a blade displaying the current job, with a name consisting of the combination of the runbook name and timestamp of its invocation.
 
-5. Click  **Output** tile.
+5. Click **Output** tile.
 
 6. Monitor the runbook execution. Wait until the job completes.
 
+7. In the hub menu of the Azure portal, click **Virtual machines**. On the **Virtual machines** blade, note that the status of **myVM0** and **myVM1** virtual machines has changed to stopped.
 
 
 #### Task 3: Reset the environment
   
 1. Close all open applications without saving any files.
 
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run as administrator**. In the  **User Account Control** dialog box, click **Yes**.
+2. On the taskbar, right-click **Windows PowerShell**, and then click **Run as administrator**. In the **User Account Control** dialog box, click **Yes**.
 
 3. Type the following command, and then press Enter:
 
@@ -268,14 +173,14 @@ Value:  **Subnet-1**
 
 5. If you have multiple Azure subscriptions, select the one you want to target with the script.
 
-6. When prompted for confirmation, type  **y**.
+6. When prompted for confirmation, type **y**.
 
->  **Note:** This script will remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+> **Note:** This script will remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
 > The script will take 5-10 minutes to reset your Microsoft Azure environment to be ready for the next lab. 
 > The script removes all storage, virtual machines (VMs), virtual networks, cloud services, and resource groups.
->  **Important**: The script might not be able to get exclusive access to a storage account to delete it (if this occurs, you will see an error). If you find remaining objects after the reset script is complete, you can rerun the  **Reset-Azure** script, or use the Azure portal and Azure classic portal to delete all the objects in your Azure subscription manuallyâ€”with the exception of the default directory.
+> **Important**: The script might not be able to get exclusive access to a storage account to delete it (if this occurs, you will see an error). If you find remaining objects after the reset script is complete, you can rerun the **Reset-Azure** script, or use the Azure portal and Azure classic portal to delete all the objects in your Azure subscription manually with the exception of the default Azure AD tenant.
 
->  **Result**: After completing this exercise, you should have imported, published, and executed a PowerShell workflow-based runbook that deploys two virtual machines in parallel.
+> **Result**: After completing this exercise, you should have imported, published, and executed a PowerShell workflow-based runbook that deploys two virtual machines in parallel.
 
 
 
