--- a/Instructions/20533C_LAB_01.md
+++ b/Instructions/20533C_LAB_01.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- A. Datum Corporation wants to expand their cloud presence by taking advantage of the benefits of Azure. You have been asked to explore and compare the available IaaS v2 features by using the Azure portals and Windows PowerShell.
+A. Datum Corporation wants to expand their cloud presence by taking advantage of the benefits of Azure. You have been asked to explore the available Azure IaaS features by using the Azure portals and Windows PowerShell.
 
 
 ### Objectives
@@ -21,21 +21,20 @@
   
  Estimated Time: 50 minutes
 
-Virtual machine:  **20533C-MIA-CL1**
+ Virtual Machine: **20533C-MIA-CL1**
 
- User name:  **Student**
+ User Name: **Student**
 
- Password:  **Pa$$w0rd**
+ Password: **Pa55w.rd**
 
- Before you start this lab, ensure that you have completed the tasks in the "Preparing the environment" demonstration, which is in the first lesson of this module. Also ensure that the setup script has completed.
+ Before starting this lab, ensure that you have performed the "Preparing the Environment" demonstration tasks at the beginning of the first lesson in this module, and that the setup script has completed.
 
 
-## Exercise 1: Using the Azure portals
+## Exercise 1: Creating, securing, and monitoring an Azure SQL Database
   
 ### Scenario
   
- You have been asked to explore the available browser-based Azure portals to assess how A. Datum Corporation will use them. In the Azure classic portal, you must create a co-administrator account and confirm the domain name of your subscription for use in your testing.
-
+You have been asked to explore the available browser-based Azure portals to assess how A. Datum Corporation will use them. In the Azure classic portal, you must create a co-administrator account and confirm the domain name of your subscription for use in your testing.
 In the Azure portal, you must observe the organization of resources and customize the interface to make your testing environment more accessible. In the account page of the Azure portal, you must view and download your current billing data and sign up for an available preview feature that you will use later in your testing.
 
  The main tasks for this exercise are as follows:
@@ -44,67 +43,55 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 2. Use the Azure portal
 
-3. Use the account page of the Azure portal
-
-
+3. Use the Azure account portal
 
 #### Task 1: Use the Azure classic portal
   
-1. Ensure that you are signed in to the 20533C-MIA-CL1 virtual machine as  **Student** with the password **Pa$$w0rd**. You should have already run the preparation script in the "Preparing the environment" demonstration at the beginning of the module.
+1. Sign in to the MIA-CL1 lab virtual machine as **Student** with the password **Pa55w.rd**.
 
-2. Open Internet Explorer, and then go to  **https://manage.windowsazure.com**.
+2. Start Internet Explorer, browse to the Azure classic portal. Sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. Sign in by using the email address and password you set up for this course.
+3. In the Azure classic portal, grant the Co-Administrator privileges to valid Microsoft account.
 
-4. Create a Global Administrator in the **Default Directory**.
+4. In the Azure classic portal, view the default Azure Active Directory (AD) tenant and note the user account you just added. 
 
-5. Open the **settings** page and then the **ADMINISTRATORS** page.
-
-6. Add a co-administrator account by using the users UPN you created in the above step.
-
-7. In Internet Explorer, navigate to the  **ACTIVE DIRECTORY** page in the Azure classic portal. If the **Let's talk about Azure AD** page appears, clear all checkboxes, and then click the checkmark at the bottom of the page.
-
-8. On the  **Domains** page, note the domain name for your subscription.
-
-9. On the  **Users** page, note the two users: your user account and the co-administrator account you created earlier.
-
-
+5. View the default domain name associated with your Azure AD tenant.
 
 #### Task 2: Use the Azure portal
+
+1. In Internet Explorer, navigate to the Azure portal. 
+
+2. Edit dashboard by configuring the following settings
+
+- set the size of the **All resources** tile to **4x6**.
+
+- set the size of the **Service health** tile to **4x4**.
+
+3. Drag the **Service health** tile up to the top of the dashboard until its top edge aligns with the top edge of the **All resources** tile.
+
+4. Pin **Virtual machine scale sets** to the hub menu.
+
+#### Task 3: Use the Azure account portal
   
-1. Go to the Azure portal at  **https://portal.azure.com**.
+1. In Internet Explorer, navigate to the account portal. If prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-2. Click the  **Edit dashboard** option to edit the layout of the **Dashboard** page.
+2. On the summary page, review the billing summary for your subscription on the page.
 
-3. Resize the  **All resources** tile to **4x6**.
+3. Download the usage details in **Version 2 - Preview**.
 
-4. Resize the  **Service health** tile to **2x4**.
-
-5. Click  **Done customizing** to confirm the changes to the **Dashboard** page.
-
-6. On the Hub menu, use the  **More services** menu to pin the **Storage accounts** item to the Hub menu.
+4. View the contents of the file in Notepad. Note that this is intended to simply review its content – typically to analyze it in more details, you would use Microsoft Excel or other program capable of parsing csv files. The file might not include any data at this point if you have not yet deployed any resources into your subscription.
 
 
+>  **Result**: After completing this exercise, you should have used the Azure portals.
 
-#### Task 3: Use the account page of the Azure portal
-  
-1. In Internet Explorer, go to the account page of the Azure portal at  **https://account.windowsazure.com**.
-
-2. Sign in by using the email address and password you set up for this course.
-
-3. Go to the  **Subscriptions** page, and then click your subscription. View the billing summary for your subscription on the page.
-
-4. Click  **Download usage details**, download the version 1 usage details for your subscription, and then view them in Notepad. Note that this is intended to simply review its content - typically to analyze it in more details, you would use Microsoft Excel or other program capable of parsing csv files.
-
-
->  **Result**: After completing this exercise, you will have used the Azure portals.
 
 
 ## Exercise 2: Using the Azure Resource Manager features in the Azure portal
   
 ### Scenario
   
- You have been asked to create some temporary resources in Azure to test the management interface of the Azure portal. You must create a resource group in Azure, create a new storage account and a new virtual machine in the Azure portal, and then tag the resources as test resources before assigning your newly added co-administrator to the Automation Operator role in the Azure portal.
+You have been asked to create some temporary resources in Azure to test the management capabilities available via the Azure portal. You must create a resource group in Azure, create a new resource in that resource group, assign a tag to to each, and finally grant access to both by using Role Based Acces Control. Your intention is to apply permissions on the resource group level, rather than relying on the subscription-wide Co-Administrator privileges you granted in the previous exercise.
+
 
 The main tasks for this exercise are as follows:
 
@@ -117,150 +104,148 @@ The main tasks for this exercise are as follows:
 4. Configure RBAC
 
 
-
 #### Task 1: Create and manage a resource group
-  
-1. In Internet Explorer, go to  **https://portal.azure.com**.
 
-2. In the Azure portal, create a new resource group named  **TestRG1** in your preferred location.
+1. In Internet Explorer, browse to the Azure portal. If prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
 
+2. In the Azure portal, create a new resource group with the following settings:
 
+  - Resource group name: **20533C0101-LabRG**
+
+  - Subscription: the name of your Azure subscription
+
+  - Resource group location: the closest Azure region (to your location)
 
 #### Task 2: Create Azure resources
-  
-- On the Azure portal page, create a new IaaS v2 storage account assigned to the  **TestRG1** resource group. Use the current date and your initials to create a unique name in the format **storage**_MMDDYYYYab_ format.
 
->  **Note:** For example, a student named Ed Meadows might use **storage04252016em**.
-> All alphabetical characters must be lowercase.
+1. In the Azure portal, create a new **Route table** with the following settings:
 
+  - Name: **AdatumRT01**
+
+  - Subscription: the same Azure subscription in which you created the resource group
+
+  - Resource group name: click **Use existing** and select **20533C0101-LabRG** from the drop-down list
+
+  - Resource group location: this entry will be automatically populated once you select the resource group name
 
 #### Task 3: Configure tagging
-  
-1. In the Azure portal, open the  **TestRG1** resource group pane.
 
-2. Create a tag named  **project:Test**, and then assign it to the TestRG1 resource group.
+1. In the Azure portal, assign the following tag to the resource group and the resource you created earlier in this exercise:
 
-3. Assign the  **project:Test** tag to the **storage**_DDMMYYYYab_ storage account, and then pin the **project:Test** tag to the dashboard.
+- Key: **project**
 
-4. On the  **Dashboard** page, view the resources that are tagged with the **project:Test** tag.
+- Value: **test**
 
+2. In the Azure portal, view the list of resources with the tag **project : test** in your subscription. 
 
+3. Pin the list of resources with the tag to dashboard and use the tile to view the list of resources again.
 
 #### Task 4: Configure RBAC
   
-- From the  **Dashboard** page, add the user you created earlier in this lab as a Storage Account Contributor for the TestRG1 resource group.
+1. In the Azure portal, navigate to the **20533C0101-LabRG** resource group.
+
+2. From the resource group blade, grant the **Owner** role to the user account you created in your Azure AD tenant in the first exercise of this lab.
+
+3. Start Internet Explorer and browse to the Azure classic portal. 
+
+4. Revoke Co-administrator privileges from the account you added to your Azure AD tenant in the first exercise. 
+
+>  Note that in this particular case, the account you are using is already a co-administrator, which is not a subject to RBAC. Revoking the Co-Administrator privileges from the account will allow for RBAC to take effect. Revoking the Co-Administrator privileges does not remove the account from the Azure AD tenant associated with your subscription.
+
+>  **Result**: After completing this exercise, you should have used the Azure Resource Manager features in the Azure portal.
 
 
->  **Result**: After completing this exercise, you will have used the Azure Resource Manager features in the Azure portal.
 
 
 ## Exercise 3: Using Azure PowerShell
   
 ### Scenario
   
- You have been asked to investigate the capabilities of Azure PowerShell for A. Datum Corporation. You must connect to your Azure subscription by using Azure PowerShell and then use Azure PowerShell to create an IaaS v2 web app, create a new resource group named TestWebRG, and reassign the web app to the new resource group.
+You have been asked to investigate the capabilities of Azure PowerShell for A. Datum Corporation. You must connect to your Azure subscription by using Azure PowerShell and then use Azure PowerShell to create a new resource group and move the resource you created in the previous exercise to the new resource group.
 
 The main tasks for this exercise are as follows:
 
 1. Connect Azure PowerShell to your Azure subscription
 
-2. Manage Azure services and resource groups
+2. Manage Azure resources and resource groups by using Azure PowerShell
 
 3. Reset the environment
 
-
-
+## Exercise 3: Using Azure PowerShell
+  
 #### Task 1: Connect Azure PowerShell to your Azure subscription
   
-1. On MIA-CL1, on the taskbar, click  **Start**, type  **ISE**, and then click  **Windows PowerShell ISE**.
+1. On MIA-CL1, start a Windows PowerShell ISE as Administrator. 
 
-2. In the Windows PowerShell ISE, at the command prompt, type the following command, and then press Enter:
-
+2. From the Windows PowerShell Integrated Scripting Environment (ISE), authenticate to your Azure subscription by running:
   ```
-  Login-AzureRMAccount
-  ```
-
-3. In the sign-in window that appears, sign in to your Azure account.
-
-4. In the Windows PowerShell ISE window, at the command prompt, type the following cmdlet, and then press Enter:
-
-  ```
-  Get-AzureRmSubscription
+Login-AzureRmAccount
   ```
 
-5. In the Windows PowerShell ISE window, at the command prompt, type the following cmdlet, and then press Enter:
-
+3. From the Windows PowerShell ISE window, retrieve your subscription details by running:
   ```
-  Get-AzureRmResourceProvider
-  ```
-
-6. View the Azure resource providers, resource types, and the Azure regions where these resources are available. 
-
-
-
-#### Task 2: Manage Azure services and resource groups
-  
-1. In the Windows PowerShell ISE window, open the  **D:\Labfiles\Lab01\Starter\Lab01Starter.ps1** file.
-
-2. In the ISE, in the  **#Variables** section, modify the **$locName** variable to match the Azure location that your instructor asked you to use.
-
-3. In the ISE, in the  **#Variables** section, modify the **$webappName** variable to a unique name by using the current date and your initials in the **TestWebApp**_MMDDYYAB_ format.
-
-4. In the ISE, under the line that starts:  **#Create a web app**, use the  **New-AzureRmWebApp** cmdlet to create a new web app, using the variables in the script.
-
-5. Type the following command, and then press Enter to view the resources in the TestRG1 resource group:
-
-  ```
-  Get-AzureRmResource | Where {$_.ResourceGroupName -eq $rgName}
+Get-AzureRmSubscription
   ```
 
-6. At the PowerShell prompt, create a new resource group for the web app by using the  **$newrgname** and **$locname** variables.
-
-7. In the Windows PowerShell ISE window, in the script pane, under the line that starts with  **#Move the web app**, create a variable named  **$resource**, and assign the results of the following cmdlet to the variable by typing the following code and pressing Enter:
-
+4. From the Windows PowerShell ISE window, enumerate Azure resource providers, resource types, and the Azure regions where these resources are available by running:
   ```
-  Get-AzureRmResource -ResourceName $webappName -ResourceGroupName $rgName
+Get-AzureRmResourceProvider
   ```
 
-8. In the Windows PowerShell ISE window, under the line you just created, use the  **Move-AzureRmResource** cmdlet to move the web app in the **$resource** variable to the resource group contained in the **$newrgname** variable. You need to use the _ResourceID_ parameter with the value of **$resource.ResourceID** for the cmdlet to run successfully.
+#### Task 2: Manage Azure resources and resource groups by using Azure PowerShell
 
-9. Select the code you created in steps 7 and 8, and then run the selection.
+1. In the Windows PowerShell ISE window, open the D:\Labfiles\Lab01\Starter\Start-AzureRm20553C01Lab.ps1 file.
 
-10. Run the following command to view the resources in the TestWebRG resource group:
+2. In the **# Variables** section, note the values of predefined variables. They need to match the names of resource and the resource group you created in the previous exercise.
 
-
-```
-Get-AzureRmResource | Where {$_.ResourceGroupName -eq $newrgName}
-```
-
-
-
-#### Task 3: Reset the environment
-  
-1. Launch  **Windows PowerShell** as an administrator.
-
-2. From the Windows PowerShell prompt, run the following command:
-
+3. Under the line that states **# Identify the location of the resource group containing the resource**, add the following and execute the updated script:
   ```
-  Reset-Azure
+$locName = (Get-AzureRmResourceGroup -Name $rg1Name).Location
   ```
 
-3. When prompted (twice), sign in by using the Microsoft account associated with your Azure subscription. 
+4. Under the line that states **# Create a new resource group in the same location**, add and execute the following line:
+  ```
+$rg2 = New-AzureRmResourceGroup -Name $rg2Name -Location $locName
+  ```
 
-4. If you have multiple Azure subscriptions, select the one you want the script to target.
+5. Under the line that states **# Retrieve an object representing the resource and store it in a variable**, add and execute the following line:
+  ```
+$res = Get-AzureRmResource -ResourceName $resName -ResourceGroupName $rg1Name
+  ```
 
-5. When prompted for confirmation, type  **y**.
+6. Under the line that states **# Move the resource to the new resource group**, add and execute the following line:
+  ```
+Move-AzureRmResource -DestinationResourceGroupName $rg2Name -ResourceId $res.ResourceId
+  ```
 
->  **Note:** This script removes Azure services in your subscription. Therefore, we recommend that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
-> The script resets your Azure environment so that it is ready for the next lab. 
-> The script removes all storage accounts, virtual machines, virtual networks, cloud services, and resource groups containing these resources.
+7. Under the line that states **# View resources in the new resource group**, add and execute the following line:
+  ```
+Get-AzureRmResource | Where-Object ResourceGroupName -eq $rg2Name
+  ```
 
->  **Result**: After completing this exercise, you will have used Azure PowerShell to create and manage Azure resources.
+#### Task 3: 
 
+1. Close all open apps without saving any files.
+
+2. Start Windows PowerShell as Administrator
+
+3. From the Windows PowerShell sessoin, run:
+  ```
+Reset-Azure
+  ```
+
+4. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+
+5. If you have multiple Azure subscriptions, select the one you want the script to target.
+
+6. When prompted for confirmation, type **y**.
+
+>  **Result**: After completing this exercise, you should have used Azure PowerShell to manage Azure resources and resource groups.
 
 
 **Question** 
-Why did you use Azure PowerShell cmdlets that contained  _Rm_ in the lab?
+Why did you use Azure PowerShell cmdlets that contained **Rm** in the lab?
+
 
 
 ©2016 Microsoft Corporation. All rights reserved.
@@ -268,5 +253,3 @@ Why did you use Azure PowerShell cmdlets that contained  _Rm_ in the lab?
 The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
-
-  
