--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- A. Datum Corporation's Azure VMs currently reside on an IaaS v1 virtual network in the branch region. To prepare for deployment of IaaS v2 VMs, A. Datum must deploy an IaaS v2 virtual network in the Headquarters region. You determined this is a relatively straightforward process if you use an existing deployment template and modify its parameters during deployment. However, you want to also test deployment of a virtual network by using Azure PowerShell. In addition, you need to prepare your existing IaaS v1 virtual network for establishing connectivity to the IaaS v2 virtual network by creating a virtual network gateway and deploy a test IaaS v2 VM to the virtual network deployed by using the template.
+ A. Datum Corporation's Azure VMs currently uses a classic virtual network in the region corresponding to its branch office location. To prepare for deployment of Azure Resource Manager VMs in the Azure region corresponding to its headquarters location, A. Datum must deploy an Azure Resource Manager virtual network in that region. You determined this is a relatively straightforward process if you use an existing deployment template and modify its parameters during deployment. However, you want to also test deployment of a virtual network by using Azure PowerShell. In addition, you need to prepare your existing classic virtual network for establishing connectivity to the Azure Resource Manager virtual network by creating a virtual network gateway and deploy a test Azure Resource Manager VM to the virtual network deployed by using the template.
 
 
 ### Objectives
@@ -19,91 +19,87 @@
   
  Estimated Time: 30 minutes
 
-Virtual Machine:  **20533C-MIA-CL1**
+ Virtual Machine: **20533C-MIA-CL1**
 
- User Name:  **Student**
+ User Name: **Student**
 
- Password:  **Pa$$w0rd**
+ Password: **Pa55w.rd**
 
- Before starting this lab, ensure that you have performed the  _Preparing the Environment_ demonstration tasks at the beginning of the first lesson in this module, and that the setup script has completed.
+ Before starting this lab, ensure that you have performed the _Preparing the Environment_ demonstration tasks at the beginning of the first lesson in this module, and that the setup script has completed.
 
 
 ## Exercise 1: Creating an Azure virtual network by using a deployment template
   
 ### Scenario
   
- A. Datum now wishes to implement virtual networks for the A. Datum headquarters and branch resources. You have been asked to configure these virtual networks by using deployment templates from GitHub. 
+ A. Datum intends to implement virtual networks for the A. Datum headquarters. You have been asked to test provisioning of a virtual network by using deployment templates from GitHub. 
 
 The main tasks for this exercise are as follows:
 
 1. Access the template on GitHub
 
-2. Load the template into new deployment on the Azure portal
+2. Create a new template-based deployment by using the Azure portal
 
-3. Run the deployment from the Azure portal
+3. Perform the deployment from the Azure portal
 
 
 
 #### Task 1: Access the template on GitHub
   
-1. Ensure that you are logged on to MIA-CL1 as  **Student** with the password **Pa$$w0rd**.
+1. Ensure that you are logged on to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Start Internet Explorer and browse to the following address: http://aka.ms/Mt32e4. 
+2. Start Internet Explorer and browse to **http://aka.ms/Mt32e4**
 
 3. Open a GitHub template that you can use to create a virtual network with two subnets. 
 
 
 
-#### Task 2: Load the template into new deployment on the Azure portal
+#### Task 2: Create a new template-based deployment by using the Azure portal
   
-1. In Internet Explorer, under Virtual Network with two Subnets, click  **Deploy to Azure**.
+1. In Internet Explorer, under Virtual Network with two Subnets, click **Deploy to Azure**.
 
-2. When prompted, sign in using the Microsoft account associated with your Azure subscription.
+2. When prompted, sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
-3. In the Azure portal, in the **Create a Virtual Network with two Subnets** blade, click the  **Edit** link.
+3. In the Azure portal, from the **Create a Virtual Network with two Subnets** blade, review content of the template.
 
-4. Review the structure of the JSON file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters that you can edit:  _vnetName_,  _vnetAddressPrefix_, _ subnet1Name_, _ subnet1Prefix, subnet2Name_, _ subnet2Prefix._
+4. Review the structure of the JSON file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters that you can edit: _vnetName_, _vnetAddressPrefix_, _subnet1Name_, _subnet1Prefix_, _subnet2Name_, _subnet2Prefix_.
 
-5. Review the content under **resources** to identify type of the resource, its name and properties.
+5. Review the content under **resources** to identify type of the resources, their names and properties.
 
-6. Click  **Discard** to close the Edit Template blade.
+6. Click **Discard** to close the Edit Template blade.
 
->  **Note:** If the template fails to load into the Azure portal, navigate to the following URL:
-        [http://aka.ms/Fpqovq](http://aka.ms/Fpqovq)
-      . Then, select and copy all the text. Paste the copied text into the Edit Template blade, and then perform steps 4 and 5 to review the template.
+> **Note:** If the template fails to load into the Azure portal, navigate to the following URL:
+        [http://aka.ms/Fpqovq](http://aka.ms/Fpqovq) . Then, select and copy all the text. Paste the copied text into the **Edit template** blade, and then perform steps 4 and 5 to review the template and close the Edit Template blade without making any changes.
 
 
-#### Task 3: Run the deployment from the Azure portal
+#### Task 3: Perform the deployment from the Azure portal
   
-1. In the **Create a Virtual Network with two Subnets** blade, locate the Basics section.
+1. From the **Create a Virtual Network with two Subnets** blade, deploy the template with the following settings:
 
-2. In the **Resource Group** section, locate the **Create new** radio button and select it.
+  - Subscription: use the Azure subscription that you selected when running **Setup-Azure** at the beginning of this module
 
-3. In the **Resource Group** section, locate the text box and enter **AdatumLabRG** as the name of the *Resource Group*.
+  - Resource group: create a new resource group named **20533C0201-LabRG**
 
-4. In the **Location** drop-down list, select  _&lt;Location1>._
+  - Location: in the drop-down list, select the Azure region you want to deploy the template to
 
-5. Type the following information in the **SETTINGS** section:
+  - Vnet Name: **HQ**
 
+  - Vnet Address Prefix: **10.0.0.0/16**
 
-  - VNETNAME:  **HQ**
+  - Subnet1Prefix: **10.0.0.0/24**
 
-  - VNETADDRESSPREFIX:  **10.0.0.0/16**
+  - Subnet1Name: **Subnet1**
 
-  - SUBNET1NAME:  **Subnet1**
+  - Subnet2Prefix: **10.0.1.0/24**
 
-  - SUBNET1PREFIX:  **10.0.0.0/24**
+  - Subnet2Name: **Subnet2**
 
-  - SUBNET2NAME:  **Subnet2**
+  - I agree to the terms and conditions stated above: enabled
 
-  - SUBNET2PREFIX:  **10.0.1.0/24**
-
-6. In the **Terms and Conditions** section, check **I agree to the terms and conditions stated above** and then click **Purchase**.
-
-7. Verify that provisioning of the new virtual network with name  **HQ** completed successfully
+2. Verify that provisioning of the new virtual network with name **HQ** completed successfully.
 
 
->  **Result**: After completing this exercise, you should have created virtual networks for A. Datum HQ.
+> **Result**: After completing this exercise, you should have created virtual networks for A. Datum HQ.
 
 
 ## Exercise 2: Creating a virtual network by using PowerShell
@@ -117,85 +113,76 @@ The main tasks for this exercise are as follows:
 1. Create a virtual network by using PowerShell
 
 
-
 #### Task 1: Create a virtual network by using PowerShell
   
-1. From the taskbar start Windows PowerShell and sign in to your subscription by using the  **Login-AzureRMAccount** command.
+1. From the taskbar, start Windows PowerShell and sign in to your subscription by using the **Login-AzureRMAccount** command.
 
-2. Select your subscription by using the  **Set-AzureRMContext** command, and then use **New-AzureRMResourceGroup** command to create a new resource group named **AdatumTestRG** in the primary Azure region provided by the instructor.
+2. Select your subscription by using the **Set-AzureRMContext** command, and then use **New-AzureRMResourceGroup** command to create a new resource group named **20533C0202-LabRG** in the primary Azure region provided by the instructor.
 
-3. By using the  **New-AzureRMVirtualNetwork** command, create a new virtual network named **AdatumTestVnet** with the address space **10.0.0.0/16** in the same region as the resource group.
+3. By using the **New-AzureRMVirtualNetwork** command, create a new virtual network named **AdatumTestVnet** with the address space **10.0.0.0/16** in the newly created resource group and in the same region as the resource group.
 
-4. Add a subnet named  **FrontEnd** with the IP range of 10.0.0.0/24 to the virtual network **AdatumTestVNet**.
+4. Add a subnet named **FrontEnd** with the IP range of 10.0.0.0/24 to the virtual network **AdatumTestVNet**.
 
 
->  **Result**: After completing this exercise, you should have created a test virtual networks for A. Datum by using Azure PowerShell. 
+> **Result**: After completing this exercise, you should have created a test virtual networks for A. Datum by using Azure PowerShell. 
 
 
 ## Exercise 3: Configuring virtual networks
   
 ### Scenario
   
- As part of expanding their network environment, A. Datum needs to prepare for connecting IaaS v1 virtual networks and IaaS v2 virtual networks by creating a virtual network gateway on an IaaS v1 virtual network. You also need to test provisioning of an Azure IaaS v2 VM onto an IaaS v2 virtual network. 
+ As part of expanding their network environment, A. Datum needs to prepare for connecting classic virtual networks and Azure Resource Manager virtual networks by creating a virtual network gateway on an classic virtual network. You also need to test provisioning of an Azure Azure Resource Manager VM onto an Azure Resource Manager virtual network. 
 
 The main tasks for this exercise are as follows:
 
-1. Create an IaaS v1 virtual network gateway
+1. Create a classic virtual network gateway
 
-2. Deploy an IaaS v2 virtual machine into an IaaS v2 virtual network
+2. Deploy an Azure virtual machine by using the Resource Manager deployment model
 
 
 
-#### Task 1: Create an IaaS v1 virtual network gateway
+#### Task 1: Create an classic virtual network gateway
   
-1. Switch to Internet Explorer and in the new tab navigate to the classic Azure portal.
+1. Switch to Internet Explorer displaying the Azure portal.
 
-2. If you are prompted to sign-in, use an account that is either a Service Admin or a co-admin of your Azure subscription 
+2. Navigate to the **ADATUM-BRANCH-VNET** classic virtual network.
 
-3. From the navigation bar, select networks, and then click  **ADATUM-BRANCH-VNET.**
+3. From the **ADATUM-BRANCH-VNET** blade, create a gateway with the following settings:
 
-4. Create a new dynamic routing gateway **.**
+  - Address range (CIDR block): **192.168.254.224/27**
 
->  **Note:** The creation of the VPN gateway could take 30 - 35 minutes to complete.
+  - Size: **Default** 
+
+  - Routing Type: **Dynamic**.
+
+> **Note:** The creation of the VPN gateway could take 30 - 35 minutes to complete.
 
 
-#### Task 2: Deploy an IaaS v2 virtual machine into an IaaS v2 virtual network
+#### Task 2: Deploy an Azure virtual machine by using the Resource Manager deployment model
   
-1. Right-click Windows PowerShell shortcut in the taskbar and click  **Run ISE as Administrator**.
+1. From MIA-CL1, start Windows PowerShell ISE as Administrator
 
-2. In the Windows PowerShell ISE, at the command prompt, type the following command, and then press Enter:
-
+2. From the Windows PowerShell ISE console, run D:\Labfiles\Lab02\Starter\New-AzureRm20533C02VM.ps1
   ```
-  CD D:\Labfiles\Lab02\Starter
-  ```
+3. When prompted to sign in (twice), type in the user name and the password which is either the Service Administrator or a Co-Administrator in your Azure subscription.
 
-3. At the command prompt, type the following command, and then press Enter:
+4. If you have multiple subscription, when prompted, select the subscription to which you deployed the virtual network in the first exercise.
 
-  ```
-  .\CreateVirtualMachine.ps1
-  ```
+> **Note:** The script takes about 10 minutes to complete.
+>  The script deploys a Azure VM named ARMSrv2 onto the first subnet of the HQ virtual network you provisioned earlier in this lab by using the Azure Resource Manager deployment model
 
->  **Note:** The command starts with dot backslash.
-4. When prompted to sign in (twice), type in the user name and the password which is either the Service Administrator or a Co-Admin in your Azure subscription.
-
-5. If you have multiple subscription, when prompted, type in the number corresponding to the subscription to which you deployed the virtual network in the first exercise of this lab and press Enter.
-
->  **Note:** The script takes about 10 minutes to complete.
-> The script deploys an IaaS v2 virtual machine named ARMSrv2 onto the first subnet of the IaaS v2 HQ virtual network you provisioned earlier in this lab.
-
->  **Result**: After completing this exercise, you should have created a virtual network gateway on the existing IaaS v1 virtual network and deployed a virtual machine to the newly created IaaS v2 HQ virtual network.
-
+> **Result**: After completing this exercise, you should have created a virtual network gateway on the existing classic virtual network and deployed a virtual machine to the HQ virtual network by using Azure Resource Manager deployment model.
 
 
 **Question** 
-What are the two methods that you can use to create an Azure virtual network?
+What are some of the methods you can use to create an Azure virtual network?
 
 
-# Lab B: Configuring connectivity between IaaS v1 and IaaS v2
+# Lab B: Configuring connectivity between classic and Azure Resource Manager virtual networks
   
 ### Scenario
   
- Now that A. Datum has deployed an IaaS v2 VNet, the company wants to be able to provide direct connectivity to the IaaS v1 VMs on the existing IaaS v1 VNet. To allow for direct communication between VMs on both virtual networks, you need to implement VNet-to-VNet connection between them. You will accomplish this by modifying and running an Azure PowerShell script. You also want to implement a point-to-site VPN, so that you can connect from your administrative computer.
+ Now that A. Datum has deployed an Azure Resource Manager VNet, the company wants to be able to provide direct connectivity to the classic VMs on the existing classic VNet. To allow for direct communication between VMs on both virtual networks, you need to implement VNet-to-VNet connection between them. You will accomplish this by using an Azure PowerShell script. You also want to implement a point-to-site VPN, so that you can connect to Azure VMs in the headquarters Azure region from your administrative computer.
 
 
 ### Objectives
@@ -213,16 +200,16 @@ What are the two methods that you can use to create an Azure virtual network?
   
  Estimated Time: 35 minutes
 
-Virtual Machine:  **20533C-MIA-CL1**
+Virtual Machine: **20533C-MIA-CL1**
 
- User Name:  **Student**
+ User Name: **Student**
 
- Password:  **Pa$$w0rd**
+ Password: **Pa55w.rd**
 
  Before you begin this lab, ensure that you have completed the first lab in this module: Creating virtual networks.
 
 
-## Exercise 1: Using a PowerShell script to connect IaaS v1 VNet and IaaS v2 VNet
+## Exercise 1: Using a Windows PowerShell script to connect a classic VNet and an Azure Resource Manager VNet
   
 ### Scenario
   
@@ -238,78 +225,70 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Configure Resource Manager virtual network
   
-1. On MIA-CL1, launch Internet Explorer and sign in to the classic Azure portal using an account that is either a Service Admin or a co-admin of your Azure subscription.
+1. On MIA-CL1, in the Internet Explorer window, in the Azure portal, on the **ADATUM-BRANCH-VNET** blade, on the **VPN connections** tile, verify that the **Gateway** entry has an IP address assigned to it. If this is not the case, wait until IP address does appear. 
 
-2. From the navigation bar on the left hand side, select networks, and then click  **ADATUM-BRANCH-VNET**.
+2. On MIA-CL1, from the Windows PowerShell window, first review and then run **D:\Labfiles\Lab02\Starter\New-AzureRm20533C02Gateway.ps1**
 
-3. On the  **adatum-branch-vnet** page, click **DASHBOARD**,
+3. When prompted, sign-in (twice) with an account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
-4. Ensure that the provisioning of the new virtual gateway that you started in the first lab of this module has been completed. If not, wait until the provisioning is completed.
+4. Occasionally monitor the execution status.
 
-5. On MIA-CL1, from the Azure PowerShell window, first review and then run  **D:\Labfiles\Lab02\Starter\ ConfigureARMGateway.ps1**
-
-6. When prompted to sign-in (twice), use an account that is either a Service Admin or a co-admin of your Azure subscription.
-
-7. Occasionally monitor the execution status.
-
->  **Note:** The script might take 20-25 minutes to complete. You do not have to wait for the script to finish. You can proceed with second task of this exercise and with Exercise 2 from this lab.
+> **Note:** The script might take 20-25 minutes to complete. Wait for it to complete.
 
 
 #### Task 2: Configure classic virtual network
   
-1. On MIA-CL1, launch Internet Explorer and browse to the Azure Portal.
+1. On MIA-CL1, in the Internet Explorer window, in the Azure portal, navigate to the **HQ** virtual network blade.
 
-2. If prompted, sign in to your Azure subscription when prompted with an account that is a Service admin or a co-admin of your subscription.
+2. From the HQ blade, identify the IP address of the **gatewayARM**.
 
-3. In the Azure portal, navigate to the list of Virtual networks **.**
+3. On MIA-CL1, open the **D:\Configfiles\Lab02\NetworkConfig.txt** file by using Notepad.
 
-4. In the Virtual networks blade, click  **HQ**.
+4. In Notepad, under the **LocalNetworkSite** section, modify the value of **&lt;VPNGatewayAddress&gt;** (which is at this point set to **1.1.1.1**) by replacing **1.1.1.1** with the value of the IP address that you identified in step 2.
 
-5. In the HQ blade, in the  **Connected devices** section, take the note of the value in the **IP ADDRESS** column for **gatewayARM**.
+5. Replace **Location1** in the **&lt;VirtualNetworkSite name="ADATUM-BRANCH-VNET" Location="Location1"&gt;** element with the name of the Azure region in which you created the **ADATUM-BRANCH-VNET** virtual network.
 
-6. On MIA-CL1, launch File Explorer and browse to D:\Configfiles\Lab02 folder.
+6. Save the modified file as **NetworkConfig.xml** and then close the file.
 
-7. Open the  **NetworkConfig.xml** file by using Notepad.
+7. Switch to the Windows PowerShell window.
 
-8. In Notepad, under the  **LocalNetworkSite** section, modify the value of **&lt;VPNGatewayAddress&gt;** (which is at this point set to **1.1.1.1**) by replacing  **1.1.1.1** with the value of the IP address that you recorded in step 5, replace **location1** with the name of the Azure region of the **adatum-branch-vnet** location, save the changes to **NetworkConfig.xml**, and then close the file.
-
-9. On MIA-CL1, launch Windows PowerShell as Administrator.
-
-10. At the Windows PowerShell prompt, sign into your Azure subscription by running:
+8. From the Windows PowerShell prompt, sign into your Azure subscription by running:
 
   ```
   Add-AzureAccount
   ```
 
-11. If you have multiple subscriptions, to select the target subscription, type the following commands, and then press Enter after each (replace ' _Name of your subscription'_ with the actual name of your subscription and make sure to enclose the name of your subscription in single quotes):
+9. If you have multiple subscriptions, select the target one by running (replace '_SubscriptionId_' with the value of the SubscriptionId property of your subscription):
 
   ```
   Get-AzureSubscription
-Set-AzureSubscription -SubscriptionName 'Name of your subscription'
+  Set-AzureSubsciption -SubscriptionId 'SubscriptionId'
   ```
 
-12. Update the network configuration by running the following command at the Windows PowerShell command prompt:
+10. Update the network configuration by running the following:
 
   ```
   Set-AzureVNetConfig -ConfigurationPath D:\Configfiles\Lab02\NetworkConfig.xml
   ```
 
-13. Set the IPSec shared key for the classic VNet gateway by running the following command at the Windows PowerShell command prompt:
+11. Set the IPSec shared key for the classic VNet gateway by running the following:
 
   ```
   Set-AzureVNetGatewayKey -VnetName Adatum-Branch-Vnet -LocalNetworkSiteName  HQ -SharedKey 12345
   ```
 
-14. Wait for the command to complete and display the StatusCode OK.
+12. Wait for the command to complete and display the StatusCode **OK**.
 
-15. Open Internet Explorer and browse to the Azure classic portal. If prompted, sign in by using the Microsoft account that is either the Service Admin or a co-Admin of your subscription.
+13. Switch to the Azure portal displayed in the Internet Explorer window. 
 
-16. From the  **DASHBOARD** page of the **ADATUM-BRANCH-VNET**, verify that this network is connected to the  **HQ** virtual network. You might need to click **CONNECT** in the menu bar or refresh the Internet Explorer page.
+14. Navigate to the **ADATUM-BRANCH-VNET** classic virtual network.
 
-17. Leave the Internet Explorer window open.
+15. On the **ADATUM-BRANCH-VNET** blade, on the **VPN connections** tile, verify that the **ADATUM-BRANCH-VNET** and **HQ** are connected. 
+
+16. Leave the Internet Explorer window open.
 
 
->  **Result**: After completing this exercise, you should have connected the A. Datum HQ and branch virtual networks, and deployed dynamic routing gateways for each virtual network.
+> **Result**: After completing this exercise, you should have deployed dynamic routing gateways for each virtual network as well as connected the A. Datum HQ and branch virtual networks.
 
 
 ## Exercise 2: Configuring a point-to-site VPN
@@ -326,66 +305,75 @@ The main tasks for this exercise are as follows:
 
 
 
-#### Task 1: Configure a VPN from a client to the headquarters virtual network
+#### Task 1: Task 1: Configure a VPN from a client to the HQ virtual network
   
-1. In the Azure classic portal, navigate to the  **CONFIGURE** tab of the **ADATUM-BRANCH-VNET** virtual network.
+1. In Internet Explorer, in the Azure portal, browse to the gatewayARM blade.
 
-2. On the  **CONFIGURE** tab, select **Configure point-to-site connectivity**, set the address space to  **172.16.0.0/24** and save the change.
+2. Modify the Point-to-site configuration of the gatewayARM by adding the address pool of **172.16.0.0/24**.
 
-3. Open a Command Prompt window with elevated privileges, and navigate to  **C:\Program Files (x86)\Windows Kits\10\bin\x64**.
+3. On MIA-CL1, open a Command Prompt window with elevated privileges, and change the current directory to **C:\Program Files (x86)\Windows Kits\10\bin\x64**.
 
-4. At the command prompt, type the following command, and then press Enter:
-
-  ```
-  makecert -sk exchange -r -n "CN=AdatumRootCertificate" -pe -a sha1 -len 2048 -ss My "AdatumRootCertificate.cer"
-  ```
-
-5. Switch back to Internet Explorer.
-
-6. From the  **adatum-branch-vnet** page, upload the root certificate.
-
-7. Switch back to the Command Prompt window, and type the following command:
+4. From the Command Prompt, run:
 
   ```
-  makecert.exe -n "CN=AdatumClientCertificate" -pe -sk exchange -m 96 -ss My -in "AdatumRootCertificate" -is my -a sha1
+  makecert -sky exchange -r -n "CN=AdatumRootCertificate" -pe -a sha1 -len 2048 -ss My "AdatumRootCertificate.cer"
   ```
 
-8. Switch back to Internet Explorer.
+5. Open the Certificates console targeting the certificate store of the current user.
 
-9. Click the cogwheel in the upper right corner of the Internet Explorer window, click  **Internet Options**, and then on the  **Content** tab, click **Certificates**.
+6. Export the newly created certificate without its private key and in the **Base-64 encoded X.509 (.CER)** format to the **D:\Labfiles\Lab02\Starter\AdatumRootCertificate.cer** file.
 
-10. Verify that the  **AdatumClientCertificate** and ** AdatumRootCertificate** display in the Personal store.
+7. Open **D:\Labfiles\Lab02\Starter\AdatumRootCertificate.cer** in Notepad.
 
-11. Close Certificates, and close Internet Options.
+8. Remove all line breaks between individual lines between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines, so the certificate content is one continuous line.
+
+9. Copy the single line between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines
+
+10. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+
+11. In the **NAME** text box to the left, type **AdatumRootCertificate** and save the change.
+
+12. Switch back to the Command Prompt window.
+
+13. At the Command Prompt, run the following command:
+
+  ```
+  makecert.exe -n "CN=AdatumClientCertificate" -pe -sky exchange -m 96 -ss My -in "AdatumRootCertificate" -is my -a sha1
+  ```
+
+14. Switch back to the Certificates console, verify that both the **AdatumClientCertificate** and ** AdatumRootCertificate** display in the Personal store.
+
+15. Close the Certificates console.
 
 
 
 #### Task 2: Connect to the HQ virtual network
-  
-1. Configure a VPN client by downloading the 64-bit Client VPN Package from the Azure classic portal and installing it on the local client.
 
-2. From the local client, connect by using the newly configured VPN connection, and verify the resulting IP configuration by examining the output of  **ipconfig/all**.
+1. Configure a VPN client by downloading the 64-bit Client VPN Package from the Azure portal and installing it on the local client.
 
-3. Verify the VPN connection by initiating an RDP session to the private IP address of ClassicSrv1 Azure virtual machine
->  **Note:** Note that you could potentially also test connectivity to a file share on ClassicSrv1 Azure virtual machine or ping it by its IP address, however, that would require modifying Windows Firewall settings on ClassicSrv1 in order to allow File and Printer Sharing traffic.
+2. From the local client, connect by using the newly configured VPN connection, and verify the resulting IP configuration by examining the output of **ipconfig /all**.
+
+3. Verify the VPN connection by initiating an RDP session to the private IP address of ARMSrv2 Azure virtual machine. Verify that you can successfully log on to ARMSrv2.
+> **Note:** Note that you could potentially also test connectivity to a file share on ARMSrv2 Azure virtual machine or ping it by its IP address, however, that would require modifying Windows Firewall settings on ARMSrv2 in order to allow File and Printer Sharing traffic.
+
 4. Close the RDP session and disconnect the VPN connection.
 
 
->  **Result**: After completing this exercise, you should have configured and tested a point-to-site VPN connection.
+> **Result**: After completing this exercise, you should have configured and tested a point-to-site VPN connection.
 
 
 ## Exercise 3: Validating virtual network connectivity
   
 ### Scenario
   
- A. Datum now wants to test the new Azure networking configuration, and validate the connectivity between the A. Datum headquarters and the branch virtual network.
->  **Note:** **Important:** Even if you do not complete this exercise, you must ensure that you complete the _Reset the Environment_ task. This task resets your Azure subscription in preparation for later labs and ensures that no unnecessary costs accrue.
+ A. Datum now wants to test the new Azure networking configuration and validate the connectivity between the A. Datum headquarters and the branch virtual network.
+> **Note:** **Important:** Even if you do not complete this exercise, you must ensure that you complete the _Reset the Environment_ task. This task resets your Azure subscription in preparation for later labs and ensures that no unnecessary costs accrue.
 
  The main tasks for this exercise are as follows:
 
 1. Connect to the A. Datum VMs
 
-2. Test TCP/IP connectivity between the sites
+2. Test direct TCP/IP connectivity between the Azure regions
 
 3. Reset the environment
 
@@ -393,40 +381,35 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Connect to the A. Datum VMs
   
-1. Connect to  **ClassicSrv1** via an Remote Desktop Protocol (RDP) session from the Azure classic portal.
+1. Connect to **ClassicSrv1** via an Remote Desktop Protocol (RDP) session from the Azure portal.
 
 2. Sign in by using the following credentials:
 
+  - User name: **Student**
 
-  - User name:  **Student**
-
-  - Password:  **Pa$$w0rd123**
+  - Password: **Pa55w.rd1234**
 
 
-1. Minimize the  **ClassicSrv1** RDP session.
+1. Minimize the **ClassicSrv1** RDP session.
 
-2. Connect to  **ARMSrv2** via an RDP session from the Azure portal.
+2. Connect to **ARMSrv2** via an RDP session from the Azure portal.
 
 3. Sign in by using the following credentials:
 
 
-  - User name:  **Student**
+  - User name: **Student**
 
-  - Password:  **Pa$$w0rd123**
+  - Password: **Pa55w.rd1234**
 
 
 
-#### Task 2: Test TCP/IP connectivity between the sites
+#### Task 2: Test direct TCP/IP connectivity between the Azure regions
   
-1. From the ARMSrv2 RDP session, if prompted whether to enable network discovery, click  **No**
+1. From the ARMSrv2 RDP session, if prompted whether to enable network discovery, click **No**
 
-2. Turn  **Windows Firewall** off for the **Public** profile.
+2. Turn **Windows Firewall** off for the **Public** profile.
 
-3. Switch to the  **ClassicSrv1** RDP session.
-
-4. Turn  **Windows Firewall** off for the **Public** profile.
-
-5. From the  **ClassicSrv1** RDP session, ping **ARMSrv2** **(10.0.2.4)** by its IP address and verify that you are receiving a response.
+3. From the **ClassicSrv1** RDP session, run the **Test-Connection** Windows PowerShell cmdlet targeting the private IP address **(10.0.0.4)** of **ARMSrv2** and verify that you are receiving a response.
 
 
 
@@ -434,7 +417,7 @@ The main tasks for this exercise are as follows:
   
 1. Close all open applications without saving any files.
 
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run as administrator**. In the User Account Control dialog, click  **Yes**.
+2. On the taskbar, right-click **Windows PowerShell**, and then click **Run as administrator**. In the User Account Control dialog, click **Yes**.
 
 3. Type the following command, and then press Enter:
 
@@ -442,18 +425,18 @@ The main tasks for this exercise are as follows:
   Reset-Azure
   ```
 
-4. When prompted, sign in by using the Microsoft account associated with your Azure subscription.
+4. When prompted, sign in (twice) by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
 
 5. If you have multiple Azure subscriptions, select the one you want to target with the script.
 
-6. When prompted for confirmation, type  **y**.
+6. When prompted for confirmation, type **y**.
 
->  **Note:** This script might remove Azure services in your subscription. Therefore, we recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+> **Note:** This script might remove Azure services in your subscription. Therefore, we recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
 > The script will take 5-10 minutes to reset your Microsoft Azure environment, ready for the next lab. 
 > The script removes all storage, VMs, virtual networks and gateways, cloud services, and resource groups.
->  **Important**: The script might not be able to get exclusive access to a storage account to delete it (you will see an error, if this occurs). If you find objects remaining after the reset script is complete, you can re-run  **Reset-Azure** script, or use the full Azure Management Portal to manually delete all the objects in your Azure subscription, with the exception of the default directory.
+> **Important**: The script might not be able to get exclusive access to a storage account to delete it (you will see an error, if this occurs). If you find objects remaining after the reset script is complete, you can re-run **Reset-Azure** script, or use the full Azure Management Portal to manually delete all the objects in your Azure subscription, with the exception of the default directory.
 
->  **Result**: After completing this exercise, you should have verified that VMs can communicate between the virtual networks.
+> **Result**: After completing this exercise, you should have verified that VMs can communicate between the virtual networks.
 
 
 
@@ -461,7 +444,7 @@ The main tasks for this exercise are as follows:
 What are the key steps for configuring a point-to-site VPN?
 
 **Question** 
-How can you enable communications between VMs that are created with the Azure classic deployment model and VMs that are created with the ARM model?
+How can you enable communications between Azure VMs that were created with the Azure classic deployment model and Azure VMs that were created with the Azure Resource Manager deployment model if they reside in different Azure regions?
 
 
 ©2016 Microsoft Corporation. All rights reserved.
