--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- Now that you identified basic deployment options of IaaS v2 VMs, you need to start testing more advanced configuration features. As part of these tests, you need to place the two web servers, which will host the A. Datum ResDev application, in a load-balanced availability set. You will also install IIS on these virtual machines by using the VM Agent DSC extension. In addition, to enhance Azure IaaS virtual machine storage, you will set up Storage Spaces-based volumes.
+ Now that you identified basic deployment options of Azure VMs, you need to start testing more advanced configuration features. As part of these tests, you need to place the two web servers, which will host the A. Datum ResDev application, in a load-balanced availability set. You will also install IIS on these virtual machines by using the VM Agent DSC extension. In addition, to enhance Azure VM storage, you will set up Storage Spaces-based volumes. You also want to test the managed disks functionality.
 
 
 ### Objectives
@@ -21,18 +21,18 @@
   
  Estimated Time: 60 minutes
 
-Virtual Machine:  **20533C-MIA-CL1**
+Virtual Machine: **20533C-MIA-CL1**
 
- User name:  **Student**
+ User name: **Student**
 
- Password:  **Pa$$w0rd**
+ Password: **Pa55w.rd**
 
 
 ## Exercise 1: Configuring availability
   
 ### Scenario
   
- You need to redeploy the ResDev app to leverage Azure availability capabilities. You will start by provisioning ResDevWebVM1 and ResDevWebVM2 Azure IaaS v2 VMs into an availability set named ResDevWebAS. Next, you will create an Azure load balancer and add both virtual machines to its backend pool.
+ You need to redeploy the ResDev app to leverage Azure resiliency capabilities. You will start by provisioning ResDevWebVM1 and ResDevWebVM2 Azure VMs into an availability set named ResDevWebAS. Next, you will create an Azure load balancer and add both virtual machines to its backend pool.
 
 The main tasks for this exercise are as follows:
 
@@ -46,101 +46,102 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, open Internet Explorer and navigate to the Azure portal.
 
-2. When prompted, sign in with an account that is either a Service Administrator or Co-Admin in the subscription you are using for this lab.
+2. When prompted, sign in using the Microsoft account that is either the Service Administrator or Co-administrator of your subscription.
 
 3. From the Azure portal, create a new availability set with the following settings:
 
-
   - Name: **ResDevWebAS**
 
-  - Fault domains:  **3**
->  **Note:** You can decrease the value to 2, but not increase it.
-  - Update domains:  **5**
->  **Note:** The number of update domains can vary between 5 and 20.
-  - Subscription:  **_Your Azure subscription_**
+  - Subscription: **_The Azure subscription you intend to use for this lab_**.
 
-  - Resource group name:  **ResDevWebRG**
+  - Resource group name: click **Create new** and then click **20533C0401-LabRG**
 
-  - Location:  **_The Azure region closest to the location of your lab computer_**
-  
-  - Managed: **No**
+  - Location: **_The Azure region closest to the location of your lab computer_**.
+
+  - Fault domains: **3**
+> **Note:** You can decrease the value to 2, but not increase it.
+
+  - Update domains: **5**
+> **Note:** The number of update domains can vary between 5 and 20.
+
+  - Managed: **Yes**
 
 
-4. From the Azure portal, create a new _Windows Server 2012 R2 Datacenter_ virtual machine with the following settings:
+1. From the Azure portal, create a new virtual machine with the following settings:
 
 
   - Name: **ResDevWebVM1**
-  
-  - Disk type: **HDD**
 
-  - User name:  **Student**
+  - VM disk type: **HDD**
 
-  - Password:  **Pa$$w0rd1234**
+  - User name: **Student**
 
-  - Subscription:  **_Your Azure subscription_**
+  - Password: **Pa55w.rd1234**
 
-  - Resource group:  **ResDevWebRG**
+  - Subscription: **_The same Azure subscription you used in the previous task_**.
 
-  - Location:  **_The same location you chose for the availability set_**
+  - Resource group: **20533C0401-LabRG**
 
-  - Size:  **A1 Standard**
-  
-  - Use managed disk: **No**
+  - Location: **_The same location you chose for the availability set_**.
 
-  - Storage account:  **_Accept the default_**
+  - Size: **A1 Standard**
 
-  - Virtual network:  **ResDevWebVNet**
+  - Use managed disks: *Yes**
 
-  - Subnet:  **_Accept the default_**
+  - Virtual network: _Accept the default name **20533C0401-LabRG-vnet** and settings_
 
-  - Public IP address:  **ResDevWebVM1PIP**
+  - Subnet: _Accept the default_.
 
-  - Network security group:  **ResDevWebNSG1**
+  - Public IP address: _Accept the default name **ResdevWebVM1-ip**_
 
-  - Monitoring:  **Disabled**
+  - Network security group: _Accept the default name **ResDevWebVM1-nsg**_
 
-  - Availability set:  **ResDevWebAS**
+  - Availability set: **ResDevWebAS**
 
+  - Boot diagnostics: **Disabled**
 
-5. From the Azure portal, create a new  _Windows Server 2012 R2 Datacenter_ virtual machine with the following settings:
+  - Guest OS diagnostics: **Disabled**
 
 
-  - Name:  **ResDevWebVM2**
-  
-  - Disk type: **HDD**
-
-  - User name:  **Student**
-
-  - Password:  **Pa$$w0rd1234**
-
-  - Subscription:  **_Your Azure subscription_**
-
-  - Resource group:  **ResDevWebRG**
-
-  - Location:  **_The same location you chose for the availability set_**
-
-  - Size:  **A1 Standard**
-
-  - Use managed disks: **No**
-
-  - Storage account:  **_Accept the default_**
-
-  - Virtual network:  **ResDevWebVNet**
-
-  - Subnet:  **_Accept the default_**
-
-  - Public IP address:  **ResDevWebVM2PIP**
-
-  - Network security group:  **ResDevWebNSG2**
-
-  - Monitoring:  **Disabled**
-
-  - Availability set:  **ResDevWebAS**
+1. From the Azure portal, create a new virtual machine with the following settings:
 
 
-6. From the Azure portal, display the blade of the  **ResDevWebAS** availability set. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Point out that each VM has a unique fault domain and update domain.
+  - Name: **ResDevWebVM2**
 
-7. Leave the instance of Internet Explorer with the Azure portal open.
+  - VM disk type: **HDD**
+
+  - User name: **Student**
+
+  - Password: **Pa55w.rd1234**
+
+  - Subscription: **_The same Azure subscription you used in the previous task_**.
+
+  - Resource group: **20533C0401-LabRG**
+
+  - Location: **_The same location you chose for the availability set_**.
+
+  - Size: **A1 Standard**
+
+  - Use managed disks: *Yes**
+
+  - Virtual network: **20533C0401-LabRG-vnet**
+
+  - Subnet: _Accept the default_.
+
+  - Public IP address: _Accept the default name **ResdevWebVM2-ip**_
+
+  - Network security group: _Accept the default name **ResDevWebVM2-nsg**_
+
+  - Availability set: **ResDevWebAS**
+
+  - Boot diagnostics: **Disabled**
+
+  - Guest OS diagnostics: **Disabled**
+
+
+1. From the Azure portal, display the blade of the **ResDevWebAS** availability set. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Point out that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
+
+2. Leave the instance of Internet Explorer with the Azure portal open.
 
 
 
@@ -149,67 +150,66 @@ The main tasks for this exercise are as follows:
 1. On MIA-CL1, in the Azure portal within the Internet Explorer window, create a new load balancer with the following settings: 
 
 
-  - Name:  **ResDevWebLB**
+  - Name: **ResDevWebLB**
 
-  - Type:  **Public**
+  - Type: **Public**
 
-  - Public IP address:  **_Create new_** dynamic address named **ResDevWebLBIP**
+  - Public IP address: **_Create a new dynamic address named ResDevWebLB-ip_**.
 
-  - Subscription:  **_Your Azure subscription_**
+  - Subscription: **_The same Azure subscription you used in the previous task_**.
 
-  - Resource group:  **ResDevWebRG**
+  - Resource group: Click **Use existing** and, in the drop-down list, click **20533C0401-LabRG**
 
-  - Location:  **_The same location you chose for the availability set_**
-
-  - Pin to dashboard:  **Unchecked**
+  - Location: **_The same location you chose for the availability set_**.
 
 
-2. Wait for the deployment to complete. This should take a few seconds.
+1. Wait for the deployment to complete. This should take a few seconds.
 
-3. From the Azure portal, add a backend pool named  **ResDevWebLBPool** to the newly created load balancer consisting of the **ResDevWebAS** availability set and both virtual machines that are part of it (ResDevWebVM1 and ResDevWebVM2).
+2. From the Azure portal, add a backend pool named **ResDevWebLBPool** to the newly created load balancer consisting of the **ResDevWebAS** availability set and both virtual machines that are part of it (ResDevWebVM1 and ResDevWebVM2).
 
-4. Add a probe to the load balancer with the following settings:
-
-
-  - Name:  **ResDevWebProbe80**
-
-  - Protocol:  **HTTP**
-
-  - Port:  **80**
-
-  - Path:  **/**
-
-  - Interval:  **5**
-
-  - Unhealthy threshold:  **2**
+3. Add a probe to the load balancer with the following settings:
 
 
-5. Add a load balancer rule to the newly created load balancer with the following settings:
+  - Name: **ResDevWebProbe80**
+
+  - Protocol: **HTTP**
+
+  - Port: **80**
+
+  - Path: **/**
+
+  - Interval: **5**
+
+  - Unhealthy threshold: **2**
 
 
-  - Name:  **ResDevWebLBRule80**
-
-  - Protocol:  **TCP**
-
-  - Port:  **80**
-
-  - Backend Pool:  **ResDevWebLBPool**
-
-  - Probe:  **ResDevWebProbe80**
-
-  - Backend port:  **80**
-
-  - Session persistence:  **None**
-
-  - Idle timeout:  **4**
-
-  - Floating IP:  **Disabled**
+1. Add a load balancer rule to the newly created load balancer with the following settings:
 
 
-6. Refresh the Azure portal. In the  **Setting** blade of ResDevWebLB, you should be able to identify its public IP address. Note that at this point you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings. You will change these settings later in this lab.
+  - Name: **ResDevWebLBRule80**
+
+  - Frontend IP address: **LoadBalancerFrontEnd**
+
+  - Protocol: **TCP**
+
+  - Port: **80**
+
+  - Backend port: **80**
+
+  - Backend Pool: **ResDevWebPool (2 virtual machines)**
+
+  - Probe: **ResDevWebProbe80 (HTTP:80)**
+
+  - Session persistence: **None**
+
+  - Idle timeout: **4**
+
+  - Floating IP (direct server return): **Disabled**
+
+1. On the ResDevWebLB blade, click **Overview**. In the **Essentials** section, you should be able to identify the public IP address assigned to the load balancer. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings and the operating system-level firewall. You will change these settings later in this lab.
 
 
->  **Result**: After completing this exercise, you should have created an availability set for Azure IaaS v2 virtual machines and configured them up as a load balanced pair.
+> **Result**: After completing this exercise, you should have created an availability set for Azure IaaS v2 virtual machines and configured them up as a load balanced pair.
 
 
 ## Exercise 2: Implementing DSC
@@ -228,17 +228,17 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Install and configure IIS by using DSC and Windows PowerShell
   
-1. On MIA-CL1, start File Explorer and browse to the  **D:\Labfiles\Lab04\Starter** folder.
+1. On MIA-CL1, start File Explorer and browse to the **D:\Labfiles\Lab04\Starter** folder.
 
-2. In the D:\Labofiles\Lab04 folder, right-click on the  **IISInstall.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE**.
+2. In the D:\Labofiles\Lab04\Starter folder, right-click on the **IISInstall.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE**.
 
-3. Review the content of the file. Note that this is a DSC configuration that controls the installation of the Windows Server 2012 R2 Web-Server role. 
+3. Review the content of the file. Note that this is a DSC configuration that controls the installation of the Windows Server 2016 Web-Server role. 
 
 4. Close the Windows PowerShell ISE window.
 
-5. In the File Explorer, right click on the  **D:\Labfiles\Lab04\Starter\DeployAzureDSC.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE** window
+5. In the File Explorer, right click on the **D:\Labfiles\Lab04\Starter\DeployAzureDSC.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE** window with the current directory set to **D:\Labfiles\Lab04\Starter**.
 
-6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first publishes the DSC configuration defined in the  **Install.ps1** file to the same storage account hosting the VHD files of the two virtual machines (placing it in the default DSC container named **windows-powershell-dsc**), stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive.
+6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first creates a new storage account and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
 
 7. Start the execution of the script. When prompted, sign in with the username and the password of an account that is either a Service Administrator or a Co-Admin of your Azure subscription. Wait until the script completes. 
 
@@ -246,11 +246,11 @@ The main tasks for this exercise are as follows:
 
 9. Initiate a Remote Desktop session to ResDevWebVM1 from the Azure portal.
 
-10. When prompted to enter credentials to connect, type  **Student** as the user name and **Pa$$w0rd1234** as the password.
+10. When prompted to enter credentials to connect, type **Student** as the user name and **Pa55w.rd** as the password.
 
-11. Once you establish a Remote Desktop session to the VM, in the  **Server Manager** window, verify that IIS appears in the left pane, indicating that the Web Server (IIS) server role is installed.
+11. Once you establish a Remote Desktop session to the VM, in the **Server Manager** window, verify that IIS appears in the left pane, indicating that the Web Server (IIS) server role is installed.
 
-12. Repeat steps 7 through 9 for the other virtual machine, ResDevWebVM2.
+12. Repeat steps 9 through 11 for the other virtual machine, ResDevWebVM2.
 
 13. After completing the tasks, switch back to your lab computer MIA-CL1. Leave both Remote Desktop sessions open.
 
@@ -258,59 +258,55 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Test the DSC configuration and virtual machine availability
   
-1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG1** security group with the following settings:
+1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the **ResDevWebVM1** security group with the following settings:
 
 
-  - Name:  **allow-http**
+  - Name: **allow-http**
 
-  - Priority:  **1100**
+  - Priority: **1010**
 
-  - Source:  **Any**
-  
-  - Service: **Custom**
+  - Source: **Any**
 
-  - Protocol:  **TCP**
-
-  - Port range:  **80**
-
-  - Action:  **Allow**
-
-
-2. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG2** security group with the following settings:
-
-
-  - Name:  **allow-http**
-
-  - Priority:  **1100**
-
-  - Source:  **Any**
-  
   - Service: **HTTP**
 
-  - Action:  **Allow**
+  - Action: **Allow**
 
 
-3. From the Azure portal, identify the IP address of the  **ResDevWebLB** load balancer.
+1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the **ResDevWebVM2** security group with the following settings:
 
-4. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session and browse to this IP address.
 
-5. Verify that you can access the default IIS webpage and close the InPrivate Browsing session.
+  - Name: **allow-http**
 
-6. From the Remote Desktop session window, stop the  **World Wide Web Publishing Service** service on both **ResDevWebVM1** and **ResDevWebVM2**.
+  - Priority: **1010**
 
-7. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. 
+  - Source: **Any**
 
-8. In the new InPrivate Browsing window, delete browsing history.
+  - Service: **HTTP**
 
-9. Browse to the IP address of the  **ResDevWebLB** load balancer again and verify that you can no longer access the default IIS webpage.
+  - Action: **Allow**
 
-10. From the Remote Desktop session window, start the  **World Wide Web Publishing Service** service on **ResDevWebVM1**.
 
-11. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage.
+1. From the Azure portal, identify the IP address of the **ResDevWebLB** load balancer.
 
->  **Note:** Optionally you can repeat this sequence, but this time stopping the **World Wide Web Publishing Service** on ResDevWebVM1 and starting it on ResDevWebVM2. As long as the service is running on at least one of the two virtual machines, you should be able to access the webpage.
+2. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session and browse to this IP address.
 
->  **Result**: After completing this exercise, you should have implemented DSC.
+3. Verify that you can access the default IIS webpage and close the InPrivate Browsing session.
+
+4. From the Remote Desktop sessions to two Azure VMs, stop the **World Wide Web Publishing Service** service on both **ResDevWebVM1** and **ResDevWebVM2**.
+
+5. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. 
+
+6. In the new InPrivate Browsing window, delete browsing history.
+
+7. Browse to the IP address of the **ResDevWebLB** load balancer again and verify that you can no longer access the default IIS webpage.
+
+8. From the Remote Desktop session window, start the **World Wide Web Publishing Service** service on **ResDevWebVM1**.
+
+9. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage.
+
+> **Note:** Optionally you can repeat this sequence, but this time stopping the **World Wide Web Publishing Service** on ResDevWebVM1 and starting it on ResDevWebVM2. As long as the service is running on at least one of the two virtual machines, you should be able to access the webpage.
+
+> **Result**: After completing this exercise, you should have implemented DSC.
 
 
 ## Exercise 3: Implementing Storage Space-based volumes
@@ -331,21 +327,19 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Attach VHDs to an Azure VM
   
-1. On MIA-CL1, from the Azure portal in the Internet Explorer window, attach two data disks to the ResDevWebVM1 virtual machine with the following settings:
+1. On MIA-CL1, from the Azure portal in the Internet Explorer window, attach two managed data disks named **ResDevWebVM1dd01** and **ResDevWebVM1dd02** to the ResDevWebVM1 virtual machine with the following settings:
 
 
-  - Name:  **_Accept the default_**
+  - Resource group: **20533C0401-LabRG**
 
-  - Type:  **Standard**
+  - Account type: **Standard_LRS**
 
-  - Size:  **1023**
+  - Source type: **None (empty disk)**
 
-  - Location:  **_Note that this cannot be changed since the location of the VM determines the location of its disks_**
-
-  - Host caching:  **None**
+  - Size: **1023**
 
 
-2. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
+1. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
 
 
 
@@ -353,9 +347,9 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, switch to the Remote Desktop session to ResDevWebVM1.
 
-2. While connected to ResDevWebVM1, from the Server Manager window, create a storage pool named  **StoragePool1** consisting of two newly attached disks.
+2. While connected to ResDevWebVM1, from the Server Manager window, create a storage pool named **StoragePool1** consisting of two newly attached disks.
 
-3. From the Server Manager window, create a new virtual disk named  **VirtualDisk1** using **StoragePool1** with the **Simple** storage layout, the **Fixed** provisioning type, and the maximum size.
+3. From the Server Manager window, create a new virtual disk named **VirtualDisk1** using **StoragePool1** with the **Simple** storage layout, the **Fixed** provisioning type, and the maximum size.
 
 4. From the Server Manager window, create a new 2 TB volume as drive F formatted with NTFS and a default allocation unit.
 
@@ -367,7 +361,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Reset the environment
   
-1. Launch  **Windows PowerShell** as Administrator.
+1. Launch **Windows PowerShell** as Administrator.
 
 2. From the Windows PowerShell prompt, run:
 
@@ -378,18 +372,16 @@ The main tasks for this exercise are as follows:
 3. When prompted (twice), sign in using the Microsoft account associated with your Azure subscription.
 
 4. If you have multiple Azure subscriptions, select the one you want to target by the script.
->  **Note:** This script will remove Azure services in your subscription. We, therefore, recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+> **Note:** This script will remove Azure services in your subscription. We, therefore, recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
 > The script will take 5 to 10 minutes to reset your Microsoft Azure environment, before it is ready for the next lab.
 > The script removes all storage, VMs, virtual networks, cloud services, and resource groups.
-5. When prompted for confirmation, type  **y**.
+5. When prompted for confirmation, type **y**.
 
-
->  **Result**: After completing this exercise, you should have implemented Storage Spaces based volumes.
-
+> **Result**: After completing this exercise, you should have implemented Storage Spaces based volumes.
 
 
 **Question** 
-Why would you use Storage Spaces in an IaaS virtual machine considering that Azure already provides highly available storage built into a storage account?
+Why would you use Storage Spaces in an Azure VM?
 
 
 ©2016 Microsoft Corporation. All rights reserved.
@@ -397,5 +389,3 @@ Why would you use Storage Spaces in an IaaS virtual machine considering that Azu
 The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
-
-  
