--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -3,8 +3,7 @@
   
 ### Scenario
   
- The IT department at A. Datum Corporation uses an asset management application to track IT assets such as computer hardware and peripherals. The application stores images of asset types and invoices for purchases of specific assets. As part of A. Datum's evaluation of Azure, you need to test Azure storage features as part of your plan to migrate the storage of these images and invoice documents to Azure. A. Datum also wants to evaluate Azure File storage for providing SMB 3.0 shared access to installation media for the asset management application client software. Currently, corporate file servers host the media. Additionally, A. Datum wants to evaluate the ability of Azure Backup to protect the content of on-premises computers and Azure IaaS virtual machines.
-
+ The IT department at A. Datum Corporation uses an asset management application to track IT assets such as computer hardware and peripherals. The application stores images of asset types and invoices for asset purchases As part of A. Datum's evaluation of Azure, you need to test migration of these images and invoice documents to Azure storage. A. Datum also wants to evaluate Azure File storage for providing SMB 3.0 shared access to invoices. Currently, corporate file servers host this content. Additionally, A. Datum wants to evaluate the ability of Azure Backup to protect files and folders of on-premises computers.
 
 ### Objectives
   
@@ -16,25 +15,23 @@
 
 - Protect data with Azure Backup.
 
-
 ### Lab Setup
   
  Estimated Time: 60 minutes
 
-Virtual machine:  **20533C-MIA-CL1**
+ Virtual machine: **20533C-MIA-CL1**
 
- User name:  **Student**
+- User name: **Student**
 
- Password:  **Pa$$w0rd**
+- Password: **Pa55w.rd**
 
  Before starting this lab, ensure that you have performed the "Preparing the environment" demonstration tasks at the beginning of the first lesson in this module and that the setup script has completed.
-
 
 ## Exercise 1: Creating and configuring Azure Storage
   
 ### Scenario
   
- A. Datum currently stores images for IT assets as files in a local folder. As part of your Azure evaluation, you want to test storing these images as blobs in Azure so that a new Azure-based version of the asset management application can easily access them.
+A. Datum currently stores images for IT assets on the on-premises file servers. As part of your Azure evaluation, you want to test storing these images as blobs in Azure storage so that a new Azure-based version of the asset management application can easily access them.
 
 The main tasks for this exercise are as follows:
 
@@ -44,51 +41,44 @@ The main tasks for this exercise are as follows:
 
 3. Use AzCopy to upload blobs
 
-
-
 #### Task 1: Create a storage account
   
-1. Ensure that you are signed in to the MIA-CL1 virtual machine as  **Student** with the password **Pa$$w0rd** and that the setup script that you ran in the "Preparing the environment" demonstration has completed.
+1. Ensure that you are signed in to the MIA-CL1 virtual machine as **Student** with the password **Pa55w.rd** and that the setup script that you ran in the "Preparing the environment" demonstration has completed.
 
-2. Use Internet Explorer to sign in to the Azure portal at  **https://portal.azure.com** by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+2. Use Internet Explorer to sign in to the Azure portal by using the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription.
 
 3. Create a new storage account with the following settings:
 
+  - Name: a valid, unique name consisting of between 3 and 24 lower case characters or digits.
 
-  - Name: Enter a valid, unique name consisting of between 3 and 24 lower case characters or digits.
+  - Deployment model: **Resource Manager**
 
-  - Deployment model: Classic
-  
-  - Account kind: General purpose
+  - Account kind: **General purpose**
 
-  - Performance: Standard
+  - Performance: **Standard**
 
-  - Replication: Geo-redundant storage (GRS)
+  - Replication: **Locally-redundant storage (LRS)**
 
-  - Subscription:  _Your Azure subscription_
+  - Storage service encryption: **Disabled**
 
-  - Resource group: make sure that  **Create new** radio button is selected and then type **Asset-Management** as the name of the *Resource Group*.
+  - Subscription: _the name of your Azure subscription_
 
-  - Location: Select the Azure region nearest to you
+  - Resource group: ensure that **Create new** is selected and, in the textbox below, type **20533C0602-LabRG**.
 
-  - Pin to dashboard: Clear the check box
+  - Location: _the same Azure region that you chose when runnng **Setup-Azure** at the beginning of this module_
 
+  - Pin to dashboard: _clear the check box_
 
-1. After the storage account creates, add a blob container named  **asset-images** with private access.
-
-2. Start the Windows PowerShell ISE as an administrator.
-
-3. Open the  **ExampleCommands.ps1** code snippets in the **D:\Labfiles\Lab06\Starter** folder, and then record the name of the storage account that you created in the previous task.
-
-4. Leave the Internet Explorer window open. You will use it later in this lab.
-
+4. After the storage account creates, add a blob container named **asset-images** with private access.
 
 
 #### Task 2: Install AzCopy
   
-1. Download and install AzCopy from  **http://aka.ms/AzCopy**. Note that this page also includes documentation and examples for using AzCopy.
+1. Download and install AzCopy from **http://aka.ms/AzCopy**. Note that this page also includes documentation and examples for using AzCopy.
 
-2. Add the AzCopy installation path  **C:\Program Files (x86)\Microsoft SDKs\Azure\AzCopy** to the _Path_ system environment variable.
+2. Start Windows PowerShell ISE as Administrator.
+
+3. In the console pane of Windows PowerShell ISE, change the current directory by running `Set-Location -Path 'C:\Program Files (x86)\Microsoft SDKs\Azure\AzCopy'`.
 
 3. Test the installation by running the following command at a command prompt: 
 
@@ -96,33 +86,38 @@ The main tasks for this exercise are as follows:
   AzCopy /?
   ```
 
-4. Keep the Command Prompt window open for the next task.
+4. Keep the Windows PowerShell ISE window open for the next task.
 
 
 
 #### Task 3: Use AzCopy to upload blobs
   
-1. On the Azure portal, identify the keys for your storage account, and then copy the primary access key to the Clipboard.
 
-2. In the Windows PowerShell ISE window, use AzCopy to copy all of the .png files in the  **D:\Labfiles\Lab06\Starter\asset-images** folder to the **asset-images** container in your storage account. Use the code snippets in the **ExampleCommands.ps1** script in the **D:\Labfiles\Lab06\Starter\** folder to help you during this exercise. Ensure that you copy your commands to the Command Prompt window, and do not try to run them as Windows PowerShell commands. This involves replacing all placeholders in the existing script with the corresponding values that represent your storage account name and primary access key, and then running the following command:
-
+1. In the Windows PowerShell ISE window, type the following in the script pane:
   ```
-  AzCopy /Dest:https://<your storage account>.blob.core.windows.net/asset-images /destkey:<your primary access key> /Source:D:\Labfiles\Lab06\Starter\asset-images
+  .\AzCopy /Dest:https://<Your-storage-account>.blob.core.windows.net/asset-images /destkey:<Your-access-key> /Source:D:\Labfiles\Lab06\Starter\asset-images
   ```
 
-3. Wait for the command to complete, and then view the file transfer information that displays.
+2. In the Azure portal, copy the name of the Storage account you created earlier in this exercise. 
 
-4. Close the Command Prompt window.
+3. In the script pane of the Windows PowerShell ISE, replace the `<Your-storage-account>` entry with the storage account name you copied from the Azure portal.
 
+4. In the Azure portal, copy the first access key of the Storage account. 
 
->  **Result**: At the end of this exercise, you should have created a new Azure storage account with a container named "asset-images."
+5. In the script pane of the Windows PowerShell ISE, replace the `<Your-access-key>` entry with the storage account key you copied from the Azure portal.
+
+6. Execute the command in the script pane and wait for the command to complete. Review the file transfer information.
+
+7. In the Azure portal, navigate to the **asset-images** container blade and verify that the container contains six blobs.
+
+> **Result**: At the end of this exercise, you should have created a new Azure storage account with a container named **asset-images** and copied files from your local computer to that container by using the **AzCopy** utility.
 
 
 ## Exercise 2: Using Azure File storage
   
 ### Scenario
   
- A. Datum currently stores invoices for IT assets in the Microsoft Word format in a local folder. As part of your evaluation of Azure, you want to test the uploading of these files to a file share in your Azure storage account to make it easier for users to access them from VMs in Azure.
+ A. Datum currently stores invoices for IT assets on the on-premises file servers. As part of your evaluation of Azure, you want to test an upload of these files to a file share in your Azure storage account.
 
 The main tasks for this exercise are as follows:
 
@@ -134,136 +129,161 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Create a file share and upload files
   
-1. Use Windows PowerShell ISE to create a Windows PowerShell script that:
+1. Switch to the Windows PowerShell ISE window and run `Add-AzureRmAccount`. When prompted, sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Microsoft Azure subscription. 
 
+2. From the Windows PowerShell ISE, open **D:\Labfiles\Lab06\Starter\New-FileShare_20533C06.ps1**.
 
-  - Uses the  **Get-AzureStorageKey** cmdlet to retrieve the access key for your storage account.
+3. Review the script, noting that it:
 
-  - Uses the  **New-AzureStorageContext** cmdlet to create a storage context that connects to your storage account by using the access key.
+  - Sets the values of variables named **$shareName** and **$directoryName** for the file share and the directory to create in the Azure Storage account
 
-  - Uses the  **New-AzureStorageShare** cmdlet to create a file share named "assets."
+  - Uses the **Get-AzureRmStorageAccountKey** cmdlet to retrieve the access key for your storage account.
 
-  - Uses the  **New-AzureStorageDirectory** cmdlet to create a folder named "invoices" in the file share.
+  - Uses the **New-AzureStorageContext** cmdlet to create a security context for connections to the target storage account based on the key you retrieved
 
-  - Uses the  **Set-AzureStorageFileContent** cmdlet to upload each file in the D:\Labfiles\Lab06\Starter\invoices folder to the invoices folder in the file share.
+  - Uses the **New-AzureStorageShare** cmdlet to create an Azure Storage account file share
 
->  **Note:** You can edit **FileShare.ps1** in the **D:\Labfiles\Lab06\Starter** folder if you prefer not to write the script from scratch.
+  - Uses the **New-AzureStorageDirectory** cmdlet to create a directory in the share
 
-1. Run the script to upload the files.
+  - Sets the location of the folder hosting source files to be copied to the Azure Storage file share directory
 
-2. Observe the script as it runs, and then view the output. When you finish, close Windows PowerShell ISE without saving any changes.
+  - Loops through the files in the source folder and uses the **Set-AzureStorageFileContent** cmdlet to copy each of them the folder in the Azure file share.
+
+4. Run the script to upload the files.
+
+5. Observe the script as it runs, and then view the output. When you finish, close Windows PowerShell ISE.
 
 
 
 #### Task 2: Access a file share from a VM
   
-1. Connect to the AdatumSvr1 VM in your Azure subscription by using the following credentials; the setup script that you ran earlier in the module created this VM:
+1. Connect to the AdatumSvr06 VM in your Azure subscription via Remote Desktop by using the following credentials:
 
+  - User name: **Student**
+  - Password: **Pa55w.rd1234**
 
-  - User name:  **Student**
+2. Once connected, on AdatumSvr06, turn off **IE Enhanced Security Configuration** for administrators. 
 
-  - Password:  **Pa$$w0rd123**
+3. Use Internet Explorer to navigate to the Azure portal and, when prompted, sign in by using the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription.
 
+4. In the Azure portal, browse to the storage account created in the previous exercise, and copy the `net use` command that needs to be run in order to connect to its file share you created in the previous task. 
 
-1. In the Remote Desktop session to AdatumSvr1, turn off  **IE Enhanced Security Configuration** for administrators. Use Internet Explorer to sign in to the Azure portal, and then copy the primary access key for your storage account to the Clipboard.
+5. In the Remote Desktop session, start Windows PowerShell ISE and paste the `net use` command into the script window. 
 
-2. At an administrative command prompt, type the following command to map a network drive to the assets file share in Azure storage. Replace both instances of  _storage_account_ with the name of your storage account, and then paste your access key in place of _access_key_.
+6. Modify the command you copied so by removing leading ` >` and replace `[drive letter]` with `*`.
+
+7. Use the Azure portal to copy the access key of the storage account and update the `net use` command by replacing `[storage account access key]` with the access key you copied.
+
+8. In Windows PowerShell ISE, execute the command and Verify it completed successfully by creating a **Z:** drive mapping. 
+
+9. In the Command Prompt window, enter the following command to view the contents of the invoices folder in drive Z:, which is now mapped to the assets file share that you created in the previous task:
 
   ```
-  net use z: \\storage_account.file.core.windows.net\assets /u:storage_account access_key
+  Get-ChildItem -Path 'Z:\invoices'
   ```
 
-3. In the Command Prompt window, enter the following command to view the contents of the invoices folder in drive Z, which is now mapped to the assets file share that you created in the previous task:
+10. Verify that invoices are listed.
 
-  ```
-  dir z:\invoices
-  ```
-
-4. Verify that three invoice files are listed.
-
-5. Sign out of the AdatumSvr1 VM to end the remote desktop session.
+11. Sign out of the AdatumSvr06 VM to end the remote desktop session.
 
 
->  **Result**: At the end of this exercise, you should have created a file share named "assets" that contains a folder named "invoices." This folder will contain three invoice documents and will be accessible on the AdatumSvr1 virtual machine (VM).
+> **Result**: At the end of this exercise, you should have created an Azure storage account file share named **assets** that contains a folder named **invoices** with copies of invoice documents. You should have also mapped a drive from an Azure VM to the Azure storage account file share.
 
 
 ## Exercise 3: Protecting data with Azure Backup
   
 ### Scenario
   
- A. Datum currently uses an on-premises backup solution. As part of your Azure evaluation, you want to test the protection of on-premises master copies of your image files and invoices by backing them up to the cloud. To accomplish this, you intend to use Azure Backup.
+ A. Datum currently uses an on-premises backup solution. As part of your Azure evaluation, you want to test protection of on-premises asset image files and invoices by backing them up to the cloud. To accomplish this, you intend to use Azure Backup.
 
 The main tasks for this exercise are as follows:
 
-1. Create a backup vault
+1. Create a recovery services vault
 
-2. Obtain vault credentials 
+2. Configure the vault for on-premises backup
 
-3. Install and configure the Azure Backup agent
+3. Install and configure the Azure Recovery Services Agent
 
 4. Create a backup schedule
 
 5. Run a backup
 
-6. Reset the environment
+6: Stop backups and delete the Azure Recovery services vault
+
+7. Reset the environment
 
 
-
-#### Task 1: Create a backup vault
+#### Task 1: Create a recovery services vault
   
-1. In Internet Explorer, open the Azure classic portal **https://manage.windowsazure.com/**.
+1. In Internet Explorer, open the Azure portal.
 
-2. Create a new backup vault in your closest region.
+2. Create a new recovery services vault with the following settings:
+
+  - Name: **adatumvault06**
+
+  - Subscription: _the name of your Azure subscription_
+
+  - Resource group: _create a new resource group named **20533C0603-LabRG**_
+
+  - Location: _the same Azure region that you chose when runnng **Setup-Azure** at the beginning of this module_
+
+  - Pin to dashboard: _Ensure that the check box is cleared_
+
+  Wait until the vault is provisioned. The Azure portal will automatically display its blade.
 
 
-
-#### Task 2: Obtain vault credentials
+#### Task 2: Configure the vault for on-premises backup
   
-1. On the Azure portal, click  **Recovery Services**, and then click your new backup vault.
+1. In the Azure portal, configure the backup goal with the following settings:
 
-2. On the backup vault  **Quick Start** page, click **Download vault credentials**.
+- Where is your workload running?: **On-premises**
 
-3. Click  **Save** to download the vault credentials to the Downloads folder.
+- What do you want to back up?: **Files and folders**
+
+2. Click on **Click here to prepare your infrastructure for backup to Azure**. 
 
 
-
-#### Task 3: Install and configure the Azure Backup agent
+#### Task 3: Install and configure the Azure Recovery Services Agent
   
-1. Download and install the  **Agent forWindows Server or System Center Data Protection Manager or Windows Client**.
+1. Download the **Microsoft Azure Recovery Services Agent** from the Azure portal and install it on MIA-CL1 with the default settings.
 
-2. Install any available updates for the backup agent.
+2. Download the vault credentials file from the Azure portal
 
-3. Use the desktop shortcut that was created, start Azure Backup, and then register the server by using the vault credentials that you downloaded earlier.
+3. Register MIA-CL1 with the vault. Prior to registration, generate a passphrase and store it in the **D:\Labfiles\Lab06\Starter** folder.
 
-4. Generate a password, and then store it in the  **D:\Labfiles\Lab06\Starter** folder.
-
-5. Leave Azure Backup open for the next task.
+4. At the end of the registration process, start the Azure Backup console and leave it open for the next task.
 
 
 
 #### Task 4: Create a backup schedule
   
-1. Use Azure Backup to schedule a daily backup to run at 4:30 AM, and then protect the following subfolders in the D:\Labfiles\Lab06\Starter folder:
-
+1. Use Azure Backup to schedule a daily backup to run at 4:30 AM and protect the following subfolders in the D:\Labfiles\Lab06\Starter folder:
 
   - asset-images
 
   - invoices
 
-
-1. Keep the defaults for the other backup settings.
+2. Keep the defaults for the other backup settings.
 
 
 
 #### Task 5: Run a backup
   
-1. Use Azure Backup to perform an on-demand backup.
+1. From the Microsoft Azure Backup console, run an on-demand backup.
 
-2. On the Azure portal, verify that MIA-CL1 has registered, and then note the newest recovery point for the protected items, which should include files and folders on drive D.
+2. From the Azure portal, verify that MIA-CL1 is registered with the Recovery Services vault and note the most recent backup items, which should include files and folders on the D: drive.
 
 
 
-#### Task 6: Reset the environment
+#### Task 6: Stop backups and delete the Azure Recovery services vault
+  
+1. From the Azure portal, in the Recovery Services vault, delete references to **mia-cl1.** 
+
+2. From the Azure portal, delete the Recovery Services vault.
+
+
+
+#### Task 7: Reset the environment
   
 1. Open Windows PowerShell as an administrator.
 
@@ -273,18 +293,18 @@ The main tasks for this exercise are as follows:
   Reset-Azure
   ```
 
-3. When prompted (twice), sign in by using the Microsoft account that is associated with your Azure subscription.
+3. When prompted (twice), sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Microsoft Azure subscription.
 
 4. If you have multiple Azure subscriptions, select the one that you want to target with the script.
 
-5. When prompted for confirmation, press Y and press Enter.
+5. When prompted for confirmation, type **y** and press Enter.
 
->  **Note:** This script will remove Azure services in your subscription. We therefore recommended that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
-> The script will take 5-10 minutes to reset your Azure environment, ready for the next lab.
-> The script removes all storage, virtual machines, virtual networks, cloud services, and resource groups.
-> Important: The script might not be able to access a storage account to delete it (if this occurs, you will see an error). If you find objects remaining after the reset script is complete, you can rerun the  **Reset-Azure** script, or you can use the Azure portal and the Azure classic portal to delete all the objects in your Azure subscription manually with the exception of the default directory.
+> **Note:** This script will remove Azure services in your subscription. We therefore recommended that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+>  The script will take 5-10 minutes to reset your Azure environment, ready for the next lab. 
+>  The script removes all storage, virtual machines, virtual networks, cloud services, and resource groups.
+> **Note:** **Important**: The script might not be able to access a storage account to delete it (if this occurs, you will see an error). If you find objects remaining after the reset script is complete, you can rerun the **Reset-Azure** script, or you can use the Azure portal and the Azure classic portal to delete all the objects in your Azure subscription manuallyâ€”with the exception of the default directory.
 
->  **Result**: At the end of this exercise, you should have created an Azure Backup vault in your subscription, created Azure Backup vault credentials, and installed the Azure Backup agent on the MIA-CL1 lab computer. You should have backed up the contents of the asset-images and invoices folders to the backup vault.
+> **Result**: At the end of this exercise, you should have created an Azure Recovery Services vault in your subscription, downloaded vault credentials, and installed the Azure Recovery Services agent on the MIA-CL1 lab computer. You should have backed up the contents of the asset-images and invoices folders to the Recovery Services vault.
 
 
 
@@ -297,5 +317,3 @@ The asset management application stores images of hardware components as blobs a
 The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
-
-  
