--- a/Instructions/20533C_LAB_08.md
+++ b/Instructions/20533C_LAB_08.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- You want to evaluate the capabilities of PaaS cloud services to host A. Datum web applications. Your development team has provided a simple cloud service project that you can use to test its functionality in Azure. You want to show how staging and production slots can be used to simplify the deployment of new versions of the cloud service. You also want to determine whether you can monitor the service to get clear information on resource usage.
+ You want to evaluate the capabilities of PaaS cloud services to host A. Datum web applications. Your development team has provided a simple cloud service project that you can use to test Cloud Services functionality in Azure. You want to show how staging and production slots can be used to simplify the deployment of new versions of the cloud service. You also want to determine whether you can monitor the service to get clear information on resource usage.
 
 
 ### Objectives
@@ -19,13 +19,13 @@
 
 ### Lab Setup
   
- Estimated Time: 60 minutes
+Estimated Time: 60 minutes
 
-Virtual machine:  **20533C-MIA-CL1**
+Virtual machine: **20533C-MIA-CL1**
 
- User name:  **Student**
+User name: **Student**
 
- Password:  **Pa$$w0rd**
+Password: **Pa55w.rd**
 
 
 ## Exercise 1: Deploying a PaaS cloud service
@@ -34,101 +34,134 @@ Virtual machine:  **20533C-MIA-CL1**
   
  You have been asked to test the deployment of the sample PaaS cloud service to Azure.
 
-The main tasks for this exercise are as follows:
+ The main tasks for this exercise are as follows:
 
-1. Create a linked resource for a PaaS cloud service 
+1. Create an Azure SQL Server Database for a PaaS cloud service
 
-2. Configure the service definition file
+2. Create an Azure Storage account for a PaaS cloud service
 
-3. Deploy the PaaS cloud service
+3. Configure the service definition file
+
+4. Deploy an PaaS cloud service
 
 
 
-#### Task 1: Create a linked resource for a PaaS cloud service
+#### Task 1. Create an Azure SQL Server Database for a PaaS cloud service
   
-1. Sign in to the MIA-CL1 lab virtual machine as  **Student** with the password **Pa$$w0rd**
+1. Sign in to the MIA-CL1 lab virtual machine as **Student** with the password **Pa55w.rd**
 
-2. Start Windows PowerShell as an Administrator.
+2. Start Internet Explorer, browse to the Azure portal, and sign in with an account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
-3. Sign in to your Azure subscription from the Windows PowerShell window.
+3. Create a new Azure SQL Database with the following settings:
 
-4. Identify the Azure region closest to your location, where you can create a storage account and a SQL database.
+- Database name: **CloudServiceProdDB**
 
-5. From the Windows PowerShell session, create a new Azure SQL Database server. Set the name of the Administrator account to match your name. Set the password to  **Pa$$w0rd.** Set the location to the Azure region you identified in the previous step.
+- Subscription: _your Azure subscription name_
 
-6. From the Azure portal, create a new Azure SQL Database named  **CloudServiceProdDB** on the newly created server. Use the default settings.
+- Resource group: _a new resource group named **20533C0801-LabRG**_
 
-7. From the Windows PowerShell session, create a new IaaS V1 storage account with default settings. Name the account  **cloudappprod _xxx_**, where  _xxx_ is a unique sequence of characters (digits or lowercase letters). Use the same region you identified in step 4.
+- Select source: **Blank database**
+
+- Server: create a new server with the following settings:
+
+  - Server name: _any valid, unique name_
+
+  - Server admin login: **Student**
+
+  - Password: **Pa55w.rd**
+
+  - Confirm password: **Pa55w.rd**
+
+  - Location: _the Azure region closest to the lab location_
+
+  - Allow azure services to access server: _make sure that the checkbox is enabled_
+
+- Want to use SQL elastic pool?: *Not now**
+
+- Pricing tier: **Basic**
+
+- Collation: _leave at the default value_
+
+- Pin to dashboard: _leave the checkbox clear_
 
 
+#### Task 2. Create an Azure Storage account for a PaaS cloud service
 
-#### Task 2: Configure the service definition file
+1. From the Azure portal, create a new storage account with the following settings: 
+
+- Name: any unique name consisting of between 3 and 24 lower case letters or digits 
+
+- Deployment model: **Classic**
+
+- Account kind: **General purpose**
+
+- Performance: **Standard**
+
+- Replication: **Locally-redundant storage (LRS)**
+
+- Subscription: _the name of the Azure subscription where you created the SQL database_
+
+- Resource group: **20533C0801-LabRG**
+
+- Location: _the same location you specified in the previous task_
+
+- Pin to dashboard: _leave the checkbox clear_
+
+
+#### Task 3: Configure the service definition file
   
-1. Launch Visual Studio 2015, and then open the  **ServiceConfiguration.Cloud.cscfg** file located in **D:\LabFiles\Lab08\Starter\Production\** **Package.**
+1. Launch Visual Studio 2015, and then open the **ServiceConfiguration.Cloud.cscfg** file located in **D:\LabFiles\Lab08\Starter\Production\Package** folder.
 
-2. In the file, set the  **Instance count** attribute for the **AdatumAdsWebRole** and **AdatumAdsWorkerRole** roles to **2**.
+2. In the file, set the **Instance count** attribute for the **AdatumAdsWebRole** and **AdatumAdsWorkerRole** roles to **2**.
 
-3. Launch Internet Explorer, and then sign in to the Azure classic portal with the service administrator account of your Azure subscription.
+3. Switch to the Azure portal, navigate to the blade of the storage account you created earlier in this exercise and, from its **Access keys** blade, copy the value of the **PRIMARY CONNECTION STRING** entry.
 
-4. Locate the storage account created in the previous task, and then copy its Primary Access Key to the Clipboard.
+4. Back in the **ServiceConfiguration.Cloud.cscfg** file in the Visual Studio 2015 interface, replace all values of the **StorageConnectionString** attribute with the value you copied from the Azure portal.
 
-5. Switch back to Visual Studio, and then replace every occurrence of the following string. 
+5. In the **ServiceConfiguration.Cloud.cscfg** file in the Visual Studio 2015 interface, replace all values of the **Microsoft.WindowsAzure.Plugins.Diagnostics.ConnectionString** attribute with the value you copied from the Azure portal.
 
-  ```
-  UseDevelopmentStorage=true
-  ```
+6. Switch to the Azure portal, navigate to the blade of the Azure SQL database you created earlier in this exercise, and, from its blade, copy the value of the **ADO.NET** database connection string entry.
 
-Use the following string (on a single line) as the replacement.
+7. In the **ServiceConfiguration.Cloud.cscfg** file in the Visual Studio 2015 interface, replace the value of the **AdatumAdsDbConnectionString** attribute with the value you copied from the Azure portal.
 
+8. In the database connection string you just pasted, replace **{your_username}** with **Student**.
 
+9. In the database connection string you just pasted, replace **{your_password}** with **Pa55w.rd**.
 
-  ```
-  DefaultEndPointsProtocol=https;
-AccountName=cloudappprodxxx;AccountKey=keyvalue
-  ```
-
-In the replacement,  **cloudappprod**_xxx_****is the name of the storage account you created in the previous task, and  _keyvalue_****is the Primary Access Key you copied to the Clipboard
-
-6. Launch Internet Explorer, and then sign in to the Azure portal with the service administrator account of your Azure subscription.
-
-7. Identify the ADO.NET connection string for the  **CloudServiceProdDB** SQL database you created in the first task of this exercise.
-
-8. Copy the connection string to the Clipboard.
-
-9. Locate the value of the  **AdatumAdsDbConnectionString** element of the **AdatumAdsWorkerRole** role in the **ServiceConfiguration.Cloud.cscfg** file.
-
-10. Replace the value of the  **AdatumAdsDbConnectionString** element with the ADO.NET connection string copied to the Clipboard.
-
-11. In the connection string you just pasted, locate the text  **{your_password_here}**.
-
-12. Delete the located text, and then replace it with  **Pa$$w0rd**.
-
-13. Save  **ServiceConfiguration.Cloud.cscfg**.
+10. Save **ServiceConfiguration.Cloud.cscfg**.
 
 
 
-#### Task 3: Deploy the PaaS cloud service
+#### Task 4: Deploy the PaaS cloud service
   
-1. From the Azure classic portal, create a new, PaaS cloud service in the same region you identified in the first task of this lab. Set the name to that of the cloud service matching your name, followed by today's date in the MMDDYY format. Use the  **Deploy a cloud service package** option.
+1. From the Azure portal, create a new PaaS cloud service with the following settings:
 
-2. Set the production deployment name to AdatumAdsProd.
+- DNS name: _any valid, unique name_
 
-3. Upload the package AdatumAds.cspkg from D:\LabFiles\Lab08\Starter\Production\Package.
+- Subscription: _the name of the Azure subscription you have been using for this lab_
 
-4. Upload the configuration file ServiceConfiguration.Cloud.cscfg from D:\LabFiles\Lab08\Starter\Production\Package.
+- Resource group: **20533C0801-LabRG**
 
-5. Wait for the deployment to take effect.
+- Location: _the same location you have been using in this lab_
 
->  **Note:** The deployment process for the PaaS cloud service can take several minutes to complete. Watch the **cloud services** page. Wait for the **Service Status** column to display **Created** and the **Production** column to display **Running** before you continue to the next task.
+2. As part of the creation of the cloud service, set the production deployment name to **AdatumAdsProd**.
 
->  **Result**: You created a storage account and a SQL database, edited the service configuration file, and deployed the cloud service to the production slot.
+3. Upload the package **AdatumAds.cspkg** from **D:\LabFiles\Lab08\Starter\Production\Package**.
+
+4. Upload the configuration file **ServiceConfiguration.Cloud.cscfg** from **D:\LabFiles\Lab08\Starter\Production\Package**.
+
+5. Wait for the deployment to complete.
+
+> **Note:** The deployment might take a few minutes. 
+
+> **Result**: At the end of this exercise, you should have created a storage account and a SQL database, edited the service configuration file, and deployed the cloud service to the production slot.
 
 
 ## Exercise 2: Configuring deployment slots and RDP
   
 ### Scenario
   
- The development team has provided a second version of the PaaS cloud service you deployed. You want to determine how you can use deployment slots to stage and deploy new versions of cloud services. You will use the same configuration you used for the production service.
+ The development team has provided another version of the PaaS cloud service you deployed to Azure. You want to determine how you can use deployment slots to stage and deploy new versions of cloud services. You will use the same configuration you used for the production service. You also want to test Remote Desktop connectivity to individual instances of cloud service roles.
 
 The main tasks for this exercise are as follows:
 
@@ -142,54 +175,72 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Perform a staged deployment of a PaaS cloud service
   
-1. From the Azure classic portal, add a new staging deployment to the newly created PaaS cloud service by uploading package and configuration files.
+1. From the Azure portal, add a new staging deployment to the newly created PaaS cloud service by uploading package and configuration files.
 
-2. Set the staging deployment name to  **AdatumAdsStage**.
+2. Set the staging deployment name to **AdatumAdsStage**.
 
-3. Upload the package  **AdatumAds.cspkg** from **D:\LabFiles\Lab08\Starter\Staging\Package**.
+3. Upload the package **AdatumAds.cspkg** from **D:\LabFiles\Lab08\Starter\Staging\Package**.
 
-4. Upload the configuration file  **ServiceConfiguration.Cloud.cscfg** from **D:\LabFiles\Lab08\Starter\Production\Package**.
+4. Upload the configuration file **ServiceConfiguration.Cloud.cscfg** from **D:\LabFiles\Lab08\Starter\Production\Package**.
 
-5. Wait for the deployment to take effect
+5. Wait for the deployment to complete
 
->  **Note:** The deployment process for the PaaS cloud service can take several minutes to complete. Watch the **cloud services** page. Wait for the **Staging** column to display **Running** before you continue to the next task.
+> **Note:** Wait for the deployment to complete. This might take a few minutes. You can monitor the progress in the **Roles and instances** section of the staging blade.
 
 
 #### Task 2: Configure RDP access
-  
-1. From the Azure classic portal, enable Remote Desktop for all the roles of the production deployment of the PaaS cloud service created in the previous exercise of this lab.
 
-2. Set the Remote Desktop user name to  **RDPAdmin**
+1. On MIA-CLI, start **Windows PowerShell** as Administrator**
 
-3. Set the Remote Desktop password to  **Pa$$w0rd.**
+2. From the Windows PowerShell session, run `Add-AzureAccount` and sign in with an account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
-4. Set the expiration date to one month from today's date.
+3. If there are multiple subscriptions associated with your account, execute the following cmdlet:
 
+  ```
+  Select-AzureSubscription -SubscriptionId 'Your-subscription-Id'
+  ```
+ where `Your-subscription-Id` designates the subscription ID to which you deployed the cloud service earlier in this lab
+
+4. Next, execute the following script:
+  ```
+  $serviceName = 'Your-cloud-service'
+
+  $userName = 'Student'
+
+  $securePassword = 'Pa55w.rd1234' | ConvertTo-SecureString -AsPlainText -Force
+
+  $expirationDate = $(Get-Date).AddDays(31)
+
+  $credential = New-Object System.Management.Automation.PSCredential $userName,$securePassword
+
+  Set-AzureServiceRemoteDesktopExtension -ServiceName $serviceName -Credential $credential -Expiration $expirationDate -Slot Production
+
+  Set-AzureServiceRemoteDesktopExtension -ServiceName $serviceName -Credential $credential -Expiration $expirationDate -Slot Staging
+  ```
+
+ where `Your-cloud-service` designates the name of the cloud service you deployed earlier in this lab
 
 
 #### Task 3: Test connectivity
   
-1. From the Azure classic portal, identify the URL of the production deployment of the PaaS cloud service you deployed in the previous exercise.
+1. From the Azure portal, identify the URL of the production deployment of the PaaS cloud service you deployed in the previous exercise.
 
 2. Use Internet Explorer to navigate to the URL representing the production deployment of the PaaS cloud service.
 
 3. Leave the Internet Explorer window open. You will use it later in this exercise.
 
-4. From the Azure classic portal, identify the URL of the staging deployment of the PaaS cloud service you deployed in the previous exercise.
+4. From the Azure portal, identify the URL of the staging deployment of the PaaS cloud service you deployed in the previous exercise.
 
 5. Navigate to the URL representing the staging deployment of the PaaS cloud service by using Internet Explorer.
 
 6. Close the Internet Explorer tab showing the staging deployment.
 
-7. Connect via Remote Desktop to the  **AdatumAdsWebRole_IN_0** instance of the production deployment.
+7. Connect via Remote Desktop to the **AdatumAdsWebRole_IN_0** instance of the production deployment.
 
 8. Close the remote desktop connection.
 
 
-**Results**: At the end of this exercise, you will be able to:
-- Perform a staging deployment of a PaaS cloud service.
-- Enable RDP access to a PaaS cloud service.
-- Connect to production and staging instances via HTTP and via RDP.
+> **Result**: At the end of this exercise you have performed a staging deployment of a PaaS cloud service, enable RDP access to a PaaS cloud service, and connected to cloud service instances via HTTP and via RDP.
 
 
 ## Exercise 3: Monitoring cloud services
@@ -202,9 +253,9 @@ The main tasks for this exercise are as follows:
 
 1. Add metrics to the PaaS cloud service monitoring 
 
-2. Create an alert
+2. Create an alert for a cloud service
 
-3. Monitor an active cloud service
+3. Monitor a cloud service
 
 4. Reset the environment
 
@@ -212,40 +263,52 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Add metrics to the PaaS cloud service monitoring
   
-1. In the Azure classic portal, navigate to the  **MONITOR** tab of the production deployment of the PaaS cloud service created in the first exercise of this lab.
+1. In the Azure portal, navigate to the **Monitoring** pane of the **Production slot**
 
-2. Add the  **Network In** metric of the aggregate for AdatumAdsWebRole to the list of metrics displayed on the **MONITOR** tab in the portal.
+2. Add the **Network In** of instances of the AdatumAdsWebRole to the list of metrics displayed on the **Monitoring** pane.
 
 
 
 #### Task 2: Create an alert
   
-1. From the Azure classic portal, add a rule for the  **Network In** metric for the aggregate of AdatumAdsWebRole.
+1. From the Azure portal, add an alert to the Production slot of the cloud service with the following settings:
 
-2. Name the rule  **Network In Alert**.
+- Resource: _leave at its default value_
 
-3. Set the threshold value of the rule to 1.
+- Name: **Network In Alert**
 
-4. Configure the rule to send alerts to the email address of the service administrator account of your Azure subscription.
+- Description: **Test network in alert**
 
-5. Keep the remaining values at their defaults.
+- Metric: **Network In**
 
-6. Generate network traffic to the production deployment by accessing it via HTTP, using its webpage displayed in Internet Explorer, which you opened earlier in this exercise.
+- Condition: **greater than**
 
->  **Note:** It might take a few minutes before the alert is triggered.
+- Threshold: **1**
+
+- Period: **Over the last 5 minutes**
+
+- Email owners, contributors, and readers: _enable the checkbox_
+
+- Additional administrator email(s): _type the email address of the Service Administrator account of your Azure subscription_
+
+- Webhook: _leave the textbox clear_
+
+2. Generate network traffic to the production deployment by refreshing the production deployment page displayed in Internet Explorer, which you opened earlier in this exercise.
+
+> **Note:** It will take over 5 minutes before the alert is triggered.
 
 
 #### Task 3: Monitor an active cloud service
   
-1. From the Azure classic portal, navigate to  **MANAGEMENT SERVICES**, and then view the  **Network In Alert** rule you created in the previous task.
+1. In the Azure portal, navigate to the **Monitor** blade, locate the **Network In Alert** entry, and identify the value in the **LAST ACTIVE** column.
 
-2. Review the alerts generated by the rule.
+2. Open another Internet Explorer tab, browse to **www.hotmail.com**, and sign in with the username and password of the Microsoft Account that is the Service Administrator of your Azure subscription. 
 
-3. From Internet Explorer, navigate to the Microsoft Outlook mailbox of the service administrator account of your Azure subscription.
+3. In the list of emails, click **Microsoft Azure Alerts**.
 
-4. Review the email alerts generated the rule.
+4. Inspect the details of the alert.
 
-5. Close Internet Explorer, which is displaying the content of the Outlook mailbox.
+5. Close Internet Explorer.
 
 
 
@@ -253,29 +316,28 @@ The main tasks for this exercise are as follows:
   
 1. Launch Windows PowerShell as an Administrator.
 
-2. From the  **Windows PowerShell** prompt, run the following command.
+2. From the **Windows PowerShell** prompt, run the following command.
 
   ```
   Reset-Azure
   ```
 
-3. When prompted, sign in by using the Microsoft account associated with your Azure subscription.
+3. When prompted (twice), sign in by using the Microsoft account associated with your Azure subscription.
 
 4. If you have multiple Azure subscriptions, select the one you want the script to target.
 
-5. When prompted for confirmation, type  **y**.
+5. When prompted for confirmation, type **y**.
 
->  **Note:** This script removes Azure services from your subscription. It is therefore recommended that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
-> The script takes 5-10 minutes to reset your Azure environment so that it is ready for the next lab. The script removes all storage, virtual machines, VNETs, cloud services, and resource groups.
+> **Note:** This script removes Azure services from your subscription. It is therefore recommended that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
+>  The script takes 5-10 minutes to reset your Microsoft Azure environment so that it is ready for the next lab. The script removes all storage, virtual machines, virtual networks (VNETs), cloud services, and resource groups.
+> **Important**: The script might not be able to get exclusive access to a storage account to delete it. (If this occurs, you will see an error.) If you find objects remaining after the reset script is complete, you can rerun `Reset-Azure` or use the Azure portal and the Azure portal to manually delete all the objects in your Azure subscription with the exception of the default directory.
 
->  **Important**: The script might not be able to get exclusive access to a storage account to delete it. (If this occurs, you will see an error.) If you find objects remaining after the reset script is complete, you can rerun the  **Reset-Azure** script or use the Azure portal and the Azure classic portal to manually delete all the objects in your Azure subscriptionâ€”with the exception of the default directory.
-
->  **Results**: At the end of this exercise, you will have configured monitoring for a PaaS cloud service with new metrics and an alert.
+> **Result**: At the end of this exercise, you will have configured monitoring for a PaaS cloud service with a new metric and an alert.
 
 
 
 **Question** 
-In Exercise 2, you enabled RDP access and used the RDP client to connect to an instance of a web role. Why would administrators connect to cloud service role instances with RDP?
+In Exercise 2, you enabled RDP access and used the RDP client to connect to an instance of a web role. Why would administrators want to connect to cloud service role instances via RDP?
 
 **Question** 
 You want to ensure you can identify the volume of network traffic your PaaS cloud service has received over the last hour. Should you configure a monitoring metric or an alert?
