--- a/Instructions/20533C_LAB_10.md
+++ b/Instructions/20533C_LAB_10.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- A. Datum Corporation users rely on SSO to access on-premises applications. While evaluating Azure for A. Datum, you need to verify that A. Datum users can use their existing credentials to access resources in Azure, including non-Microsoft software as a service (SaaS) applications. You need to verify that any password or Active Directory user and group account changes in on-premises Active Directory automatically replicate to Azure AD.
+ A. Datum Corporation users currently rely on Active Directory to authenticate when accessing on-premises applications. While evaluating Azure Active Directory for A. Datum, you need to explore the possiblity of using existing Active Directory users and groups to authenticate access to resources in Azure, including third-party Software as a service (SaaS) applications. You need to verify changes to Active Directory user and group accounts can automatically replicate to Azure AD.
 
 
 ### Objectives
@@ -19,24 +19,23 @@
   
  Estimated Time: 60 minutes
 
-Virtual machine: **20533C-MIA-CL1**
+ Virtual machine: **20533C-MIA-CL1**
 
  User name: **Student**
 
- Password:  **Pa$$w0rd**
+ Password: **Pa55w.rd**
 
  
-
 
 ## Exercise 1: Configuring directory synchronization
   
 ### Scenario
   
- A. Datum plans to implement directory integration. To test the planned implementation, you need to deploy and configure Azure AD Connect to synchronize your on-premises AD with a test Azure AD tenant. To eliminate the need to verify a custom DNS domain, you will be using the default DNS name of the test Azure AD domain.
+ A. Datum plans to implement directory integration. To test the planned implementation, you need to deploy and configure Azure AD Connect to synchronize your test Active Directory domain with a test Azure AD tenant. Since you are not in the position at this point to verify a custom DNS domain, you will be using the default DNS name of the test Azure AD domain.
 
 The main tasks for this exercise are as follows:
 
-1. Sign in to the Azure VM hosting an Active Directory domain controller.
+1. Sign in to the Azure VM hosting an Active Directory domain controller and create test Active Directory objects.
 
 2. Create a new Azure AD tenant and a Global Admin account
 
@@ -44,83 +43,86 @@ The main tasks for this exercise are as follows:
 
 
 
-#### Task 1: Sign in to the Azure VM hosting an Active Directory domain controller.
+#### Task 1: Sign in to the Azure VM hosting an Active Directory domain controller and create test Active Directory objects.
   
-1. Sign in to MIA-CL1 as  **Student** with the password **Pa$$w0rd**.
+1. Sign in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. In the Internet Explorer window, sign in to the Azure portal by using the Microsoft account that is the Service Administrator or a co-admin of your Azure subscription
+2. Open the file **D:\Labfiles\Lab10\Starter\Set-ADUsers20533C1001.ps1** in Notepad and copy to Clipboard the first 8 lines in the file, down to, but without the the line starting with **#SIG # Begin signature block**.
 
-3. Initiate a Remote Desktop Protocol (RDP) session to  **AdatumDC1**, and then sign in as  **ADATUM\Student** with the password **Pa$$w0rd123**.
+3. In the Internet Explorer window, navigate to the Azure portal and, when prompted, sign in by using the Microsoft account that is the Service Administrator or a Co-Admininstrator of your Azure subscription.
 
+4. If necessary, in the Azure portal, switch to the Default Directory.
+
+5. Initiate a Remote Desktop Protocol (RDP) session to **adVM**, and then sign in as **ADATUM\Student** with the password **Pa55w.rd1234**.
+
+6. In the Remote Desktop session, start Windows PowerShell ISE as administrator, paste the content of Clipboard into the script pane and run the pasted commands.
+
+7. From the Windows PowerShell ISE window, run the **Get-ADUser** cmdlet to verify that the list of Active Directory user accounts includes **Beverly Beach** in the **AccountsToSync** organizational unit and **Darwin Shivers** in the **AccountsNotToSync** organizational unit. 
+
+8. Close the **Administrator: Windows PowerShell ISE** window.
 
 
 #### Task 2: Create a new Azure AD tenant and a Global Admin account
   
-1. After the sign-in is complete, open Internet Explorer and navigate to the Azure classic portal.
+1. Within the Remote Desktop session, from Server Manager, disable Internet Explorer Enhanced Security Configuration for administrators and users. 
 
-2. When prompted, sign in to the Azure classic portal by using an account that is the Service Administrator or a co-admin of your Azure subscription.
+2. Open Internet Explorer and navigate to the Azure portal.
 
-3. In the Azure classic portal, create a new Azure Active Directory tenant with the following settings:
-
-
-  - DIRECTORY:  **_Create new directory_**
-
-  - NAME:  **AdatumSync**
-
-  - DOMAIN NAME:  _Use your initials_ + _the_ _directory name_ + _random numbers_ (for example, abcadatum123456). If you get the message **The domain is not unique**, change the numbers until you get a green check mark.
-
-  - COUNTRY OR REGION:  **United States**
+3. From the Azure portal, create a new Azure AD tenant with the following settings: 
 
 
-1. In the Azure classic portal, in the newly created Azure Active Directory tenant, create a new Global Admin user with the following settings:
+  - Organization name: **AdatumSync**
+
+  - Initial domain name: _a unique, valid name_
+
+  - Country or region: **United States**
 
 
-  - TYPE OF USER:  **_New user in your organization_**
-
-  - USER NAME:  **SyncAdmin**
-
-  - FIRST NAME:  **Sync**
-
-  - LAST NAME:  **Admin**
-
-  - DISPLAY NAME:  **Sync Admin**
-
-  - ROLE: **Global Admin**
-
-  - ALTERNATE EMAIL ADDRESS:  **_Type the email address of your Microsoft account_**
-
-  - Enable Multi-Factor Authentication:  **_Do not select_**
+1. In the Azure portal, switch to the newly created Azure AD tenant and create a new Global Admin user with the following settings:
 
 
-1. Change the temporary password of the newly created user to  **Pa$$w0rd** by using an Internet Explorer inPrivate Browsing session.
+  - Name: **SyncAdmin**
 
-2. Once you change the password, on the  **No subscriptions found** page, click **SIGN OUT**.
+  - User name: **syncadmin@_domain name_.onmicrosoft.com** _where **domain name** is the unique name you assigned to the AdatumSync Azure AD tenant earlier in this task_
 
-3. Close the  **InPrivate** Internet Explorer session.
+  - First name: **Sync**
+
+  - Last name: **Admin** 
+
+  - Directory role: **Global administrator**
+
+  - Show Password: _enabled_
+
+
+1. Take the note of the autogenerated temporary password. 
+
+2. Open an Internet Explorer InPrivate Browsing session, sign in to the Azure portal as SyncAdmin, and change the password to **Pa55w.rd**
+
+3. Sign out as SyncAdmin and close the InPrivate Internet Explorer session.
 
 
 
 #### Task 3: Install Azure AD Connect with custom settings
   
-1. Open Internet Explorer on AdatumDC1, and then download Azure AD Connect from https://www.microsoft.com/en-us/download/details.aspx?id=47594. You will need to add  **https://*.microsoft.com** to the list of Internet Explorer Trusted sites.
+1. From the RDP session to adVM, open Internet Explorer and download Azure AD Connect from **https://www.microsoft.com/en-us/download/details.aspx?id=47594** to the **Downloads** folder.
 
-2. Install the Azure AD Connect tool, select custom settings, and then ensure that  **Password Synchronization** is selected.
+2. Install the Azure AD Connect tool, select custom settings, and then ensure that **Password Synchronization** is selected.
 
-3. Set the credentials for Azure AD tenant AdatumSync to the SyncAdmin Global Admin account.
+3. Set the credentials for Azure AD tenant AdatumSync to the SyncAdmin Global Administrator account.
 
-4. Set the credentials for the Active Directory forest to  **ADATUM\Student** with the password **Pa$$w0rd123**.
+4. Set the credentials for the Active Directory forest to **ADATUM\Student** with the password **Pa55w.rd1234**.
 
-5. On the  **Domain and OUfiltering** page, limit synchronization to objects in the **Accounts** organization unit only.
+5. On the **Domain and OU filtering** page, limit synchronization to the **AccountsToSync** organization unit only.
 
 6. Accept the default values in the remaining wizard pages, and then start the synchronization process. Close the wizard once the configuration is completed.
->  **Note:** You might need to wait a few minutes for the initial synchronization to complete.
-7. In the Azure classic portal, navigate to the  **adatumsync** Active Directory page. Click **USERS**, and then confirm that the list of users includes all the names from the Accounts organizational unit (OU).
+> **Note:** You might need to wait a few minutes for the initial synchronization to complete.
+
+7. In the Azure portal, navigate to the **adatumsync** Active Directory page. Click **USERS**, and then confirm that the list of users includes **Beverly Beach** from the **AccountsToSync** OU but does not include **Darwin Shivers** from the **AccountsNotToSync** OU.
+
+> **Result**: After completing this exercise, you should have installed and configured Azure AD Connect, and have performed initial synchronization.
 
 
->  **Result**: After completing this exercise, you should have installed and configured Azure AD Connect, and you should have it ready for test synchronization.
-
-
-## Exercise 2: Synchronizing directories
+## Exercise 2: Managing synchonization
   
 ### Scenario
   
@@ -134,28 +136,21 @@ The main tasks for this exercise are as follows:
 
 
 
-#### Task 1: Modify attributes of an Active Directory user and Initiate manual synchronization
+#### Task 1: Modify attributes of an Active Directory user and initiate delta synchronization
   
-1. On AdatumDC1, change the following attributes of some of your users in the Accounts OU of the Adatum directory:
+1. On adVM, start Windows PowerShell ISE  as Administrator.
 
+2. From the Windows PowerShell ISE console, check the value of the **Title** and **Department** attributes of the user **bbeach** by using the **Get-ADUser** cmdlet.
 
-  -  Job Title:  **VP**
+3. From the Windows PowerShell ISE console, use the **Set-ADUser** cmdlet to set the value of the **Title** and **Department** attributes of the user **bbeach** to **VP** and **Marketing**, respectively.
 
-  -  Department:  **Marketing**
+4. From the Windows PowerShell ISE console, check the current synchronization settings by running the **Get-ADSyncScheduler** cmdlet.
 
+5. From the Windows PowerShell ISE console, start delta synchronization by running **Start-ADSyncSyncCycle -PolicyType Delta**.
 
-2. Start a Windows PowerShell session by using administrative credentials.
+6. From the the **Users and groups - All Users** blade in the Azure portal, verify that the changes that you made to the user accounts have been synchronized to Azure AD. If you do not see any changes, wait for a few minutes, and then refresh the page.
 
-3. At the Windows PowerShell command prompt, type the following commands, press Enter after each, and observe the results:
-
-```
-Get-ADSyncScheduler
-Start-ADSyncSyncCycle -PolicyType Delta
-```
-
-4. On the Azure classic portal, check that the changes that you made to the user accounts have replicated to Azure; if you do not see any changes, wait for a few minutes, and then refresh the page.
-
-5. Close the AdatumDC1 remote desktop session, and then click  **OK** when prompted.
+7. Close the adVM remote desktop session.
 
 
 
@@ -163,9 +158,9 @@ Start-ADSyncSyncCycle -PolicyType Delta
   
 1. On MIA-CL1, close all open applications without saving any files.
 
-2. On the taskbar, right-click  **Windows** **PowerShell**, and then click  **Run as administrator**. 
+2. On the taskbar, right-click **Windows** **PowerShell**, and then click **Run as administrator**. 
 
-3. In the  **User Account Control** dialog box, click **Yes**.
+3. In the **User Account Control** dialog box, click **Yes**.
 
 4. Type the following command, and then press Enter:
 
@@ -177,16 +172,16 @@ Start-ADSyncSyncCycle -PolicyType Delta
 
 6. If you have multiple Azure subscriptions, select the one you want the script to target
 
-7. When prompted for confirmation, type  **y**.
+7. When prompted for confirmation, type **y**.
 
->  **Note:** This script might remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+> **Note:** This script might remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
 > The script will take 5-10 minutes to reset your Azure environment and make it ready for the next module. 
 > The script removes all storage, virtual machines, virtual networks, cloud services, and resource groups.
->  **Important:** The script might not be able to get exclusive access to a storage account to delete it; if this occurs, you will see an error. If you find objects remaining after the reset script is complete, you can rerun the **Reset-Azure** script, or you can use the Azure classic portal to delete all the objects in your Azure subscription manually, with the exception of the default directory.
+> **Important:** The script might not be able to get exclusive access to a storage account to delete it; if this occurs, you will see an error. If you find objects remaining after the reset script is complete, you can rerun the **Reset-Azure** script, or you can use the Azure classic portal to delete all the objects in your Azure subscription manually, with the exception of the default and custom Azure AD tenants.
 
  
 
->  **Result**: After completing this exercise, you should have changed attributes on a user account, and then forced synchronization. 
+> **Result**: After completing this exercise, you should have changed attributes on a user account, and then forced synchronization. 
 
 
 
