--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- A. Datum Corporation wishes to minimize administrative overhead as much as possible, especially for tasks such as deploying and deprovisioning VMs. For this reason, as part of A. Datum's evaluation of Microsoft Azure, you have been asked to test the new Azure Automation features and, as part of your tests, to deploy Azure VMs by using runbook automation.
+ A. Datum Corporation wishes to minimize administrative overhead as much as possible, especially for tasks such as deploying and deprovisioning VMs. For this reason, as part of A. Datum's evaluation of Microsoft Azure, you have been asked to test the new Azure Automation features and, as part of your tests, manage Azure VMs by using runbook automation.
 
 
 ### Objectives
@@ -19,121 +19,103 @@
   
  Estimated Time: 40 minutes
 
-Virtual Machine:  **20533C-MIA-CL1**
+ Virtual Machine: **20533C-MIA-CL1**
 
- User Name:  **Student**
+ User Name: **Student**
 
- Password:  **Pa$$w0rd**
+ Password: **Pa55w.rd**
 
- Before starting this lab, ensure that you have performed the "Preparing the Azure environment" demonstration tasks at the beginning of the first lesson in this module, and that the setup script has completed. However, before running the setup script, first identify the Azure regions where the students can create Azure Automation accounts. Make sure to choose one of these regions when prompted during execution of the setup script.
- 
-To identify the Azure region that students can use for this lab, sign-in to the Azure portal. In the hub menu of the Azure portal, click New, and then click Management. In the Management blade, click Automation. In the Add Automation Account blade, click the down arrow on the right hand side of the Location drop down list. The drop down list will contain the list of Azure regions where you can provision an Automation account. Choose the region closest to the lab location and provide it to students.
-
+ Before starting this lab, ensure that you have performed the "Preparing the Azure environment" demonstration tasks at the beginning of the first lesson in this module and that the **Setup-Azure** script has completed.
 
 
 ## Exercise 1: Configuring Automation accounts
   
 ### Scenario
   
- Administrators at A. Datum Corporation spend considerable time creating storage accounts and Azure VMs. You want to increase administrator productivity by using Automation to execute these tasks and freeing administrators to continue with other tasks.
+ Administrators at A. Datum Corporation spend considerable time managing Azure VMs. You want to increase administrator productivity by using Automation to execute such tasks as shuttting down Azure VMs at the end of the day.
 
 The main tasks for this exercise are as follows:
 
 1. Create an Automation account
 
-2. Create an Azure AD user 
-
-3. Create Automation assets
+2. Create and review Automation assets
 
 
 
 #### Task 1: Create an Automation account
   
-1. Ensure that you are signed in to MIA-CL1 as  **Student** with the password **Pa$$w0rd**, and that the setup script you ran in the previous demonstration to prepare the environment has completed.
+1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the setup script you ran in the previous demonstration to prepare the environment has completed.
 
-2. Sign in to the Azure portal by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+2. Sign in to the Azure portal by using the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription. If necessary, in the Azure portal, switch to the Default Directory.
 
-3. Create a new Azure Automation account with the following settings:
+3. From the **Virtual machines** blade, note that **myVM0** and **myVM1** virtual machines are currently running.
 
-  - Name:  **LabAutomationAccount**
-
-  - Subscription: **_your current subscription_**
-
-  - Resource group: _create a new resource group named_  **AutomationLabRG**
-
-  - Location: **_the Azure region that you chose when running the provisioning script_**
-
-  - Create Azure Run As account: **No**
-
-  - Pin to dashboard: **Enable the checkbox**
-
-4. Wait for the Automation account to be provisioned. This should take less than a minute.
+4. Create a new Azure Automation account with the following settings:
 
 
+  - Name: **LabAutomationAccount**
 
-#### Task 2: Create an Azure AD user
+  - Subscription: _your current subscription_
+
+  - Resource group: create a new resource group **20533C1102-LabRG**
+
+  - Location: _an Azure region that you chose when running **Setup-Azure** or, if not available, another region close to it_
+
+  - Create Azure Run As account: **Yes**
+
+
+1. Wait for the Automation account to be provisioned. This should take less than a minute.
+
+
+
+#### Task 2: Create and review Automation assets
   
-1. From the Azure classic portal, create a new user in the default directory of your Azure subscription, with the following settings:
-
-  - USER NAME:  **LabAutomationUser**
-
-  - @: **leave the default value**
-
-  - ROLE:  **user**
-
-  - Multi Factor Authentication: **disabled**
-
-  - DISPLAY NAME:  **Lab Automation User**
-
-2. From the Azure classic portal, configure the new user as a Co-Administrator of the current subscription.
-
-3. Change the temporary password of the newly created user to  **Pa$$w0rd**.
+1. In the Azure portal, from the **LabAutomationAccount** blade, create the following Azure Automation non-encrypted string variables
 
 
+  - Name: **VM0**
 
-#### Task 3: Create Automation assets
-  
-1. In the Azure portal, in the  **Automation Account** blade, add a Credential asset:
+  - Description: **myVM0**
 
-  - Name:  **PSCredential**
+  - Value: **myVM0**
 
-  - Description:  **Lab Automation User (Co-Administrator)**
 
-  - User name: **_the name of the newly created AutomationUser account that you copied to Notepad_**
+  - Name: **VM1**
 
-  - Password:  **Pa$$w0rd**
+  - Description: **myVM1**
 
-  - Confirm password:  **Pa$$w0rd**
+  - Value: **myVM1**
 
-2. In the same Automation account, create the following Automation unencrypted Variable assets of the String type:
 
-| Name | Value |
-| ---- | ----- |
-| SubscriptionName | _Name of your subscription_ |
-| AdminName | Student |
-| AdminPassword | Pa$$w0rd |
-| Location | _Name of Azure Region you selected in setup-azure at beginning of module_ |
-| Network | ADATUM-HQ-VNET |
-| Subnet | Subnet-1 |
+  - Name: **ResourceGroup**
 
-3. In the same Automation account, create the following Schedule asset:
+  - Description: **VM resource group**
 
-  - Name:  **EndOfDay**
+  - Value: **20533C1101-LabRG**
 
-  - Description:  **End of Day**
 
-  - Starts: **_tomorrow's date_ at 18:00:00**
+1. In the same Automation account, create the following Schedule asset:
+
+
+  - Name: **EndOfDay**
+
+  - Description: **End of day**
+
+  - Starts: _tomorrow's date at **6:00:00 PM** with the time zone of the Azure region containing the Automation account_
 
   - Recurrence: **Recurring**
 
-  - Runs every :  **1 Day**
+  - Recur every: **1 Day**
 
   - Set expiration: **No**
 
->  **Result**: After completing this exercise, you should have configured a new Microsoft Azure Automation account, and created a new Microsoft Azure Active Directory (Azure AD) organizational account to use as an Automation Credential asset.
+
+1. In the list of assets, note two precreated connections **AzureClassicRunAsConnection** and **AzureRunAsConnection**. They were created automatically during provisioning of the Automation account since you selected the option to create the Azure Run As account.
+
+> **Result**: After completing this exercise, you should have configured a new Azure Automation account, created Automation variable assets and Automation schedule asset, and reviewed the precreated Azure Automation connection assets
 
 
-## Exercise 2: Creating runbooks
+## Exercise 2: Creating and executing runbooks
   
 ### Scenario
   
@@ -151,23 +133,27 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Import a runbook
   
-1. From the Azure portal, import the PowerShell workflow script  **New-StorageAndVMs.ps1** residing in the D:\Labfiles\Lab11\Solution folder into your Automation account.
+1. From the Azure portal, import the PowerShell workflow script **D:\Labfiles\Lab11\Starter\Stop-AzureRm20533C11VMs.ps1** into your Automation account.
 
 2. Review the content of the runbook.
 
 
+
 #### Task 2: Publish and execute a runbook
   
-1. Publish the  **New-StorageAndVMs** runbook.
+1. Publish the **Stop-AzureVMs-Workflow** runbook.
 
 2. Start the newly published runbook.
 
 3. View the progress of the runbook execution. Wait until the job completes.
 
+4. From the Azure portal, verify that the of **myVM0** and **myVM1** virtual machines have been stopped.
+
+
 
 #### Task 3: Reset the environment
   
-1. Launch Windows PowerShell as  **Administrator**.
+1. Launch Windows PowerShell as **Administrator**.
 
 2. From the Windows PowerShell prompt, run:
 
@@ -179,19 +165,19 @@ The main tasks for this exercise are as follows:
 
 4. If you have multiple Azure subscriptions, select the one you want to target with the script.
 
-5. When prompted for confirmation, type  **y**.
+5. When prompted for confirmation, type **y**.
 
->  **Note:** This script will remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+> **Note:** This script will remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
 > The script will take 5-10 minutes to reset your Microsoft Azure environment to be ready for the next lab. 
 > The script removes all storage, VMs, virtual networks, cloud services, and resource groups.
->  **Important**: The script might not be able to get exclusive access to a storage account to delete it (if this occurs, you will see an error). If you find remaining objects after the reset script is complete, you can rerun the  **Reset-Azure** script, or use the Azure portal and Azure classic portal to delete all the objects in your Azure subscription manually â€”with the exception of the default director.
+> **Important**: The script might not be able to get exclusive access to a storage account to delete it (if this occurs, you will see an error). If you find remaining objects after the reset script is complete, you can rerun the **Reset-Azure** script, or use the Azure portal and Azure classic portal to delete all the objects in your Azure subscription manually with the exception of the default Azure AD tenant.
 
->  **Result**: After completing this exercise, you should have imported, published, and executed a PowerShell workflow-based runbook that deploys two virtual machines in parallel.
+> **Result**: After completing this exercise, you should have imported, published, and executed a PowerShell workflow-based runbook that deploys two virtual machines in parallel.
 
 
 
 **Question** 
-Why did you have to create an Azure AD account in the lab?
+What mechanism did you use to authenticate when accessing the Azure subscription when running the Azure Automation runbook in the lab?
 
 **Question** 
 What should you consider when testing the execution of an Automation runbook?
