--- a/Instructions/20533C_LAB_AK_06.md
+++ b/Instructions/20533C_LAB_AK_06.md
@@ -5,141 +5,103 @@
   
 #### Task 1: Create a storage account
   
-1. Ensure that you are signed in to MIA-CL1 as  **Student** with the password **Pa$$w0rd** and that the setup script that you ran in the previous demonstration to prepare the environment has completed.
+1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd** and that the setup script that you ran in the previous demonstration to prepare the environment has completed.
 
-2. Start Internet Explorer, and then browse to  **https://portal.azure.com**. When prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Microsoft Azure subscription.
+2. Start Internet Explorer, and then browse to **https://portal.azure.com**. When prompted, sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Microsoft Azure subscription.
 
-3. On the  **Hub** menu, click **New**, and then click  **Storage**.
+3. In the Hub menu, click **New**, and then click **Storage**.
 
-4. In the Data + Storage blade, click  **Storage account**.
+4. On the **Storage** blade, click **Storage account**.
 
-5. In the Create storage account blade, apply the following settings, and then click  **Create**:
+5. On the Create storage account blade, apply the following settings, and then click **Create**:
 
+  - Name: _a valid, unique name consisting of between 3 and 24 lower case characters or digits_
 
-  - Name: Enter a valid, unique name consisting of between 3 and 24 lower case characters or digits.
+  - Deployment model: **Resource Manager**
 
-  - Deployment model: Classic
+  - Account kind: **General purpose**
 
-  - Account kind: General purpose
+  - Performance: **Standard**
 
-  - Performance: Standard
+  - Replication: **Locally-redundant storage (LRS)**
 
-  - Replication: Geo-redundant storage (GRS)
+  - Storage service encryption: **Disabled**
 
-  - Subscription:  _Your Azure subscription_
+  - Subscription: _the name of your Azure subscription_
 
-  - Resource group: make sure that  **Create new** radio button is selected and then type **Asset-Management** as the name of the *Resource Group*.
+  - Resource group: ensure that **Create new** is selected and, in the textbox below, type **20533C0602-LabRG**.
 
-  - Location: Select the Azure region nearest to you
+  - Location: _the same Azure region that you chose when runnng **Setup-Azure** at the beginning of this module_
 
-  - Pin to dashboard: Clear the check box
+  - Pin to dashboard: _clear the check box_
 
+6. At the top of the portal window menu, click the **Notifications** icon and then wait for the notification that the deployment succeeded.
 
-1. At the top of the portal window menu, click the  **Notifications** icon, and then wait for the notification that the storage account has been created.
+7. In the Hub menu, click **More services**, and then, in the list of services, click **Storage accounts**.
 
-2. On the  **Hub** menu, click **More services**, and then click  **Storage accounts (classic)**.
+8. On the **Storage accounts** blade, click the storage account that you just created.
 
-3. In the Storage accounts (classic) blade, click the storage account that you just created.
+9. On the blade for your storage account, click the **Blobs** tile.
 
-4. In the blade for your storage account, click the  **Blobs** tile.
+10. On the *Blob service** blade, click **+ Container** in the toolbar.
 
-5. In the Blob service blade, click  **Container** in the toolbar.
+11. On the **New container** blade, specify the following settings, and then click **Create**:
 
-6. In the New container blade, apply the following settings, and then click  **Create**:
+  - Name: **asset-images**
 
-
-  - Name:  **asset-images**
-
-  - Access type:  **Private**
-
-
-1. Close the Blob service blade.
-
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run ISE as Administrator**. Click  **Yes** when prompted.
-
-3. In the Windows PowerShell Interactive Scripting Environment (ISE), click  **File**, and then click  **Open**.
-
-4. In the  **Open** dialog box, browse to **D:\Labfiles\Lab06\Starter\**, click  **ExampleCommands.ps1**, and then click  **Open**.
-
-5. If the Script pane is not visible, on the  **View** menu, click **Show Script Pane**.
-
-6. In Windows PowerShell ISE, in the Script pane, type the name of the storage account that you created in the previous task.
-
-7. Leave the Internet Explorer window open. You will use it later in this lab.
-
+  - Access type: **Private**
 
 
 #### Task 2: Install AzCopy
   
-1. In Internet Explorer, open a new tab, and then browse to  **http://aka.ms/AzCopy**.
+1. In Internet Explorer, open a new tab, and then browse to **http://aka.ms/AzCopy**.
 
-2. In the Download and install AzCopy section, click the link to  **Download the latest version of AzCopy**.
+2. In the **Download and install AzCopy** section, click the **latest version of AzCopy** link.
 
-3. When prompted to run or save the file, click  **Run**. Then click  **Yes** if prompted to allow the program to make changes to the computer, and then complete the wizard to install AzCopy by using the default installation options.
+3. When prompted to run or save the file, click **Run**. Then use the **Micorosoft Azure Storage Tools - v5.2.0 Setup Wizard** to install AzCopy with the default settings. During the setup, when prompted, in the User Account Control dialog box, click **Yes**.
 
-4. Right-click  **Start**, click  **System**, and then in the System window, click  **Advanced system settings**.
+4. On the taskbar, right-click **Windows PowerShell**, and then click **Run ISE as Administrator**. Click **Yes** when prompted.
 
-5. In the  **System Properties** dialog box, on the **Advanced** tab, click **Environment Variables**.
+5. In the **Administrator: Windows PowerShell ISE** window, if the script pane is not visible, click **View** and then, in the **View** menu, click **Show Script Pane**.
 
-6. In the  **Environment Variables** dialog box, in the **System variables** list, select **Path**, and then click  **Edit**.
+6. In the script pane, type `Set-Location -Path 'C:\Program Files (x86)\Microsoft SDKs\Azure\AzCopy'` and then press the **F5** key.
 
-7. In the  **Edit** **environment variable** dialog box, click **New**.
+6. In the console pane, type `.\AzCopy /?` and then press Enter.
 
-8. In the text box, type  **C:\Program Files (x86)\Microsoft SDKs\Azure\AzCopy**, and then click  **OK**.
-
-9. In the  **Environment Variables** dialog box, click **OK**.
-
-10. In the  **System Properties** dialog box, click **OK**, and then close the System window.
-
-11. Right-click  **Start**, click  **Command Prompt (Admin)**, and then click  **Yes** when prompted.
-
-12. At the command prompt, type the following command, and then press Enter:
-
-  ```
-  AzCopy /?
-  ```
-
-13. View the syntax information that displays. Leave the Command Prompt window open for the next task.
+7. View the syntax information displayed in the console pane. 
 
 
 
 #### Task 3: Use AzCopy to upload blobs
   
-1. In Internet Explorer, on the  **Microsoft Azure** tab, in the blade for your storage account, click the **Keys** icon.
-
-2. On the Manage keys blade, click the  **Copy** icon next to the primary access key. If prompted to allow access to the Clipboard, click **Allow access**.
-
-3. In the Command Prompt window, enter the following commands to change the current directory context:
-
+1. In the **Administrator: Windows PowerShell ISE** window, in the script pane, type:
   ```
-  D:
-CD D:\Labfiles\Lab06\Starter
+  .\AzCopy /Dest:https://<Your-storage-account>.blob.core.windows.net/asset-images /destkey:<Your-access-key> /Source:D:\Labfiles\Lab06\Starter\asset-images
   ```
 
-4. Switch to Windows PowerShell ISE.
+2. Switch to the Internet Explorer window displaying the Azure portal, scroll back to the blade for your storage account, and click **Access keys**.
 
-5. In Windows PowerShell ISE, in the Script pane, locate the following code:
+3. On the access keys blade, click the **Click to copy** icon next to **Storage account name**. If prompted to allow access to Clipboard, click **Allow access**.
 
-  ```
-  AzCopy /Dest:https://<your storage account>.blob.core.windows.net/asset-images /destkey:<your primary access key> /Source:asset-images
-  ```
+4. Switch to the **Administrator: Windows PowerShell ISE** window and replace the `<Your-storage-account>` entry with the content of Clipboard.
 
-6. Replace < _your storage account_> with your storage account name.
+5. Switch to the Internet Explorer window and, on the access keys blade, click the **Click to copy** icon next to **key1**. 
 
-7. Replace <your primary access key> with your primary access key.
+6. Switch to the **Administrator: Windows PowerShell ISE** window and replace the `<Your-access-key>` entry with the content of Clipboard.
 
-8. In Windows PowerShell ISE, in the Script pane, select the code that you just edited. Click  **Edit**, and then click  **Copy**.
+7. Press the **F5** key to execute the command in the script pane.
 
-9. Switch to the Command Prompt window.
+8. Examine the output in the console pane and verify that the content of the **D:\Labfiles\Lab06\Starter\asset-images** folder was copied to the Azure Storage account container **asset-images**.
 
-10. In the Command Prompt window, click the control box at the top left of the window, point to  **Edit**, click  **Paste**, and then press Enter to run the command.
+9. In the Azure portal, on the storage account blade, click **Overview**.
 
-11. Wait for the command to complete, and then view the file transfer information that displays.
+10. In the **Services** section of the blade, click the **Blobs** tile.
 
-12. Close the Command prompt window.
+11. On the *Blob service** blade, click the **asset-images** container.
 
+12. On the **asset-images** blade, verify that there are six new blobs.
 
->  **Result**: At the end of this exercise, you should have created a new Azure storage account with a container named "asset-images."
+> **Result**: At the end of this exercise, you should have created a new Azure storage account with a container named **asset-images** and copied files from your local computer to that container by using the **AzCopy** utility.
 
 
 ## Exercise 2: Using Azure File storage
@@ -148,195 +110,238 @@ CD D:\Labfiles\Lab06\Starter
   
 1. Switch to Windows PowerShell ISE.
 
-2. Click  **File**, and then click  **Open**.
+2. In the console pane, type `Add-AzureRmAccount` and press Enter. 
 
-3. In the  **Open** dialog box, browse to **D:\Labfiles\Lab06\Starter\**, click  **FileShare.ps1**, and then click  **Open**.
+3. When prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Microsoft Azure subscription.
 
-4. In Windows PowerShell ISE, in the command prompt pane, enter the  **Get-AzureAccount** command, and then verify that your Microsoft account displays.
->  **Note:** If your account does not display, enter the **Add-AzureAccount** command, and then sign in by using your Microsoft account.
-5. In the script pane, in the  _$storageAccountName_ variable declaration at the beginning, replace the _&lt;your_storage_account_name&gt;_ value with the name of the Azure storage account that you created in the previous task.
+4. If you have multiple Azure subscriptions associated with your Microsoft account, in the console pane, type the following and press Enter:
+  ```
+  Set-AzureRmContext -SubscriptionId <your subscription Id>
+  ```
+  where `<your subscription Id>` is the **SubscriptionId** value of the subscription you use in this course, included in the output of the `Add-AzureRmAccount` cmdlet.
 
-6. Review the script, noting that it:
+5. Click **File**, and then click **Open**.
 
+6. In the **Open** dialog box, browse to **D:\Labfiles\Lab06\Starter\**, click **New-FileShare_20533C06.ps1**, and then click **Open**.
 
-  - Declares variables named  _$shareName_ and _$folderName_ for the file share and the folder to create.
+7. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<your_storage_account_name>` value with the name of the Azure storage account that you created in the previous task.
 
-  - Uses the  **Get-AzureStorageKey** cmdlet to retrieve the access key for your storage account.
+8. Review the script, noting that it:
 
-  - Uses the  **New-AzureStorageContext** cmdlet to create a storage context that connects to your storage account by using the access key.
+  - Sets the values of variables named **$shareName** and **$directoryName** for the file share and the directory to create in the Azure Storage account
+	
+  - Uses the **Get-AzureRmStorageAccountKey** cmdlet to retrieve the access key for your storage account.
 
-  - Uses the  **New-AzureStorageShare** cmdlet to create a share.
+  - Uses the **New-AzureStorageContext** cmdlet to create a security context for connections to the target storage account based on the key you retrieved
 
-  - Uses the  **New-AzureStorageDirectory** cmdlet to create a folder in the share.
+  - Uses the **New-AzureStorageShare** cmdlet to create an Azure Storage account file share
 
-  - Finds the folder where the script is stored, and then declares a variable named  _$sourceFolder_ that references the invoices subfolder.
+  - Uses the **New-AzureStorageDirectory** cmdlet to create a directory in the share
 
-  - Iterates through the files in the source folder, and then uses the  **Set-AzureStorageFileContent** cmdlet to write each file to the folder in the file share.
+  - Sets the location of the folder hosting source files to be copied to the Azure Storage file share directory
 
+  - Loops through the files in the source folder and uses the **Set-AzureStorageFileContent** cmdlet to copy each of them the folder in the Azure file share.
 
-1. Save the script, and then on the toolbar, click  **Run Script**.
+9. Save the script and then press the **F5** key.
 
-2. Observe the script as it runs, and then view the output. When you finish, close Windows PowerShell ISE without saving any changes.
+10. Observe the script as it runs, and then view the output. When you finish, close Windows PowerShell ISE.
 
 
 
 #### Task 2: Access a file share from a VM
   
-1. In Internet Explorer, on the Azure portal, click  **Browse**, click  **Virtual machines (classic)**, and then in the Virtual machines (classic) blade, click  **AdatumSvr1**.
+1. In Internet Explorer, on the Azure portal, click **More services**, click **Virtual machines**, and then on the **Virtual machines** blade, click **AdatumSvr06**.
 
-2. In the AdatumSvr1 blade, click  **Connect**, and then when prompted to open or save the AdatumSvr1.rdp file, click  **Open**.
+2. On the *AdatumSvr06* blade, click **Connect**, and then when prompted to open or save the **AdatumSvr06.rdp** file, click **Open**.
 
-3. When prompted to connect, click  **Connect**, enter the following credentials, and then click  **OK**:
+3. When prompted to connect, click **Connect**, enter the following credentials, and then click **OK**:
 
+  - User name: **Student**
+  - Password: **Pa55w.rd1234**
 
-  - User name:  **AdatumSvr1\Student**
+1. If prompted to connect again, click **Yes**, and then wait for the remote desktop session to open and initialize. If you are prompted to find PCs, devices, and content on this network, click **No**.
 
-  - Password:  **Pa$$w0rd123**
+2. When Server Manager starts, click **Local Server**, on the **Local Server** page, click the **On** link next to the **IE Enhanced Security Configuration** entry, click **Off** for Administrators, and then click **OK**.
 
+3. In the AdatumSvr06 Remote Desktop window, click the **Internet Explorer** icon on the taskbar. If prompted to set up Internet Explorer, ensure that the **Use recommended security, privacy, and compatibility settings** option is selected, and then click **OK**.
 
-1. If prompted to connect again, click  **Yes**, and then wait for the remote desktop session to open and initialize. If you are promoted to find PCs, devices, and content on this network, click  **No**.
+4. Browse to **https://portal.azure.com**, and then sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
-2. When Server Manager starts, on the  **Local Server** page, click the status for **IE Enhanced Security Configuration**, select  **Off** for Administrators, and then click **OK**.
+6. In the **Hub** menu, click **More services**, and then click **Storage accounts**.
 
-3. Close Server Manager.
+7. On the **Storage accounts** blade, click the storage account that you created in the previous exercise, and then on the blade for your storage account, click the **Files** tile.
 
-4. In the AdatumSvr1 remote desktop window, switch to the  **Start** page, and then click **Internet Explorer**. If prompted to set up Internet Explorer, select  **Use recommended security, privacy, and compatibility settings**, and then click  **OK**.
+8. On the **File service** blade, click **assets**.
 
-5. Browse to  **https://portal.azure.com**, and then sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+9. On the **assets** blade, click **Connect** in the toolbar.
 
-6. On the  **Hub** menu, click **More services**, and then click  **Storage accounts (classic)**.
+10. On the **Connect** blade, select the code appearing in the **Connecting from Windows** section, right-click on it, and, in the right-click menu, click **Copy**.
 
-7. In the Storage accounts (classic) blade, click the storage account that you created in the previous exercise, and then in the blade for your storage account, click  **Access Keys**.
+11. Click **Start**, right-click **Windows PowerShell** and, in the right-click menu, click **Run ISE as Administrator**. 
 
-8. On the Manage Keys blade, click the  **Copy** icon next to the primary access key. If prompted to allow access to the Clipboard, click **Allow access**.
+12. In the **Administrator: Windows PowerShell ISE** window, if the script pane is not visible, click **View** and then, in the **View** menu, click **Show Script Pane**.
 
-9. Right-click  **Start**, and then click  **Command Prompt (Admin)**.
+13. In the script pane, paste the content of Clipboard. 
 
-10. In the Command Prompt window, enter the following command to map a network drive to the assets file share in your Azure storage account. Replace both instances of  _storage_account_ with the name of your storage account, and then press Enter:
+14. In the script pane, remove the leading `> ` characters, such that the line starts with `net use`.
+
+15. In the command line you copied, replace `[drive letter]` with `*`.
+
+16. Switch to Internet Explorer displaying the Azure portal, scroll back to the storage account blade, and click **Access keys**.
+
+17. On the access keys blade, click the **Click to copy** icon next to **key1**. If prompted to allow access to the Clipboard, click **Allow access**.
+
+18. Switch to Windows PowerShell ISE window, in the script pane, replace `[storage account access key]` with the content of Clipboard. and then press the **F5** key to execute the command.
+
+19. Verify that the command executed successfully, resulting in creation of the **Z:** drive mapping. 
+
+20. In the console pane of the Windows PowerShell ISE window, run the following command to view the contents of the invoices folder on the Z: drive, which is now mapped to the assets file share that you created in a previous task:
 
   ```
-  net use z: \\storage_account.file.core.windows.net\assets /u:storage_account
+  Get-ChildItem -Path 'Z:\invoices'
   ```
 
-11. When prompted, paste the  _access_key_ from the Clipboard (to paste into a Command Prompt window, click the control box at the top left of the window, point to **Edit**, and then click  **Paste**).
+21. Verify that invoice documents are listed.
 
-12. At the command prompt, enter the following command to view the contents of the invoices folder in drive Z, which is now mapped to the assets file share that you created in a previous task:
+22. Close the Windows PowerShell ISE window and Internet Explorer, and then sign out of the Remote Desktop session to AdatumSvr06.
 
-  ```
-  dir z:\invoices
-  ```
-
-13. Verify that three invoice files are listed.
-
-14. Close the Command Prompt window and Internet Explorer, and then sign out of the remote desktop session to AdatumSvr1.
-
-
->  **Result**: At the end of this exercise, you should have created a file share named "assets" that contains a folder named "invoices." This folder will contain three invoice documents and will be accessible on the AdatumSvr1 virtual machine (VM).
+> **Result**: At the end of this exercise, you should have created an Azure storage account file share named **assets** that contains a folder named **invoices** with copies of invoice documents. You should have also mapped a drive from an Azure VM to the Azure storage account file share.
 
 
 ## Exercise 3: Protecting data with Azure Backup
   
-#### Task 1: Create a backup vault
+#### Task 1: Create a recovery services vault
   
-1. On the MIA-CL1, open Internet Explorer, and then browse to  **https://manage.windowsazure.com**.
+1. On the MIA-CL1, in the Azure portal displayed in Internet Explorer, in the hub menu, click **+ New**, on the **New** blade, click **Storage**, and, on the **Storage** blade, click **Backup and Site Recovery (OMS)**.
 
-2. If prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+4. On the **Recovery services vault** blade, specify the following settings and click **Create**:
 
-3. In the Azure classic portal, click  **NEW**, click  **DATA SERVICES**, click  **RECOVERY SERVICES**, click  **BACKUP VAULT**, and then click  **QUICK CREATE**.
+  - Name: **adatumvault06**
 
-4. Enter a valid, unique name, select your closest region, and then click  **CREATE VAULT**.
+  - Subscription: _the name of your Azure subscription_
+
+  - Resource group: _ensure that **Create new** is selected and, in the textbox below, type **20533C0603-LabRG**_
+
+  - Location: _the same Azure region that you chose when runnng **Setup-Azure** at the beginning of this module_
+
+  - Pin to dashboard: _Ensure that the check box is cleared_
+
+  Wait until the vault is provisioned. The Azure portal will automatically display its blade.
 
 
-
-#### Task 2: Obtain vault credentials
+#### Task 2: Configure the vault for on-premises backup
   
-1. On the Azure classic portal, click  **RECOVERY SERVICES** on the **Hub** menu, and then click your new backup vault.
+1. On the recovery services vault blade, click **+ Backup**.
 
-2. On the backup vault  **Quick Start** page, click **Download vault credentials**.
+2. On the **Backup goal** blade, specify the following settings and click **OK**:
 
-3. Click  **Save** to download the vault credentials to the Downloads folder.
+- Where is your workload running?: **On-premises**
 
-4. After the credentials download, you will be prompted to open the folder. Click the prompt window.
+- What do you want to back up?: **Files and folders**
+
+3. Click on **Click here to prepare your infrastructure for backup to Azure**. 
 
 
 
-#### Task 3: Install and configure the Azure Backup agent
+#### Task 3: Install and configure the Azure Recovery Services Agent
   
-1. On the Azure classic portal, on the  **Quick Start** page of your backup vault, under Download Azure Backup Agent, click the **Agent forWindows Server or System Center Data Protection Manager or Windows Client** link.
+1. In the Azure portal, on the **Prepare infrastructure** blade, click the **Download Agent for Windows Server or Windows Client** link.
 
-2. When prompted to run or save the file, click  **Run**. When prompted to allow the program to make changes, click  **Yes**, and then complete the wizard to install the agent. Use the default installation options, and if prompted, choose the option to use Microsoft Update to check for updates.
+2. When prompted whether to run or save **MARSAgentInstaller.exe**, click **Run**.
 
-3. When installation is complete, click  **Close**.
+3. When prompted, click **Yes** to allow the program to make changes to the computer.
 
-4. Minimize all active windows, and then on the desktop, double-click  **Microsoft Azure Backup**. When prompted to allow the program to make changes, click  **Yes**.
+4. On the **Installation Settings** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Next**.
 
-5. In the Microsoft Azure Backup window, in the Actions pane, click  **Register Server**.
+5. On the **Proxy Configuration** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Next**.
 
-6. In the Register Server Wizard, on the  **Proxy Configuration** page, click **Next**.
+6. On the **Microsoft Update Opt-In** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **I do not want to use Microsoft Update** and click **Next**.
 
-7. On the  **Vault** **Identification** page, click **Browse**, navigate to the  **Downloads** folder, select the credentials that you created earlier, and then click **Open**.
+7. On the **Installation** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Install**.
 
-8. On the  **Vault Identification** page, click **Next**.
+8. Click **Proceed to Registration**. This will start **Register Server Wizard**.
 
-9. On the  **Encryption Setting** page, click **Generate Passphrase**, click  **Browse**, browse to the  **D:\Labfiles\Lab06\Starter** folder, and then click **OK**.
+9. Switch to Internet Explorer displaying the Azure portal and, on the **Prepare infrastructure** blade, click **Download**.
 
-10. Click  **Register**, and then when registration is complete, click  **Close**.
+10. When prompted whether to open or save the **.VaultCredentials** file, click **Save**.
 
-11. Leave Azure Backup open for the next task.
+11. Switch back to the **Register Server Wizard** and, on the **Vault Identification** page, click **Browse**.
 
+12. In the **Select Vault Credentials** dialog box, browse to the **Downloads** folder, click the **.VaultCredentials** file you downloaded, and click **Open**.
+
+13. Click **Next**.
+
+14. On the **Encryption Setting** page of the **Register Server Wizard**, click **Generate Passphrase**.
+
+15. On the **Encryption Setting** page of the **Register Server Wizard**, click **Browse**.
+
+16. In the **Browse For Folder** dialog box, navigate to **D:\Labfiles\Lab06\Starter\** and click **OK**.
+
+17. Click **Finish**.
+
+18. On the **Server Registration** page of the **Register Server Wizard**, ensure that the **Launch Microsoft Azure Recovery Services Agent** checkbox is selected and click **Close**. This will automatically open the **Microsoft Azure Backup** console.
 
 
 #### Task 4: Create a backup schedule
   
-1. In Azure Backup, in the Actions pane, click  **Schedule Backup**.
+1. In the **Microsoft Azure Backup** console, in the **Actions** pane, click **Schedule Backup**.
 
-2. In the Schedule Backup Wizard, on the  **Getting started** page, click **Next**.
+2. In the **Schedule Backup Wizard**, on the **Getting started** page, click **Next**.
 
-3. On the  **Select Items to Backup** page, click **Add Items**.
+3. On the **Select Items to Backup** page, click **Add Items**.
 
-4. In the  **Select Items** dialog box, expand **D**, expand  **Labfiles**, expand  **Lab06**, expand  **Starter**, select the following folders, and then click  **OK**:
-
+4. In the **Select Items** dialog box, expand **D**, expand **Labfiles**, expand **Lab06**, expand **Starter**, select the following folders, and then click **OK**:
 
   - asset-images
 
   - invoices
 
+5. On the **Select Items to Backup** page, click **Next**.
 
-1. On the  **Select Items to Backup** page, click **Next**.
+6. On the **Specify Backup Schedule** page, in the first drop-down list box below the **At following times (Maximum allowed is three times a day)** box, select **4:30 AM**, and then click **Next**.
 
-2. On the  **Specify Backup** **Schedule** page, in the first drop-down list box below the **At following times (Maximum allowed is three times a day)** box, select **4:30 AM**, and then click  **Next**.
+7. On the **Select Retention Policy** page, accept the defaults, and then click **Next**.
 
-3. On the  **Select Retention Policy** page, accept the defaults, and then click **Next**.
+8. On the **Choose Initial Backup type** page, accept the defaults, and then click **Next**.
 
-4. On the  **Choose Initial Backup type** page, accept the defaults, and then click **Next**.
-
-5. On the  **Confirmation** page, click **Finish**. When the backup schedule is created, click  **Close**.
-
+9. On the **Confirmation** page, click **Finish**. When the backup schedule is created, click **Close**.
 
 
 #### Task 5: Run a backup
   
-1. In Azure Backup, in the Actions pane, click  **Back Up Now**.
+1. In the **Microsoft Azure Backup** console, in the Actions pane, click **Back Up Now**.
 
-2. In the Back Up Now Wizard, on the  **Confirmation** page, click **Back Up**.
+2. In the Back Up Now Wizard, on the **Confirmation** page, click **Back Up**.
 
-3. When the backup is complete, click  **Close**, and then close Azure Backup.
+3. When the backup is complete, click **Close**, and then close Microsoft Azure Backup.
 
-4. In Internet Explorer, on the Azure portal, on the page for your backup vault, click  **REGISTERED ITEMS**.
+4. Switch to the Azure portal displayed in the Internet Explorer window, scroll back to the Recovery Services vault blade and click **Backup items**. 
 
-5. In the  **TYPE** drop-down list box, select **Windows server**, click the  **check** **mark** on the right side, and then verify that the MIA-CL1 server lists as registered.
+5. On the **Backup items** blade, click **Azure Backup Agent**.
 
-6. Click  **PROTECTED ITEMS**.
-
-7. In the  **TYPE** drop-down list box, select **Files and Folders**, click the  **check** **mark** on the right side, and then verify that drive D of MIA-CL1 lists as protected.
+6. On the **Backup Items (Azure Backup Agent)** blade, verify that there is an entry referencing the **D:\** drive of **mia-cl1.**.
 
 
+#### Task 6: Stop backups and delete the Azure Recovery services vault
+  
+1. On the **Backup Items (Azure Backup Agent)** blade, click the entry referencing the **D:\** drive of **mia-cl1.**.
 
-#### Task 6: Reset the environment
+2. On the **D:\ on mia-cl1.** blade, click the **mia-cl1.** link.
+
+3. On the **mia-cl1.** blade, click **Delete**. 
+
+4. On the **Delete** blade, in the **TYPE THE SERVER NAME** text box, type **mia-cl1.** and click **Delete**.
+
+5. Scroll back to the recovery services vault blade and click **Overview**. 
+
+6. Click **Delete**. When prompted to confirm, click **Yes**.
+
+
+#### Task 7: Reset the environment
   
 1. Close all open applications without saving any files.
 
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run as administrator**. In the  **User Account Control** dialog box, click **Yes**.
+2. On the taskbar, right-click **Windows PowerShell**, and then click **Run as administrator**. In the **User Account Control** dialog box, click **Yes**.
 
 3. Type the following command, and then press Enter:
 
@@ -344,18 +349,18 @@ CD D:\Labfiles\Lab06\Starter
   Reset-Azure
   ```
 
-4. When prompted (twice), sign in by using the Microsoft account that is associated with your Azure subscription.
+4. When prompted (twice), sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Microsoft Azure subscription.
 
 5. If you have multiple Azure subscriptions, select the one that you want to target with the script.
 
-6. When prompted for confirmation, press Y and press Enter.
+6. When prompted for confirmation, type **y** and press Enter.
 
->  **Note:** This script will remove Azure services in your subscription. We therefore recommended that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
-> The script will take 5-10 minutes to reset your Azure environment, ready for the next lab. 
-> The script removes all storage, virtual machines, virtual networks, cloud services, and resource groups.
->  **Note:** **Important**: The script might not be able to access a storage account to delete it (if this occurs, you will see an error). If you find objects remaining after the reset script is complete, you can rerun the  **Reset-Azure** script, or you can use the Azure portal and the Azure classic portal to delete all the objects in your Azure subscription manuallyâ€”with the exception of the default directory.
+> **Note:** This script will remove Azure services in your subscription. We therefore recommended that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+>  The script will take 5-10 minutes to reset your Azure environment, ready for the next lab. 
+>  The script removes all storage, virtual machines, virtual networks, cloud services, and resource groups.
+> **Note:** **Important**: The script might not be able to access a storage account to delete it (if this occurs, you will see an error). If you find objects remaining after the reset script is complete, you can rerun the **Reset-Azure** script, or you can use the Azure portal and the Azure classic portal to delete all the objects in your Azure subscription manuallyâ€”with the exception of the default directory.
 
->  **Result**: At the end of this exercise, you should have created an Azure Backup vault in your subscription, created Azure Backup vault credentials, and installed the Azure Backup agent on the MIA-CL1 lab computer. You should have backed up the contents of the asset-images and invoices folders to the backup vault.
+> **Result**: At the end of this exercise, you should have created an Azure Recovery Services vault in your subscription, downloaded vault credentials, and installed the Azure Recovery Services agent on the MIA-CL1 lab computer. You should have backed up the contents of the asset-images and invoices folders to the Recovery Services vault.
 
 
 
@@ -364,5 +369,3 @@ CD D:\Labfiles\Lab06\Starter
 The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
-
-  
