--- a/Instructions/20533C_LAB_AK_08.md
+++ b/Instructions/20533C_LAB_AK_08.md
@@ -3,393 +3,406 @@
   
 ## Exercise 1: Deploying a PaaS cloud service
   
-#### Task 1: Create a linked resource for a PaaS cloud service
+#### Task 1: Create an Azure SQL Server Database for a PaaS cloud service
   
-1. Ensure that the MIA-CL1 lab virtual machine is running, and then sign in as  **Student** with the password **Pa$$w0rd**.
+1. Ensure that the MIA-CL1 lab virtual machine is running, and then sign in as **Student** with the password **Pa55w.rd**.
 
-2. Start Windows PowerShell as an Administrator.
+2. Start Windows Internet Explorer, navigate to https://portal.azure.com, and then sign in with an account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
-3. Type the following command, and then press Enter.
+3. In the Azure portal, click **+ New**. On the **New** blade, click **Databases** and then, on the **Databases** blade, click **SQL Database**.
 
-  ```
-  Add-AzureAccount
-  ```
+4. On the **SQL Database** blade, set the **Database name** to **CloudServiceProdDB**. 
 
-4. Sign in with the user credentials associated with your Azure account.
+5. Ensure that the name of your Azure subscription appears in the **Subscription** drop down list.
 
-5. Type the following command, and then press Enter.
+6. In the **Resource group** section, ensure that **Create new** is selected and, in the textbox below, type **20533C0801-LabRG**.
 
-  ```
-  Get-AzureLocation | Select-Object Name
-  ```
+7. In the **Select source** drop down list, click **Blank database**.
 
-6. From the list of Azure regions, identify the one closest to your location, and then note the region's name.
+8. Click **Server**.
 
-7. Type the following command, and then press Enter.
+9. On the **Server** blade, click **Create a new server**. 
 
-  ```
-  New-AzureSqlDatabaseServer -AdministratorLogin 'yourname' -AdministratorLoginPassword 'Pa$$w0rd' -Location 'YourRegion'
-  ```
+10. On the **New server** blade, specify the following settings and click **Select**.
 
-  Replace  _yourname_ with your first name and _Your Region_ with the Azure region you noted in step 6.
+- Server name: _any valid, unique name_
 
-8. Type the following command, and then press Enter.
+- Server admin login: **Student**
 
-  ```
-  Get-AzureSqlDatabaseServer
-  ```
+- Password: **Pa55w.rd**
 
-9. Note the server name of the Azure SQL Database server you created in step 7.
+- Confirm password: **Pa55w.rd**
 
-10. Launch Windows Internet Explorer, navigate to https://portal.azure.com, and then sign in with the service administrator account of your Azure subscription.
+- Location: _the Azure region closest to the lab location_
 
-11. In the left navigation bar, click  **Browse**, and then in the blade that is being displayed, click  **SQL databases**.
+- Allow azure services to access server: _make sure that the checkbox is enabled_
 
-12. In the SQL Database blade, click  **Add**.
+11. Back on the SQL Database blade, in the **Want to use SQL elastic pool?** section, ensure that **Not now** is selected
 
-13. In the  **Database name** box, type **CloudServiceProdDB**.
+12. Click **Pricing tier**. 
 
-14. Ensure that the name of the server you created in step 7 appears in the  **Server** entry.
+13. On the **Pricing tier** blade, click **Basic** and click **Select**.
 
-15. In the SQL Database blade, click  **Create**.
+14. Leave the default value in the **Collation** text box and click **Create**.
 
-16. Switch to Windows PowerShell, type the following command, and then press Enter.
+15. Leave the **Pin to dashboard** checkbox clear.
 
-
-```
-New-AzureStorageAccount -StorageAccountName 'cloudappprodxxx' -Location 'Your Region'
-```
-
-
- Replace  _xxx_ with a unique sequence of characters (digits or lowercase letters), and replace _Your region_ with the Azure region you noted in step 6. If the cmdlet fails because the storage account name you chose is already in use, try a different one.
-
- To test if the storage account name is already in use, type the following command, and then pressing Enter.
-
-
-
-```
-Test-AzureName -Storage 'cloudappprodxxx'
-```
-
-
- Replace  _xxx_ with a unique sequence of characters (digits or lowercase letters). An output of **False** indicates that the name has not been assigned yet and is available for you to use.
-
-
-#### Task 2: Configure the service definition file
+#### Task 2: Create an Azure Storage account for a PaaS cloud service
   
-1. On the Taskbar, click  **Visual Studio 2015**.
+1. In the Azure portal, click **+ New**. On the **New** blade, click **Storage** and then, on the **Storage** blade, click **Storage account**.
 
-2. Click  **File**, click  **Open**, and then click  **File**.
+2. On the **Create storage account** blade, specify the following settings and click **Create**:
 
-3. Browse to D:\LabFiles\Lab08\Starter\ Production\Package.
+- Name: _any unique name consisting of between 3 and 24 lower case letters or digits_
 
-4. Click  **ServiceConfiguration.Cloud.cscfg**, and then click  **Open**.
+- Deployment model: **Classic**
 
-5. Locate the  **&lt;Role&gt;** element with the name set to **AdatumAdsWebRole**.
+- Account kind: **General purpose**
 
-6. Within that  **&lt;Role**> element, locate the  **&lt;Instances&gt;** element.
+- Performance: **Standard**
 
-7. In the  **&lt;Instances&gt;** element, set the **count** attribute to **2**.
+- Replication: **Locally-redundant storage (LRS)**
 
-8. Locate the  **&lt;Role&gt;** element with the name set to **AdatumAdsWorkerRole**.
+- Subscription: _the name of the Azure subscription where you created the SQL database_
 
-9. Within that  **&lt;Role**> element, locate the  **&lt;Instances&gt;** element.
+- Resource group: _ensure that the **Use existing** option is selected and click **20533C0801-LabRG** in the drop-down list_
 
-10. In the  **&lt;Instances&gt;** element, set the **count** attribute to **2**.
+- Location: _the same location you specified in the previous task_
 
-11. Launch Internet Explorer, navigate to https://manage.windowsazure.com, and then if prompted, sign in with the service administrator account of your Azure subscription.
-
-12. In the Azure classic portal, in the navigation bar on the left, click  **STORAGE**.
-
-13. On the  **storage** page, in the list of storage accounts, click **cloudappprod**_xxx_. 
-
-14. In the command bar at the bottom, click  **MANAGE ACCESS KEYS**.
-
-15. To the right of the  **PRIMARY ACCESS KEY** box, click **Copy**, and then click  **Allow access**.
-
-16. In the Manage Access Keys window, click  **OK**.
-
-17. Click the large left arrow at the upper-left side of the window.
-
-18. Switch to Microsoft Visual Studio.
-
-19. In the ServiceConfigurationCloud.cscfg file, locate the  **&lt;Role&gt;** element with the name **AdatumAdsWebRole**.
-
-20. Within that  **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **StorageConnectionString**.
-
-21. Delete the string in the  **value** attribute, leaving the leading and trailing quotation marks, and then type the following text in its place (on a single line).
-
-  ```
-  DefaultEndPointsProtocol=https;AccountName=cloudappprodxxx;AccountKey=
-  ```
-
-22. In the preceding text,  **cloudappprod**_xxx_ is the name of the storage account you created in the previous task.
-
-23. Place the cursor at the end of the text you just typed, and then press Ctrl+V to paste the storage account primary key.
-
-24. Locate the  **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
-
-25. Within that  **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name **StorageConnectionString**.
-
-26. Delete the string in the  **value** attribute, leaving the leading and trailing quotation marks, and then type the following text in its place (on a single line).
-
-  ```
-  DefaultEndPointsProtocol=https;
-AccountName=cloudappprodxxx;AccountKey=
-  ```
-
-27. In the preceding text,  **cloudappprod**_xxx_****is the name of the storage account you created in the previous task.
-
-28. Place the cursor at the end of the text you just typed, and then press Ctrl+V to paste the storage account primary key.
-
-29. Locate the  **&lt;Role&gt;** element with the name **AdatumAdsWebRole**.
-
-30. Within that  **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **Microsoft.WindowsAzure.** **Plugins.Diagnostics.ConnectionString**.
-
-31. Delete the string in the  **value** attribute, leaving the leading and trailing quotation marks, and then type the following text in its place (on a single line).
-
-  ```
-  DefaultEndPointsProtocol=https;
-AccountName=cloudappprodxxx;AccountKey=
-  ```
-
-32. In the preceding text,  **cloudappprod**_xxx_ is the name of the storage account you created in the previous task.
-
-33. Place the cursor at the end of the text you just typed, and then press Ctrl+V to paste the storage account primary key.
-
-34. Locate the  **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
-
-35. Within that  **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **Microsoft.WindowsAzure.** **Plugins.Diagnostics.ConnectionString**.
-
-36. Delete the string in the  **value** attribute, leaving the leading and trailing quotation marks, and then type the following text in its place (on a single line).
-
-  ```
-  DefaultEndPointsProtocol=https;
-AccountName=cloudappprodXXX;AccountKey=
-  ```
-
-37. In the preceding text,  **cloudappprod**_xxx_ is the name of the storage account you created in the previous task
-
-38. Place the cursor at the end of the text you just typed, and then press Ctrl+V to paste the storage account primary key.
-
-39. Switch to the Internet Explorer window displaying the Azure portal.
-
-40. In the CloudServiceProdDB blade, click  **Show database connection strings.**
-
-41. In the Database connection strings blade, click  **Copy** next to the ADO.NET box, and then when prompted, click **Allow access.**
-
-42. Switch back to Visual Studio.
-
-43. Locate the  **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
-
-44. Within that  **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **AdatumAdsDbConnectionString**.
-
-45. Delete the string in the  **value** attribute, leaving the leading and trailing quotation marks.
-
-46. Press Ctrl+V to paste the connection string you copied to the Clipboard.
-
-47. In the connection string you just pasted, locate the text  **{your_username_here}**.
-
-48. Delete the located text, and then replace it with the administrator login username specified in Task 1 **your_name**.
-
-49. In the connection string you just pasted, locate the text  **{your_password_here}**.
-
-50. Delete the located text, and then replace it with  **Pa$$w0rd**.
-
-51. Click  **File**, and then click  **Save ServiceConfiguration.Cloud.cscfg**.
+- Pin to dashboard: _leave the checkbox clear_
 
 
-
-#### Task 3: Deploy the PaaS cloud service
+#### Task 3: Configure the service definition file
   
-1. In the Internet Explorer window displaying the Azure classic portal, in the left navigation bar, click  **CLOUD SERVICES**.
+1. On the Taskbar, click **Visual Studio 2015**.
 
-2. On the toolbar at the bottom, click  **NEW**, and then click  **CUSTOM CREATE**.
+2. Click **File**, click **Open**, and then click **File**.
 
-3. In the  **URL** box, type your name followed by today's date in the MMDDYY format. If a green check mark does not appear, try another name.
+3. Browse to **D:\LabFiles\Lab08\Starter\Production\Package**.
 
-4. In the  **REGION OR AFFINITY GROUP** drop-down list, select the same Azure region you used in task 1.
+4. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
-5. Select the  **Deploy a cloud service package** check box, and then click **Next**.
+5. Locate the **&lt;Role&gt;** element with the name set to **AdatumAdsWebRole**.
 
-6. In the  **DEPLOYMENT NAME** box, type **AdatumAdsProd**. 
+6. Within that **&lt;Role&gt;** element, locate the **&lt;Instances&gt;** element.
 
-7. Next to the  **PACKAGE** box, click **FROM LOCAL**. 
+7. In the **&lt;Instances&gt;** element, set the **count** attribute to **2**.
 
-8. Browse to D:\LabFiles\Lab08\Starter\Production\Package.
+8. Locate the **&lt;Role&gt;** element with the name set to **AdatumAdsWorkerRole**.
 
-9. Click  **AdatumAds.cspkg**, and then click  **Open**.
+9. Within that **&lt;Role**> element, locate the **&lt;Instances&gt;** element.
 
-10. Next to the  **CONFIGURATION** box, click **FROM LOCAL**.
+10. In the **&lt;Instances&gt;** element, set the **count** attribute to **2**.
 
-11. Click  **ServiceConfiguration.Cloud.cscfg**, and then click  **Open**.
+11. Switch to the Azure portal, and, in the hub menu on the left, click **More services**.
 
-12. Click  **Complete** (check mark).
+12. In the list of services, click **Storage accounts (classic)**.
 
->  **Note:** The deployment process for the platform as a service (PaaS) cloud service can take several minutes to complete. Watch the **cloud services** page. Wait for the **Service Status** column to display **Created** and the **Production** column to display **Running** before you continue to the next task.
+13. On the **Storage accounts (classic)** blade, in the list of storage accounts, click the storage acount you created in the first task of this exercise.
 
->  **Result**: You created a storage account and a SQL database, edited the service configuration file, and deployed the cloud service to the production slot.
+14. On the storage account blace, click **Access keys**
+
+15. Click the **Click to copy** icon next to the **PRIMARY CONNECTION STRING** entry. If prompted, click **Allow access**.
+
+16. Switch to Microsoft Visual Studio.
+
+17. In the ServiceConfigurationCloud.cscfg file, locate the **&lt;Role&gt;** element with the name **AdatumAdsWebRole**.
+
+18. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **StorageConnectionString**.
+
+19. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
+
+20. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
+
+21. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
+
+22. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name **StorageConnectionString**.
+
+23. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
+
+24. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
+
+25. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWebRole**.
+
+26. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **Microsoft.WindowsAzure.Plugins.Diagnostics.ConnectionString**.
+
+27. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
+
+28. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
+
+29. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
+
+30. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **Microsoft.WindowsAzure.Plugins.Diagnostics.ConnectionString**.
+
+31. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
+
+32. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
+
+33. Switch to the Internet Explorer window displaying the Azure portal.
+
+34. In the Azure portal, in the hub menu on the left, click **More services**.
+
+35. In the list of services, click **SQL databases**.
+
+36. On the **SQL databases** blade, in the list of SQL databases, click **CloudServiceProdDB**.
+
+37. On the CloudServiceProdDB blade, in the **Essentials** section, click **Show database connection strings.**
+
+38. On the **Database connection strings** blade, ensure that the **ADO.NET** tab is selected, select the entire connection string below, right-click on the selection, and click **Copy** in the right-click menu.
+
+39. Switch back to Visual Studio.
+
+40. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
+
+41. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **AdatumAdsDbConnectionString**.
+
+42. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
+
+43. Press Ctrl+V to paste the connection string you copied to the Clipboard.
+
+44. In the connection string you just pasted, locate the text **{your_username}**.
+
+45. Delete the located text, and then replace it with **Student**.
+
+46. In the connection string you just pasted, locate the text **{your_password}**.
+
+47. Delete the located text, and then replace it with **Pa55w.rd**.
+
+48. Click **File**, and then click **Save ServiceConfiguration.Cloud.cscfg**.
+
+
+
+#### Task 4: Deploy an PaaS cloud service
+  
+1. In the Azure portal, click **+ New**. On the **New** blade, click **Compute** and then, on the **Compute** blade, click **Cloud service**.
+
+2. On the **Cloud service (classic)** blade, specify the following settings:
+
+- DNS name: _any valid, unique name_
+
+- Subscription: _the name of the Azure subscription you have been using for this lab_
+
+- Resource group: _ensure that the **Use existing** option is selected and click **20533C0801-LabRG** in the drop-down list_
+
+- Location: _the same location you have been using in this lab_
+
+3. Click **Package (Optional) Select a package**. 
+
+4. On the **Upload a package** blade, ensure that the storage account you created in the second task of this exercise appears in the **Storage account** section.
+
+5. In the **Deployment label** textbox, type **AdatumAdsProd**.
+ 
+6. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
+
+7. In the **Choose File to Upload** dialog box, browse to D:\LabFiles\Lab08\Starter\Production\Package.
+
+8. Click **AdatumAds.cspkg**, and then click **Open**.
+
+9. Wait until the package is fully uploaded, as indicated by the green horizontal line labeled **AdatumAds.cspkg**.
+
+10. Next to the **Configuration (.cscfg)** box, click the folder icon.
+
+11. In the **Choose File to Upload** dialog box, browse to **D:\LabFiles\Lab08\Starter\Production\Package**.
+
+12. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
+
+13. Wait until the configuration file is fully uploaded, as indicated by the green horizontal line labeled **ServiceConfiguration.Cloud.cscfg**.
+
+14. Ensure that **Environment** switch is set to **Production** and that the **Start deployment** checkbox is enabled.
+
+15. Click **OK**.
+
+16. Back on the **Cloud service (classic)** blade, leave the **Certificates** section and the **Pin to dashboard** checkbox with their default values and click **Create**.
+
+> **Note:** Wait for the deployment to complete. This might take a few minutes. 
+
+> **Result**: You created a storage account and a SQL database, edited the service configuration file, and deployed the cloud service to the production slot.
+
 
 
 ## Exercise 2: Configuring deployment slots and RDP
   
 #### Task 1: Perform a staged deployment of a PaaS cloud service
   
-1. In the Azure classic portal in the Internet Explorer window, on the  **cloud services** page, in the list of cloud services, click the name of the PaaS cloud service you created in the first exercise.
+1. In the Azure portal in the Internet Explorer window, in the Hub menu, click **More services** and then click **Cloud services (classic)**.
 
-2. Under  **Deployment settings**, click  **New staging deployment**.
+2. In the **Cloud services (classic)** blade, click the cloud service you created in the prevous task.
 
-3. In the Upload a package window, in the  **DEPLOYMENT LABEL** box, type **AdatumAdsStage**.
+3. On the **Overview** page of the cloud service, click **Production slot** in the toolbar and then click **Staging** in the drop-down list.
 
-4. To the right of the  **PACKAGE** box, click **FROM LOCAL**.
+2. Click **Upload** in the toolbar.
 
-5. Browse to D:\LabFiles\Lab08\Starter\Staging\Package.
+3. On the **Upload a package** blade, click **Storage account**
 
-6. Click  **AdatumAds.cspkg**, and then click  **Open**.
+4. On the **Choose storage account** blade, click the storage account you created in the previous exercise.
 
-7. To the right of the  **CONFIGURATION** box, click **FROM LOCAL**.
+5. In the **Deployment label** text box, type **AdatumAdsStage**.
 
-8. Browse to D:\LabFiles\Lab08\Starter\Production\Package.
+6. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
 
-9. Click  **ServiceConfiguration.Cloud.cscfg**, and then click  **Open**.
+7. In the **Choose File to Upload** dialog box, browse to **D:\LabFiles\Lab08\Starter\Staging\Package**.
 
-10. Click  **OK** (check mark).
+8. Click **AdatumAds.cspkg**, and then click **Open**.
 
-11. Click the large arrow pointing to the left to return to the  **cloud services** page.
+9. Wait until the package is fully uploaded, as indicated by the green horizontal line labeled **AdatumAds.cspkg**.
 
->  **Note:** The deployment process for the PaaS cloud service can take several minutes to complete. Watch the **cloud services** page. Wait for the **Staging** column to display **Running** before you continue to the next task.
+10. Next to the **Configuration (.cscfg)** box, click the folder icon.
+
+11. In the **Choose File to Upload** dialog box, browse to **D:\LabFiles\Lab08\Starter\Production\Package**.
+
+12. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
+
+13. Wait until the configuration file is fully uploaded, as indicated by the green horizontal line labeled **ServiceConfiguration.Cloud.cscfg**.
+
+14. Ensure that the **Start deployment** checkbox is enabled.
+
+15. Click **OK**.
+
+> **Note:** Wait for the deployment to complete. This might take a few minutes. You can monitor the progress in the **Roles and instances** section of the staging blade.
 
 
 #### Task 2: Configure RDP access
+
+
+1. On MIA-CLI, on the Taskbar, right-click the **Windows PowerShell** icon and, in the right-click menu, click **Run as Administrator**. If prompted by the **User Account Control** dialog box, click **Yes**.
+
+2. At the **Administrator: Windows PowerShell**, type `Add-AzureAccount` and press the Enter key. If prompted whether to enable data collection, type **N**.
+
+3. When prompted to authenticate, sign in with an account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
+
+4. Once you authenticate, the output of the cmdlet you executed will list subscriptions that your account is associated with. If there are multiple subscriptions, execute the following cmdlet:
+
+  ```
+  Select-AzureSubscription -SubscriptionId 'Your-subscription-Id'
+  ```
+ where `Your-subscription-Id` designates the subscription ID to which you deployed the cloud service earlier in this lab
+
+5. Next, execute the following script by typing each of the following commands at the Windows PowerShell prompt and pressing Enter:
+  ```
+  $serviceName = 'Your-cloud-service'
+
+  $userName = 'Student'
+
+  $securePassword = 'Pa55w.rd1234' | ConvertTo-SecureString -AsPlainText -Force
+
+  $expirationDate = $(Get-Date).AddDays(31)
+
+  $credential = New-Object System.Management.Automation.PSCredential $userName,$securePassword
+
+  Set-AzureServiceRemoteDesktopExtension -ServiceName $serviceName -Credential $credential -Expiration $expirationDate -Slot Production
+
+  Set-AzureServiceRemoteDesktopExtension -ServiceName $serviceName -Credential $credential -Expiration $expirationDate -Slot Staging
+  ```
+
+ where `Your-cloud-service` designates the name of the cloud service you deployed earlier in this lab
   
-1. In the Azure classic portal in the Internet Explorer window, on the  **cloud services** page, in the list of cloud services, click the name of the PaaS cloud service you created in the first exercise.
-
-2. Click  **CONFIGURE**, and then ensure that the  **PRODUCTION** deployment is displayed. If not, click the **PRODUCTION** tab.
-
-3. On the toolbar at the bottom, click  **REMOTE**.
-
-4. With  **(All)** in the **ROLE** drop-down list, select the **Enable Remote Desktop** check box.
-
-5. In the  **USER NAME** box, type **RDPAdmin**.
-
-6. In the  **NEW PASSWORD** box, type **Pa$$w0rd**.
-
-7. In the  **CONFIRM PASSWORD** box, type **Pa$$w0rd**.
-
-8. In the  **EXPIRES ON** box, select a date one month from today's date.
-
-9. Click  **Complete** (check mark).
-
-10. Wait until the configuration operation is complete.
-
-
 
 #### Task 3: Test connectivity
-  
-1. In the Azure classic portal in the Internet Explorer window, on the  **CONFIGURE** tab of the PaaS cloud service you created in the first exercise, click **DASHBOARD**, and then ensure that the  **PRODUCTION** deployment is displayed. If not, click the **PRODUCTION** tab.
 
-2. Under  **quick glance**, click  **SITE URL**. The cloud service home page opens in a new Internet Explorer tab.
+1. In the Azure portal in the Internet Explorer window, in the cloud service blade, with the **Overview** page open, ensure that **Production slot** appears in the toolbar and click the hyperlink under the **Site URL** label. The cloud service home page opens in a new Internet Explorer tab. You might need to refresh the Internet Explorer page to update the value of **Site URL**.
 
-3. Leave the new Internet Explorer tab open. You will use it in the next exercise.
+2. Leave the new Internet Explorer tab open. You will use it in the next exercise.
 
-4. On the cloud service dashboard, click  **STAGING**.
+3. Switch back to the Azure portal. In the cloud service blade, with the **Overview** page open, click **Production slot** in the toolbar and then click **Staging** in the drop-down menu.
 
-5. Under  **quick glance**, click  **SITE URL**. The cloud service staging home page opens in a new Internet Explorer tab.
+4. Click the hyperlink under the **Site URL** label. The cloud service home page opens in a new Internet Explorer tab. Note that the staging web site is different from the production one.
 
-6. Close the new Internet Explorer tab.
+5. Close the new Internet Explorer tab.
 
-7. At the top of the portal, click  **INSTANCES**, and then click  **PRODUCTION**.
+6. Switch back to the Azure portal. In the cloud service blade, with the **Overview** page open, click **Staging slot** in the toolbar and then click **Production** in the drop-down menu.
 
-8. In the list of instances, click  **AdatumAdsWebRole_IN_0**.
+7. In the cloud service blade, click **Instances**.
 
-9. On the toolbar at the bottom, click  **CONNECT**, and then click  **Open**.
+8. Click **AdatumAdsWebRole_IN_0**.
 
-10. In the  **Remote Desktop Connection** dialog box, click **Connect**.
+9. On the **AdatumAdsWebRole_IN_0** blade, click **Connect**.
 
-11. In the  **Password** box, type **Pa$$w0rd**, and then click  **OK**.
+10. When prompted whether to open or save the **AdatumAdsWebRole_IN_0.rdp**, click **Open**.
 
-12. In the  **Remote Desktop Connection** dialog box, click **Yes**. The Remote Desktop Protocol (RDP) client displays the desktop for the first instance of the web role.
+11. In the **Remote Desktop Connection** dialog box, click **Connect**.
+
+12. When prompted to authenticate, ensure that the user name is set to **Student**, type **Pa55w.rd1234** as the password, and click **OK**.
+
+13. In the **Remote Desktop Connection** dialog box, click **Yes**. The Remote Desktop Protocol (RDP) client displays the desktop for the first instance of the web role.
 
 13. Close the remote desktop connection. 
 
-14. In the Remote Desktop Connection window, click  **OK**.
+14. In the Remote Desktop Connection window, click **OK**.
 
 
->  **Result**: At the end of this exercise, you will be able to:Perform a staging deployment of a PaaS cloud service.Enable RDP access to a PaaS cloud service.Connect to production and staging instances via HTTP and via RDP.
+> **Result**: At the end of this exercise you have performed a staging deployment of a PaaS cloud service, enable RDP access to a PaaS cloud service, and connected to cloud service instances via HTTP and via RDP.
+
 
 
 ## Exercise 3: Monitoring cloud services
   
-#### Task 1: Add metrics to the PaaS cloud service monitoring
+#### Task 1: Add metrics to the cloud service monitoring
   
-1. In the Azure classic portal in the Internet Explorer window, on the  **INSTANCES** tab of the PaaS cloud service you created in the first exercise, click **MONITOR**. and then click  **PRODUCTION**.
+1. In the Internet Explorer window, in the Azure portal, on the **Overview** page of the cloud service you created in the first exercise, ensure that **Production slot** appears in the toolbar and click the **Monitoring** pane.
 
-2. On the toolbar at the bottom, click  **ADD METRICS**.
+2. On the **Metric** blade, click **Edit chart**.
 
-3. Expand the  **NETWORK** **IN** section.
-
-4. Select  Role Name **AdatumAdsWebRole** with Scope **Aggregate**.
-
-5. Click  **Yes**.
-
-6. In the list of metrics, select the  **Network** **In** metric for the **AdatumAdsWebRole** role.
-
-7. To the left of the metric, click the circle to add the metric to the graph.
+3. Ensure that **AdatumAdsWebRole** appears above the list of metrics, clear the **CPU percentage** checkbox, click the **Network In** checkbox, and click **OK**.
 
 
 
-#### Task 2: Create an alert
+#### Task 2: Create an alert for a cloud service
   
-1. In the list of metrics, select the  **Network** **In** metric for the aggregate of the AdatumAdsWebRole role.
+1. Back on the **Metric** blade, click **Add alert**.
 
-2. In the command bar at the bottom, click  **ADD RULE**.
+2. On the **Add an alert** blade, specify the following and click **OK**:
 
-3. In the  **NAME** box, type **Network** **In Alert**, and then click  **Next**.
+- Resource: _leave at its default value_
 
-4. In the  **THRESHOLD VALUE** box, type **1**.
+- Name: **Network In Alert**
 
-5. Under  **ACTIONS**, select  **Specify the email address for another administrator**.
+- Description: **Test network in alert**
 
-6. In the  **ADDRESS** box, type the email address of the service administrator account of your Azure subscription.
+- Metric: **Network In**
 
-7. Click  **Complete**.
+- Condition: **greater than**
+	
+- Threshold: **1**
 
-8. After the rule has been created, click  **DISMISS COMPLETED**.
+- Period: **Over the last 5 minutes**
 
-9. Switch to the Internet Explorer tab showing the  **PRODUCTION** deployment of the PaaS cloud service. Refresh the page several times.
+- Email owners, contributors, and readers: _enable the checkbox_
 
->  **Note:** It might take a few minutes before the alert is triggered.
+- Additional administrator email(s): _type the email address of the Service Administrator account of your Azure subscription_
+
+- Webhook: _leave the textbox clear_
+
+3. Switch to the Internet Explorer tab showing the **Production** deployment of the cloud service. Refresh the page several times.
+
+> **Note:** It will take over 5 minutes before the alert is triggered.
 
 
-#### Task 3: Monitor an active cloud service
+#### Task 3: Monitor a cloud service
   
-1. In the Azure classic portal in the Internet Explorer window, on the  **MONITOR** tab of the PaaS cloud service you created in the first exercise with the **PRODUCTION** deployment selected, in the list of metrics, select the **Network** **In** metric for the AdatumAdsWebRole role.
+1. In the Azure portal, in the hub menu on the left, click **Monitor**.
 
-2. On the right on the metric, click  **1 rules configured**.
+2. On the **Monitor** blade, click **Alerts**
 
-3. In the list of rules, click  **Network** **In Alert**.
+3. In the list of alerts, note the **Network In Alert** entry and identify the value in the **LAST ACTIVE** column.
 
-4. Inspect the data for the alert.
+3. Open a new Internet Explorer tab.
 
-5. Open a new browser tab in Internet Explorer. 
+4. In the address bar, type **www.hotmail.com** and then press Enter.
 
-6. On the address bar, type  **www.outlook.com**, and then press Enter.
+5. If you are prompted to sign in, type the user name and password of the Microsoft Account that is the Service Administrator of your Azure subscription. 
 
-7. If you are prompted to sign in, use the user name and password of the service administrator account of your Azure subscription. 
+6. In the list of emails, click **Microsoft Azure Alerts**.
 
-8. In the list of emails, click  **Microsoft Azure Alerts**.
+7. Inspect the details of the alert.
 
-9. Inspect the details of the alert.
-
-10. Close Internet Explorer.
-
+8. Close Internet Explorer.
 
 
 #### Task 4: Reset the environment
   
 1. Close all open applications without saving any files.
 
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run as administrator**. In the  **User Account Control** dialog box, click **Yes**.
+2. On the taskbar, right-click **Windows PowerShell**, and then click **Run as Administrator**. If prompted by the **User Account Control** dialog box, click **Yes**.
 
 3. Type the following command, and then press Enter.
 
@@ -397,17 +410,17 @@ AccountName=cloudappprodXXX;AccountKey=
   Reset-Azure
   ```
 
-4. When prompted, sign in by using the Microsoft account associated with your Azure subscription.
+4. When prompted (twice), sign in by using the Microsoft account associated with your Azure subscription (twice).
 
 5. If you have multiple Azure subscriptions, select the one you want the script to target.
 
-6. When prompted for confirmation, type  **y**.
+6. When prompted for confirmation, type **y**.
 
->  **Note:** This script removes Azure services from your subscription. It is therefore recommended that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
-> The script takes 5-10 minutes to reset your Microsoft Azure environment so that it is ready for the next lab. The script removes all storage, virtual machines, virtual networks (VNETs), cloud services, and resource groups.
->  **Important**: The script might not be able to get exclusive access to a storage account to delete it. (If this occurs, you will see an error.) If you find objects remaining after the reset script is complete, you can rerun the  **Reset-Azure** script or use the Azure portal and the Azure classic portal to manually delete all the objects in your Azure subscriptionâ€”with the exception of the default directory.
+> **Note:** This script removes Azure services from your subscription. It is therefore recommended that you use an Azure trial pass that was provisioned specifically for this course and not your own Azure account.
+>  The script takes 5-10 minutes to reset your Microsoft Azure environment so that it is ready for the next lab. The script removes all storage, virtual machines, virtual networks (VNETs), cloud services, and resource groups.
+> **Important**: The script might not be able to get exclusive access to a storage account to delete it. (If this occurs, you will see an error.) If you find objects remaining after the reset script is complete, you can rerun `Reset-Azure` or use the Azure portal and the Azure portal to manually delete all the objects in your Azure subscription with the exception of the default directory.
 
->  **Result**: At the end of this exercise, you will have configured monitoring for a PaaS cloud service with new metrics and an alert.
+> **Result**: At the end of this exercise, you will have configured monitoring for a PaaS cloud service with a new metric and an alert.
 
 
 
@@ -416,5 +429,3 @@ AccountName=cloudappprodXXX;AccountKey=
 The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
-
-  
