--- a/Instructions/20533C_LAB_AK_10.md
+++ b/Instructions/20533C_LAB_AK_10.md
@@ -3,211 +3,215 @@
   
 ## Exercise 1: Configuring directory synchronization
   
-#### Task 1: Sign in to the Azure VM hosting an Active Directory domain controller.
+#### Task 1: Sign in to the Azure VM hosting an Active Directory domain controller and create test Active Directory objects.
   
-1. Sign in to MIA-CL1 as  **Student** with the password **Pa$$w0rd**.
+1. Sign in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Open Internet Explorer and browse to the Azure portal at https://portal.azure.com.
+2. Click **Start** and click **Run**. In the **Run** text box, type the following and press **Enter**:
+  ```
+  Notepad D:\Labfiles\Lab10\Starter\Set-ADUsers20533C10Lab.ps1
+  ```
 
-3. When prompted, sign in by using the Microsoft account that is the Service Administrator or a co-admin of your Azure subscription.
+3. In Notepad, select the first 8 lines in the file, down to, but without the the line starting with **#SIG # Begin signature block**
 
-4. In the hub menu of the Azure portal, click  **Virtual machines (classic)**.
+4. In Notepad, click **Edit** and, in the drop-down menu, click **Copy**.
 
-5. In the Virtual machines (classic) blade, click  **AdatumDC1**.
+5. Open Internet Explorer and browse to the Azure portal at **https://portal.azure.com**.
 
-6. In the AdatumDC1 blade, click  **Connect**.
+6. When prompted, sign in by using the Microsoft account that is the Service Administrator or a Co-Admininstrator of your Azure subscription.
 
-7. When prompted whether to open or save the .rdp flie, click  **Open**.
+7. Click the user name in the upper right corner of the Azure portal and, in the DIRECTORY section of the drop down menu, select the entry containing your Microsoft Account user name followed by (Default Directory).
 
-8. In the  **Remote Desktop Connection** dialog box, click **Connect**.
+8. In the hub menu of the Azure portal, click **More services** and then, in the list of services, click **Virtual machines**.
 
-9. If a Remote Desktop Connection warning message displays, select  **Don't ask me again for connections to this computer**, and then click  **Connect**.
+9. In the Virtual machines blade, right-click the ellipsis **(...)** to the right of the **adVM** entry and, in the right-click menu, click **Connect**.
 
-10. In the  **Windows Security** dialog box, enter a user name of **ADATUM\Student** with the password **Pa$$w0rd123**.
+10. If prompted by popup blocker, click **Options for this site** and, in the drop-down menu, click **Always allow**.
 
-11. If another Remote Desktop Message displays, select  **Don't ask me again for connections to this computer**, and then click  **Yes**.
+11. When prompted whether to open or save the .rdp flie, click **Open**.
 
+12. In the **Windows Security** dialog box, enter a user name of **ADATUM\Student** with the password **Pa55w.rd1234** and click **OK**.
+
+13. In the **Remote Desktop Connection** dialog box, click **Yes**.
+
+14. In the Remote Desktop Session to adVM, click **Start**, right-click **Windows PowerShell ISE**, click **More**, and click **Run as administrator**.
+
+15. In the **Administrator: Windows PowerShell ISE** window, click **View** and, in the drop-down menu, click **Show Script Pane**.
+
+16. Click **Edit** and, in the drop-down menu, click **Paste** to paste the content of **Set-ADUsers20533C10Lab.ps1** you copied to Clipboard.
+
+17. Click **Debug** and, in the drop-down menu, click **Run/Continue**.
+
+18. In the PowerShell ISE console, type the following and press Enter:
+  ```
+  Get-ADUser -Filter * | Select-Object DistinguishedName
+  ```
+19. Verify that the list of accounts includes **Beverly Beach** in the **AccountsToSync** organizational unit and **Darwin Shivers** in the **AccountsNotToSync** organizational unit.
+
+20. Close the **Administrator: Windows PowerShell ISE** window.
 
 
 #### Task 2: Create a new Azure AD tenant and a Global Admin account
   
-1. After the sign-in is complete, click the Windows logo in the lower left corner, and then on the  **Start** screen, click **Internet Explorer**.
+1. In the Remote Desktop Session to adVM, in **Server Manager**, click **Local Server**.
 
-2. If a  **Set up Internet Explorer 11** dialog box opens, click **Use recommended security, privacy, and compatibility settings**, and then click  **OK**.
+2. Click the **On** link next to the **IE Enhanced Security Configuration** label.
 
-3. In Internet Explorer, navigate to the Azure classic portal at  **https://manage.windowsazure.com**.
+3. In the Internet Explorer Enhanced Security Configuration dialog box, in the **Administrators** and the **Users** section, click **Off** and click **OK**.
 
-4. When prompted, sign in to the Azure classic portal by using an account that is the Service Administrator or a co-admin of your Azure subscription.
+4. Click the **Internet Explorer** shortcut on the taskbar.
 
-5. In the Azure classic portal, click  **ACTIVE DIRECTORY** in the navigation bar.
+5. If prompted, ensure that **Use recommended security, privacy, and compatibility settings** is selected and then click **OK**.
 
-6. Click  **New**, click **DIRECTORY**, and then click **CUSTOM CREATE**.
+6. In Internet Explorer, navigate to the Azure portal at **https://portal.azure.com**.
 
-7. In the  **Add directory** dialog box, provide the following settings, and then click **Complete** (check mark):
+7. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
+8. Click **+ New** in the upper left corner of the portal, click **Security + Identity**, and then, click **Azure Active Directory**.
 
-  - DIRECTORY:  _Create new directory_
+9. On the **Active Directory Enterprise** blade, specify the following settings and click **Create**:
 
-  - NAME:  **AdatumSync**
+  - Organization name: **AdatumSync**
 
-  - DOMAIN NAME:  _Use your initials_ + _the_ _directory name_ + _random numbers_ (for example, abcadatum123456). If you get the message **The domain is not unique**, change the numbers until you get a green check mark.
+  - Initial domain name: _a unique, valid name_
 
-  - COUNTRY OR REGION:  **United States**
+  - Country or region: **United States**
 
+10. Wait until the new directory is provisioned.
 
-8. On the  **adatumsync** page, click the **USERS** tab.
+11. Click the user name in the upper right corner of the Azure portal and, in the DIRECTORY section of the drop down menu, select the entry labeled AdatumSync.
 
-9. Click  **ADD USER** on the command bar.
+12. Ensure that **ADATUMSYNC** appears in the upper right corner of the portal underneath your Microsoft account name and, in the hub menu, click **More services**
 
-10. In the  **Tell us about this user** dialog box, enter the following settings, and then click **Next**:
+13. In the list of services, click **Azure Active Directory**
 
+14. On the AdatumSync blade, click the **Add a user** link on the **Quick tasks** tile.
 
-  - TYPE OF USER:  _New user in your organization_
+15. On the **User** blade, specify the following settings and click **Create**:
 
-  - USER NAME:  **SyncAdmin**
+  - Name: **SyncAdmin**
 
+  - User name: **syncadmin@_domain name_.onmicrosoft.com** _where **domain name** is the unique name you assigned to the AdatumSync Azure AD tenant earlier in this task_
 
-11. In the  **USER** **PROFILE** dialog box, provide the following settings, and then click **Next**:
+16. Click **Profile**. On the **Profile** blade, in the **First name** textbox, type **Sync**, in the **Last name** textbox type **Admin** and click **OK**.
 
+17. Click **Directory role**. 
 
-  - FIRST NAME:  **Sync**
+18. On the **Directory role** blade, click **Global administrator** and click **OK**.
 
-  - LAST NAME:  **Admin**
+19. Enable **Show Password** checkbox and note the password.
 
-  - DISPLAY NAME:  **Sync Admin**
+20. Click **Create**
 
-  - ROLE: Global  **Admin**
+21. Start another in-private Internet Explorer session and browse to the Azure portal at **https://portal.azure.com**.
 
-  - ALTERNATE EMAIL ADDRESS:  _Type the email address of your Microsoft account_
+22. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the SyncAdmin account and the corresponding temporary password. 
 
-  - Enable Multi-Factor Authentication:  _Do not select_
+23. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type **Pa55w.rd**, and click **Update password and sign in**.
 
+24. In the Internet Explorer window, click the user name in the upper-right corner of the page and, in the drop-down menu, click **Sign out**
 
-12. Click  **Create**.
-
-13. On the  **Get temporary password** page, note the full user name and the temporary password, and then copy them to Notepad.
-
-14. Click  **Complete** (check mark).
-
-15. Click the cogwheel icon in the upper right corner of the Internet Explorer window, click  **Safety** in the drop-down menu, and then click **inPrivate Browsing.**
-
-16. In the InPrivate Browsing session, navigate to the Azure classic portal at  **https://manage.windowsazure.com**.
-
-17. When prompted, type the full name of the newly created SyncAdmin account, and then click  **Continue**.
-
-18. When prompted for the password, type the temporary password which you copied to Notepad, and then click  **Sign in**.
-
-19. On the  **Update your password** page, in the **Current password** text box, type the temporary password, in the **New password** and **Confirm password** text boxes, type **Pa$$w0rd**, and then click  **Update password and sign in**.
-
-20. On the  **No subscriptions found** page, click **SIGN OUT**.
-
-21. Close the InPrivate Internet Explorer session.
+25. Close the InPrivate Internet Explorer session.
 
 
 
 #### Task 3: Install Azure AD Connect with custom settings
   
-1.  Open an Internet Explorer session and browse to https://www.microsoft.com/en-us/download/details.aspx?id=47594
+1. Start another Internet Explorer window and browse to https://www.microsoft.com/en-us/download/details.aspx?id=47594
 
-2. On the  **Microsoft Azure Active Directory Connect** page, click the cogwheel in the upper right corner of the Internet Explorer window and select **Internet options** from the drop down menu.
+2. On the **Microsoft Azure Active Directory Connect** page, click **Download**.
 
-3. In the  **Internet Options** dialog box, click the **Security** tab.
+3. In the pop-up window, click **Save**.
 
-4. Click  **Trusted sites**, and then click  **Sites**.
+4. After the download is complete, click **Open Folder**.
 
-5. In the  **Add this website to the zone** text box, replace the current entry with **https://*.microsoft.com**, and then click  **Add**.
+5. In the File Explorer window, double-click **AzureADConnect.msi** to start the installation. When prompted, click **Run**.
 
-6. Click  **Close**, and then click  **OK**.
+6. On the **Welcome** page, select **I agree to the license terms and privacy notice**, and then click **Continue**.
 
-7. Back on the  **Microsoft Azure Active Directory Connect** page, click **Download**.  Note - if this fails, close your IE browser, reopen, and browse again to https://www.microsoft.com/en-us/download/details.aspx?id=47594.
+7. On the **Express Settings** page, click **Customize**.
 
-8. In the pop-up window, click  **Save**.
+8. On the **Required Component** page, review the options, and then click **Install**.
 
-9. After the download is complete, click  **Open Folder**.
+9. On the **User sign-in** page, verify that **Password Synchronization** is selected, and then click **Next**.
 
-10. In the File Explorer window, double-click  **AzureADConnect.msi** to start the installation.
-
-11. On the  **Welcome** page, select **I agree to the license terms and privacy notice**, and then click  **Continue**.
-
-12. On the  **Express Settings** page, click **Customize**.
-
-13. On the  **Required Component** page, review the options, and then click **Install**.
-
-14. On the  **User sign-in** page, verify that **Password Synchronization** is selected, and then click **Next**.
-
-15. On the  **Connect to Azure AD** page, provide the credentials of the newly created SyncAdmin Azure AD Global Admin, and then click **Next**:
+10. On the **Connect to Azure AD** page, provide the credentials of the newly created SyncAdmin Azure AD Global Admin, and then click **Next**:
 
 
-  - User name:  **SyncAdmin@ _yourdomainname_.onmicrosoft.com**
+  - USERNAME: **syncadmin@_domain name_.onmicrosoft.com** where _domain name_ is the unique name you assigned to the new Azure Active Directory tenant in task 2
 
-  - Password:  **Pa$$w0rd**
-
-
-16. On the  **Connect your directories** page, verify that the **adatum.com** forest is selected, under user name, type **ADATUM\Student** with the password **Pa$$w0rd123**, and then click  **Add Directory**.
-
-17. Verify that under Configured Directories, adatum.com is listed, and then click  **Next**.
-
-18. On the **Azure AD sign-in configuration** page,  note the message  **Users will not be able to sign-in Azure AD using their on-premises credentials**, select **Continue without any verified domains**, and then click  **Next**.
-
-19. On the  **Domain and OUfiltering** page, select the **Sync selected domains and OUs** check box, expand the **adatum.com** entry, clear all checkboxes with exception of the one next to the **Accounts** organization unit, and then click **Next**.
-
-20. On the  **Uniquely identifying your users** page, verify that **Users are represented only once across all directories** is selected, and then click **Next**.
-
-21. On the  **Filtering** page, verify that **Synchronize all users and devices** is selected, and then click **Next**.
-
-22. On the  **Optional feature** page, verify that **Password synchronization** is selected, and then click **Next**.
-
-23. On the  **Ready to configure** page, verify that **Start the synchronization process when configuration completes** is selected, and then click **Install**. 
->  **Note:** Installation might take 5-10 minutes.
-24. On the  **Configuration complete** page, click **Exit** to close Azure AD Connect.
->  **Note:** You might need to wait a few minutes for the initial synchronization to complete.
-25. Switch back to the Azure classic portal in the Internet Explorer window.
-
-26. In the Azure classic portal, navigate to the  **adatumsync** Active Directory page, click **USERS**, and then confirm that the list of users includes all the names from the Accounts organizational unit (OU).
+  - PASSWORD: **Pa55w.rd**
 
 
->  **Result**: After completing this exercise, you should have installed and configured Azure AD Connect, and you should have it ready for test synchronization.
+1. On the **Connect your directories** page, verify that the **adatum.com** forest is selected, under user name, type **ADATUM\Student** with the password **Pa55w.rd1234**, click **Add Directory**, and click **Next**.
+
+2. On the **Azure AD sign-in configuration**, note the message **Users will not be able to sign-in Azure AD using their on-premises credentials**. This is expected since you do not have a verified domain name. Enable the **Continue without any verified domains** checkbox and click **Next**.
+
+3. On the **Domain and OU filtering** page, select the **Sync selected domains and OUs** check box, expand the **adatum.com** entry, clear all checkboxes with exception of the one next to the **AccountsToSync** entry, and then click **Next**.
+
+4. On the **Uniquely identifying your users** page, verify that **Users are represented only once across all directories** is selected, and then click **Next**.
+
+5. On the **Filtering** page, verify that **Synchronize all users and devices** is selected, and then click **Next**.
+
+6. On the **Optional feature** page, verify that **Password synchronization** is selected, and then click **Next**.
+
+7. On the **Ready to configure** page, verify that **Start synchronization process as soon as the configuration completes** is selected, and then click **Install**. 
+> **Note:** Installation might take 5-10 minutes.
+
+8. On the **Configuration complete** page, click **Exit** to close Azure AD Connect.
+> **Note:** You might need to wait a few minutes for the initial synchronization to complete.
+
+9. Switch back to the Azure portal in the Internet Explorer window.
+
+10. In the Azure portal, on the **AdatumSync** blade, click the **Users and groups**, click **All Users** and confirm that the list of users includes **Beverly Beach** from the **AccountsToSync** OU but does not include **Darwin Shivers** from the **AccountsNotToSync** OU.
 
 
-## Exercise 2: Synchronizing directories
+> **Result**: After completing this exercise, you should have installed and configured Azure AD Connect, and have performed initial synchronization.
+
+
+## Exercise 2: Managing synchonization
   
 #### Task 1: Modify attributes of an Active Directory user and Initiate manual synchronization
   
-1. On AdatumDC1, switch to the Server Manager window, and from the  **Tools** menu, open the **Active Directory** **Administrative** **Center**.
+1. In the Remote Desktop Session to adVM, click **Start**, right-click **Windows PowerShell ISE**, click **More**, and click **Run as administrator**.
 
-2. Click  **adatum (local)**, and then double-click  **Accounts**.
+2. In the **Administrator: Windows PowerShell ISE** window, in the console pane, type the following and press **Enter**:
 
-3. After the Accounts OU content is displays, double-click the  **Beverly Beach (bbeach)** account.
+  ```
+  $user = Get-ADUser -Filter "SamAccountName -eq 'bbeach'" -Properties Department,Title -SearchBase 'OU=AccountsToSync,DC=adatum,DC=com'
+  $user | Get-ADUser -Properties Department,Title
+  ```
 
-4. In the  **Beverly Beach (bbeach)** window, make changes to the following fields, and then click **OK**:
+3. Note the current values of the **Title** and **Department** properties.
 
+4. In the console of the Windows PowerShell ISE window, type the following commands and, after each one, press **Enter**:
+  ```
+  $user | Set-ADUser -Title 'VP' -Department 'Marketing'
+  $user | Get-ADUser -Properties Department,Title
+  ```
 
-  -  **Job Title**:  **VP**
+5. Verify that the values of the **Title** and **Department** properties have changed.
 
-  -  **Department**:  **Marketing**
+6. In the console pane of the Windows PowerShell ISE, type the following command, and then press **Enter**:
+  ```
+  Get-ADSyncScheduler
+  ```
+> **Note:** **Get-ADSyncScheduler** displays the current configuration settings for synchronization with Azure AD.
 
+7. At the Windows PowerShell command prompt, type the following command, and then press Enter:
+  ```
+  Start-ADSyncSyncCycle -PolicyType Delta
+  ```
 
-1. On AdatumDC1, on the taskbar, right-click the  **Windows PowerShell** shortcut, right-click **Windows PowerShell** on the menu and then click **Run as administrator**. 
+8. Wait until synchronization completes before proceeding to the next step.
 
-2. At the command prompt in the Windows PowerShell command-line interface, type the following command, and then press Enter:
-Get-ADSyncScheduler
->  **Note:** **Get-ADSyncScheduler** displays the current configuration settings for synchronization with Azure AD.
-3. At the Windows PowerShell command prompt, type the following command, and then press Enter:
-Start-ADSyncSyncCycle -PolicyType Delta
+9. Switch back to the Azure portal in the Internet Explorer window.
 
-4. Wait until synchronization completes before proceeding to the next step.
+10. In the Azure portal, on the **AdatumSync** blade, on the **Users and groups - All Users** blade, click **Beverly Beach**
 
-5. Switch back to the Azure classic portal in the Internet Explorer window.
+11. In the **Overview** section of the **Beverly beach** blade, verify that the values of the **Department** and **Job title** entries match the ones you configured for the Active Directory account. If you do not see any changes, wait for a few minutes, and then refresh the page.
 
-6. Click the USERS tab on the  **adatumsync** page.
-
-7. Click the  **Beverly Beach** entry.
-
-8. On the  **Beverly beach** page, click **WORK INFO**.
-
-9. Verify that the  **JOB TITLE** and the **DEPARTMENT** entries match the ones you configured for the Active Directory account. If you do not see any changes, wait for a few minutes, and then refresh the page.
-
-10. Close the AdatumDC1 remote desktop session, and then click  **OK** when prompted.
+12. Close the adVM remote desktop session, and click **OK** when prompted.
 
 
 
@@ -215,9 +219,9 @@ Start-ADSyncSyncCycle -PolicyType Delta
   
 1. On MIA-CL1, close all open applications without saving any files.
 
-2. On the taskbar, right-click  **Windows PowerShell**, and then click  **Run as administrator**. 
+2. On the taskbar, right-click **Windows PowerShell**, and then click **Run as administrator**. 
 
-3. In the  **User Account Control** dialog box, click **Yes**.
+3. In the **User Account Control** dialog box, click **Yes**.
 
 4. Type the following command, and then press Enter:
 
@@ -229,14 +233,14 @@ Start-ADSyncSyncCycle -PolicyType Delta
 
 6. If you have multiple Azure subscriptions, select the one you want the script to target.
 
-7. When prompted for confirmation, type  **y**.
+7. When prompted for confirmation, type **y**.
 
->  **Note:** This script might remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
+> **Note:** This script might remove Azure services in your subscription. We therefore recommend that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
 > The script will take 5-10 minutes to reset your Azure environment and make it ready for the next module. 
 > The script removes all storage, virtual machines, virtual networks, cloud services, and resource groups.
->  **Important:** The script might not be able to get exclusive access to a storage account to delete it; if this occurs, you will see an error. If you find objects remaining after the reset script is complete, you can rerun the **Reset-Azure** script, or you can use the Azure classic portal to delete all the objects in your Azure subscription manually, with the exception of the default directory.
+> **Important:** The script might not be able to get exclusive access to a storage account to delete it; if this occurs, you will see an error. If you find objects remaining after the reset script is complete, you can rerun the **Reset-Azure** script, or you can use the Azure classic portal to delete all the objects in your Azure subscription manually, with the exception of the default directory.
 
->  **Result**: After completing this exercise, you should have changed attributes on a user account, and then forced synchronization. 
+> **Result**: After completing this exercise, you should have changed attributes on a user account, and then forced synchronization. 
 
 
 
@@ -245,5 +249,3 @@ Start-ADSyncSyncCycle -PolicyType Delta
 The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
-
-  
